缺失部分添加;译名统一

--- a/OEBPS/Text/c002.xhtml
+++ b/OEBPS/Text/c002.xhtml
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <h1>2. </h1>
-    <p>梅赛德斯不是战士。</p>
+    <h1>2. 底层</h1>
+    <p>梅赛德斯没有战斗方面的老师。</p>
     <p>母亲和婆婆虽然身为吸血鬼，但却不是从事战斗的人。不可能向她们请教战斗方法什么的。</p>
     <p>就算是前世，也没有什么可以称得上是真正的战斗的经验，也没有什么战斗经验。</p>
     <p>对于发誓要在这个世界变强的梅赛德斯来说，这绝对不是小问题。</p>
