--- a/OEBPS/Text/c004.xhtml
+++ b/OEBPS/Text/c004.xhtml
@@ -49,7 +49,6 @@
     <p>所以梅赛德斯决定在这里写下母亲的旧姓。</p>
     <p><span class="character">“写出来了”</span></p>
     <p><span class="character">“好的，谢谢。……嗯，梅赛德斯·卡尔瓦特。无地址，年龄20。虽然觉得不是外表那样的年龄，但是成长很慢啊。好羡慕啊”</span></p>
-    </span>
     <p>吸血鬼的成长速度当然与人类完全不同。</p>
     <p>到一定的年龄前像人一样正常地增长,不过，在某种程度的地方增长停止，外表的变化变得非常缓慢。</p>
     <p>并且这个成长停止的年龄有个人差异，到二十岁普通增长的人也在十代中期外表不变化的人也在。</p>
@@ -79,8 +78,8 @@
     <div class="charactercard">
         <p class="card name">【梅赛德斯·卡尔瓦特】</p>
         <p class="card">saker级别：F</p>
-        <p class="card">第一属性：土</p>
-        <p class="card">第二属性：风</p>
+        <p class="card attributes">第一属性：土</p>
+        <p class="card attributes">第二属性：风</p>
         <p class="card">腕力：level 5</p>
         <p class="card">脚力：level 5</p>
         <p class="card">耐久：level 5</p>
@@ -125,7 +124,7 @@
     <p>委托人：盾牌行会</p>
     <p>报酬额：8000蛙</p>
     <p>期限：两周</p>
-    <p>详细：施塔克迷宫2F的泉水有恢复的效果，为了研究请取水。</p>
+    <p>详细：斯塔克迷宫2F的泉水有恢复的效果，为了研究请取水。</p>
     <p>【鞋底迷宫、映射】</p>
     <p>委托人：盾牌行会</p>
     <p>报酬额：5000蛙～</p>
