--- a/OEBPS/Text/c006.xhtml
+++ b/OEBPS/Text/c006.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>6. 下装2</h1>
+    <h1>6. 底层2</h1>
     <p>梅赛德斯一边在迷宫内映射一边徘徊，从后方数人的吸血鬼走了过来。</p>
     <p>人数是……十三人。是个相当大的家庭。</p>
     <p>迷宫很小，基本上不适合多人进去。</p>
@@ -77,7 +77,7 @@
     <p>梅赛德斯把这个也包含预备投入到二个购物篮，面向了下面的地方。</p>
     <p>其次需要的就是衣服。我想要又结实，又脏的衣服。</p>
     <p>现在的Melsedes的服装是闪闪发光的，很难说是适合探索的。</p>
-    <p>暂且物色衣服，不久Mersedes选择了白的衬衫和，那个上面穿的龙皮的Mantaraybest。</p>
+    <p>暂且物色衣服，不久梅赛德斯选择了白的衬衫和，那个上面穿的龙皮的Mantaraybest。</p>
     <p>下面是注重方便活动的短裤和保护膝盖的紧身裤。</p>
     <p>最后当场买了一件黑色的外套作为防寒用具。</p>
     <p>最后去食品角。目的当然是购买保鲜食品。</p>
