--- a/OEBPS/Text/c007.xhtml
+++ b/OEBPS/Text/c007.xhtml
@@ -11,6 +11,14 @@
 
 <body>
     <h1>7. 迷途</h1>
+    <p class="divline"></p>
+    <p>看了后宫之类的东西，我也有种想试着写一次的感觉。</p>
+    <p>但是一旦制定了情节，在开始受女孩子欢迎的时候就会把主人公炸死。</p>
+    <p>是怎么了呢。</p>
+    <p>另外谢谢您的建议。</p>
+    <p>根据收到的评论，上半年梅赛德斯为了制作能保存的巧克力而东奔西走。</p>
+    <p>即使外行人只想用网络知识来做，也做不出真正的东西啊……。</p>
+    <p class="divline"></p>
     <p>多买可可豆的梅赛德斯很快开始着手制作巧克力。</p>
     <p>虽然味道很强烈，但这只能习惯了。</p>
     <p>虽然妈妈说“买那么多可可豆怎么办”，但看到做好的巧克力，评价也会改变吧。</p>
@@ -59,9 +67,77 @@
     <p>之后试着做了几个，因为不加牛奶的人耐用，结果牛奶变成了无用的长物。太可惜了。</p>
     <p>但是这样下去还是很容易溶化，所以在打成粉末的面包中搅拌后再烤，再放回巧克力夹子。</p>
     <p>虽然不觉得它越来越远离当初的目标，但重要的是可以保存并携带的话，什么都可以。</p>
-    <p>“……失败是成功之母，郁闷”</p>
+    <p>“……失败是成功之母，唔呣”</p>
     <p>不服输。</p>
     <p>绝对不会输。</p>
+    <p class="divline"></p>
+    <p>梅赛德斯来到saker行会，决定再次接受斯塔克地牢的映射委托。</p>
+    <p>这次比起靠委托赚钱，目的是进入地下城。</p>
+    <p>目的主要有两个。首先一个是获得潜入地下城的伙伴。</p>
+    <p>梅赛德斯现在是个独狼，如果不想再聚集同伴的话，也不想让参加某个派对。</p>
+    <p>如果是知心朋友的话那就另当别论了，对昨天今天刚见面的人来说，背后什么的根本不想寄存，更何况是那些以生命为代价赚钱的粗暴的家伙们。不知道什么时候被财欲迷住了眼睛的人从后面刺伤。</p>
+    <p>实际上，这种情况并不少见。</p>
+    <p>不能相信别人。但是实际问题，独狼也是有界限的吧。</p>
+    <p>即使这样，数量还是在增加。</p>
+    <p>梅赛德斯的手怎么抓也只有两只。如果是这样的话，首先想要能随心所欲使用的劳动力。</p>
+    <p>所以这次梅赛德斯的目的是捕获看起来不错的魔物。</p>
+    <p>最好能在某种程度上聪明，灵巧地使用手。</p>
+    <p>像前几天捕获并交给宠物店的狼人一样的魔物也不错。不管怎么说，狗的外表是很有教养的。</p>
+    <p>如果好好地告诉他们上下关系的话，就遵循顺从的顺序，尽管如此，因为是两足行走，所以比狗还要聪明。</p>
+    <p>鞋子和服装也有好好整理过，这次要比以前更深地潜入进行映射。灯笼的状态也很好。</p>
+    <p>在一楼没有出现魔物，在下到二楼的地方受到了蛇的魔物的迎接。</p>
+    <p>全长超过10米吗。说前世的话，可能和在网上看到的一条叫做网蟒的蛇一样大。</p>
+    <p>抓住朝着梅赛德斯飞来的蛇的脖子，把尾巴也抓起来系上。</p>
+    <p>虽然系得很结实，但不久就会自己解开吧。</p>
+    <p>再稍微映射一下，这次出现了一只足步行的老鼠，大小大概有180cm左右。</p>
+    <p>梅赛德斯在看到敌人的同时踢地，将肘击进胸部。</p>
+    <p>就这样，巨大的老鼠趴在地上动弹不得。</p>
+    <p>（老鼠啊……虽然是两足步行，但是头好像不太好。而且手也不那么灵巧吧）</p>
+    <p>这也不属于捕获对象。</p>
+    <p>梅赛德斯无视倒在地上的老鼠，向更深处走去。</p>
+    <p>走了一会，又出现了堵住道路的魔物。</p>
+    <p>这次是装备了剑和盾的骷髅。因为牙尖，恐怕生前是吸血鬼吧。</p>
+    <p>虽说现在没有吸血鬼的力量。</p>
+    <p>看到他一边发出咔嗒咔嗒的声音，一边向我武者罗挥舞剑，似乎连智商都没有。</p>
+    <p>嘛，说智能的话，明明没有大脑却在动的时候大概是有的，但这是幻想，只能理解了吧。</p>
+    <p>梅赛德斯毫不犹豫地将骨头踢碎，抢夺了手中的剑和盾。</p>
+    <p>真是令人高兴的失算。本来想用牙和骨头来制造看起来不错的魔物，没想到居然有人会拿来武器。</p>
+    <p>轻轻挥剑，首先确认自己能承受住自己的力量。</p>
+    <p>盾对梅赛德斯来说太大了，最重要的是一只手被灯笼挡住了，所以决定扔掉。</p>
+    <p>从梅赛德斯的身高来看，剑也可以形容为大剑，但因为可以单手使用，所以没有问题。</p>
+    <p>但是这样一来地图就越来越难画了。还是早点确保拿行李的跟班吧。</p>
+    <p>一到三楼，远处就传来了什么悲鸣。</p>
+    <p>魔物……不是。是人的声音。</p>
+    <p>梅赛德斯朝着声音的方向奔跑，幸而路线没有错综复杂，所以很快就到达了那里</p>
+    <p>在那里看到了几位吸血鬼倒下的凄惨的血海。</p>
+    <p>剑和防具都碎了，其中也有一眼就知道是绝命的人。</p>
+    <p>还记得他们。这是前几天在地牢里遇到的，被认为是老手的黑客们。</p>
+    <p>而且，被认为是悲鸣之主的是瘦弱的男子。估计是他们的护具倒在了周围吧。从衣着来看，是商人吗。</p>
+    <p>在那样的男人面前的是身高超过2米半的人形怪物。头部长着一个角，值得一提的是长着六只手臂。</p>
+    <p>各自的手臂都有武器，与漂亮的身体相结合，给人一种非常强的印象。</p>
+    <p>（那是奥加吗！）</p>
+    <p>梅赛德斯将他的身影与记忆对照、书中读到的魔物的记述和特征一致，名字也明确了。</p>
+    <p>奥加。是在地牢的最里面等地，阻挡在saker前的危险的家伙。</p>
+    <p>拥有能胜过吸血鬼的豪腕和不透出半生不熟刀刃的钢之皮肤，在智力高的人型魔物中被认为是极其危险的。</p>
+    <p>而且长了多只手臂的是阿修拉种，在奥加中也被认为是危险的。</p>
+    <p>……不过，书上没有插画和照片，所以还没有确切的证据。</p>
+    <p>真是的，为什么一幅画都没画呢，真想抱怨。难道就没有绘画这种文化吗。算了也不是什么事。</p>
+    <p>问题是那个奥加（暂定）现在正在朝着男人挥舞剑。</p>
+    <p>当然不会有见死不救的兴趣。梅赛德斯瞬间跳入剑腹，踢出剑腹偏离轨道，拯救了男人。</p>
+    <p>就这样剑是奥加（暂定）——很麻烦。奥加已经可以了——从手上掉下来，突然闯入者停止了行动。</p>
+    <p>「什么人……」</p>
+    <p>看来这家伙能普通地说话。</p>
+    <p>和外表一样粗犷的声音渗透着警戒的色彩，毫不疏忽地看着小小的闯入者。</p>
+    <p>「saker。我接受了地图的委托来到了这个地牢。实在是放不下的事态啊，让我随便插进去吧」</p>
+    <p>适当地摆好刚才得到的剑，看着奥加</p>
+    <p>对方的手臂有六只，武器有一只因奇袭而落下，所以有五只。</p>
+    <p>光看数量的话是己方压倒性的不利。</p>
+    <p>如何处理这个，在这场战斗中会变得重要吧。</p>
+    <p>「蠢货呐」</p>
+    <p>奥加说要吐下去，然后挥下了剑。</p>
+    <p>梅赛德斯在面向自己的刃前上吊嘴角，用剑轻挥击落。</p>
+    <p>传来了惊愕屏住呼吸的样子，但是第二次打击很快就到来了。</p>
+    <p>オーガは吐き捨てるように言い、剣を振り下ろした。</p>
     <p>这次是双臂同时攻击……但并不是越多越好。</p>
     <p>戴着心脏放出的刺要避免身体稍微动一下，用腋下夹住对方的胳膊。</p>
     <p>接着被挥下的刀刃由于抓住拳头而停止，更加强行使之打开手指使之掉下了剑。</p>
@@ -94,6 +170,8 @@
     <p>这样的话还不能说没有输。</p>
     <p>OGA象放弃了一样地承认败北，在那个场合刺了膝。</p>
 
-    <p>[[丢失]]？</p>
-
+    <p class="divline"></p>
+    <p>其实我最喜欢的是TOBAL2。</p>
+    <p>在敌人面前放着腐烂的肉让他们吃，吃了炸药自取灭亡，在连接下层的洞前睡着的话突然敌人出现，就那样啪嗒投篮……那个很开心。</p>
+    <p>不出TOBAL3吗（´・ω・）</p>
 </body>
