--- a/OEBPS/Text/c011.xhtml
+++ b/OEBPS/Text/c011.xhtml
@@ -48,7 +48,7 @@
     <p>其中，打扮得稍微好一点的少女，金发的纵卷非常适合。</p>
     <p>从服装来看，她的母亲在侧室里地位要高很多吧。</p>
     <p>证据表明，她对梅赛德斯的蔑视之色表现得很浓厚。</p>
-    <p>“马吉特·格鲁内瓦特······我九岁”</p>
+    <p>“玛吉特·格鲁内瓦特······我九岁”</p>
     <p>最后自报姓名的少女同样是金发可爱的少女。</p>
     <p>提心吊胆的，不太让人感到自信。</p>
     <p>实在可怜的事，她的母亲和梅赛德斯同样好像不太好的立场。</p>
@@ -97,7 +97,7 @@
     <p>“我知道那件事。但是还是有办法的。</p>
     <p>首先是戈特弗里特先挑战，让他疲惫不堪。这个木偶小子只有体力。要打倒他很辛苦吧。</p>
     <p>然后我要战胜他。你们在那个时候，有想做的事情”</p>
-    <p>鲍里斯一边解释一边将视线转向马吉特。</p>
+    <p>鲍里斯一边解释一边将视线转向玛吉特。</p>
     <p>于是，年幼的少女提心吊胆地把手掌上的东西给大家看。</p>
     <p>——射箭。意想不到地想到了古典的手段。</p>
     <p>不是，如果是孩子的浅智慧这样的东西吗？</p>
@@ -135,12 +135,12 @@
     <p>“要这样做”</p>
     <p>“……”</p>
     <p>背对着发呆的老板，走着说已经没事了。</p>
-    <p>其他的兄弟像被梅赛德斯气压了一样退下，取而代之的是一直等待着的本凯和克洛骄傲地走着。</p>
+    <p>其他的兄弟像被梅赛德斯气压了一样退下，取而代之的是一直等待着的本凯和小黑骄傲地走着。</p>
     <p>度过了无用的时间。虽然这么想着，但梅赛德斯却和看上去害怕自己的年幼少女目光相对。</p>
     <p>“来”</p>
     <p>“诶？”</p>
     <p>就这样放置在这里，肯定会被当作不是好事情来利用。</p>
     <p>看似懦弱，又不受天生恩惠，作为弃子被玻利斯盯上了吧。</p>
     <p>虽然梅赛德斯不是好人，但也不是丢弃知道今后会变成不幸的妹妹的那种外道。</p>
-    <p>不容分说就把马吉特带了出去，然后这次就离开了。</p>
+    <p>不容分说就把玛吉特带了出去，然后这次就离开了。</p>
 </body>
