--- a/OEBPS/Text/c013.xhtml
+++ b/OEBPS/Text/c013.xhtml
@@ -10,19 +10,92 @@
 </head>
 
 <body>
-    <h1>13. 丢失！！！</h1>
-    <p>内容丢失</p>
-
-    <p>[[丢失]]</p>
-
+    <h1>13. 同样的魔物</h1>
+    <p>梅赛德斯（Mercedes）原本计划瞄准最低层，但这次改变了，决定这次主要进攻浅层。</p>
+    <p>如果只是较浅层次的弱小魔物的话，用梅赛德斯和本凯、小黑来凝固前后的话就可以保护得住，但是如果出现了以与小黑相同速度移动的敌人的话就不能说是可以保护的。</p>
+    <p>所以这次只想游刃有余地应付各个阶层，以专心于魔物的画。</p>
+    <p>「我来清理所有的敌人。小黑陪着玛吉特，本凯在后方警戒」</p>
+    <p>「明白了」</p>
+    <p>「汪」</p>
+    <p>前有梅赛德斯，后有本凯，而玛吉特则乘在小黑上。</p>
+    <p>这样一来，弱小的魔物就不会伤害到玛格丽特了吧。</p>
+    <p>给了马尔吉特羊皮纸和笔，指示魔物出现后要画出它的样子。</p>
+    <p>在一楼徘徊了一阵，然后首先出现的是巨大的鼹鼠。这也是梅赛德斯第一个战斗的魔物。</p>
+    <p>「和之前一样的地方出来的啊」</p>
+    <p>梅赛德斯轻轻跳跃，踢进鼹鼠的脖颈，折断脖子的骨头使之断命。</p>
+    <p>马尔吉特对这一景象曾一时愣住了，但不久之后又像想起来一样记录了鼹鼠的样子。</p>
+    <p>等那个的期间，梅赛德斯抱着胳膊观察鼹鼠的尸体。</p>
+    <p>说是偶然也就罢了，这个大小也许是巨大鼹鼠的平均值。</p>
+    <p>但是左眼的伤口令人在意。记得以前打倒的人也有同样的伤。</p>
+    <p>这个种族原本就是这样受伤的样子吗。</p>
+    <p>「……本凯。魔物难道会无限沸腾吗？」</p>
+    <p>梅赛德斯有一个疑问。</p>
+    <p>那就是，虽然魔物在日常生活中被狩猎，但是狩猎魔物的工作的需求并没有消失。</p>
+    <p>saker狩猎害兽魔物。为了生活，为了制作羊皮纸的材料，为了加工皮毛，为了加工骨头，为了吃肉……狩猎，狩猎，持续狩猎。</p>
+    <p>……一般都会灭绝吧。</p>
+    <p>在地球的历史上，因为乱捕而灭绝的生物也有很多令人吃惊的。</p>
+    <p>尽管如此，为什么还要这样持续狩猎，生活的平衡却不会崩溃。生态系统不会崩溃。</p>
+    <p>狩猎魔物的工作并不是近年来才开始的。从很久以前开始……那才是数百年前就存在的工作。</p>
+    <p>那样的话就会灭绝。怎么想也有几个种子确实会灭绝。</p>
+    <p>在地球上，只考虑眼前的事情的愚蠢的偷猎者仅仅是偷猎就能使数量锐减，很多生物不得不保护人类。</p>
+    <p>更不用说，这个世界可以公然狩猎魔物，甚至可以拿到钱。魔物不灭才奇怪。</p>
+    <p>并不是走在地图上就能无限涌出怪物的RPG。稍微一想谁都会觉得奇怪。</p>
+    <p>「恐怕是那样。魔物无限沸腾」</p>
+    <p>「繁殖力强……好像不是这样的。和之前死去的个体有完全相同伤痕的家伙存在，真是太不自然了。这家伙不是和之前我打倒的鼹鼠偶然相似的鼹鼠。……是“完全一样的家伙”」</p>
+    <p>「恐怕那是正确的吧。我被任命为最下层的门的守护。</p>
+    <p>我并不是被谁托付的，只是漠然地意识到这是我被命令的使命的时候开始理解的。</p>
+    <p>然后我看了好几次门打开了。打开的门的对面出现了各种各样的魔物，散落在地下迷宫中。</p>
+    <p>那大概是每次被打倒都会被“补充”的吧」</p>
+    <p>「门的对面是怎样的？」</p>
+    <p>「门的对面是一条很细的通道，前面还有另一扇门。那以后我也不知道」</p>
+    <p>梅赛德斯总结了本凯的话。</p>
+    <p>果然没有魔物的繁殖方法。</p>
+    <p>而且和以前一样的个体，简直就像被复制了一样诞生着。</p>
+    <p>本凯所保护的门恐怕是与那个秘密相连的门。</p>
+    <p>但是门是双重构造，守门的本凯也不知道里面的情况。</p>
+    <p>另外，从那里诞生的魔物们也没有出生时的记忆吧。否则，本凯也应该知道它的未来是怎样的。</p>
+    <p>「是吗。本凯，我把守护着门的你带出去了，这样的话，现在门前还有别的你吗？」</p>
+    <p>「是的。恐怕在遇见你之前我就在这里吧」</p>
+    <p>「然后在十二层和我相遇之前的小黑……不，应该有没有名字的斯瓦尔茨・沃夫格」</p>
+    <p>「是。应该也可以这么认为」</p>
+    <p>说到这里，梅赛德斯头疼起来了。</p>
+    <p>迷宫到底是什么？</p>
+    <p>其存在本身就过于异质。</p>
+    <p>突然出现，继续生产魔物，如果不定期狩猎的话，就好像忘了自己一样，把魔物拿出来。</p>
+    <p>还是说，在这个世界上这个很普通呢？谁都不觉得奇怪吗？</p>
+    <p>性质不同的不是迷宫，而是对其存在抱有疑问的自己吗？</p>
+    <p>「姐姐，画出来了……？」</p>
+    <p>「嗯。给我看看」</p>
+    <p>总之现状是推测的材料不够。</p>
+    <p>现在即使对地牢的真面目进行各种各样的思考，也只是越来越了解其可怕之处而无法接近答案。</p>
+    <p>因此梅赛德斯停止了思考，将意识转向了马尔吉特画的画。</p>
+    <p>「果然很擅长啊。一瞬间以为是照片」</p>
+    <p>「zhaopian？」</p>
+    <p>「做得很好」</p>
+    <p>像是表扬玛吉特一样用力抚摸他的头，仔细想想，梅赛德斯和玛吉特的年龄只有一个不同。</p>
+    <p>不知不觉间就想和比自己小得多的孩子做对手，但是玛吉特好像也挺开心的，所以也可以吧。</p>
+    <p>「好，继续吧」</p>
+    <p>之后梅赛德斯也打败了各种各样的魔物，让马尔吉特画了画。</p>
+    <p>来了好几次之后，就能大致知道哪个阶层会出现哪个魔物。</p>
+    <p>不久，一行走到了十一层。</p>
+    <p>到了这里，梅赛德斯觉得玛吉特已经会有一定的生命危险了。</p>
+    <p>也就是说，如果把这里的魔物全部记录下来的话，今天就撤退了。</p>
+    <p>「噗噜噗噜、我是坏果冻哟」</p>
+    <p>「啊，还有这样的。顺便问一句，你以前也见过我吗？」</p>
+    <p>「噗噜噗噜、初次见面哦」</p>
+    <p>「是吗、谢了」</p>
+    <p>梅赛德斯只问了一个问题，挖出了核心然后把它握碎了。</p>
+    <p>原来如此，虽然是同一个个体但是没有记忆……等等。</p>
+    <p>看来并不是完全复苏了同一个个体，而是接近于复制品。</p>
+    <p>「那个，那个，姐姐」</p>
+    <p>「嗯？……啊，是吗。我忘记了。这样的话尸体就不会剩下了啊」</p>
     <p>梅赛德斯像往常一样瞬间杀死了魔物，但她觉察到这是错误的。</p>
     <p>核心已经被捏碎，尸体只是黏糊糊的液体掉在地上。</p>
-    <p>“没办法。这家伙就给我画个记忆吧。</p>
-    <p>反正果冻里只有核心的魔物”</p>
+    <p>“没办法。这家伙就给我画个记忆吧。反正果冻里只有核心的魔物”</p>
     <p>“嗯”</p>
-    <p>此后，一行按照预定撤退了。在有马吉特的状态下不会冒险。</p>
-    <p>回到上面后，梅赛德斯给马吉特画的插图加上说明书，一边从本凯那里得到补充，一边完成图鉴的形状。</p>
-    <p>然后，梅赛德斯立刻就把它卖给了海贼王。</p>
+    <p>此后，一行按照预定撤退了。在有玛吉特的状态下不会冒险。</p>
+    <p>回到上面后，梅赛德斯给玛吉特画的插图加上说明书，一边从本凯那里得到补充，一边完成图鉴的形状。</p>
+    <p>然后，梅赛德斯立刻就把它卖给了saker王。</p>
     <p>“想卖写有魔物情报的纸。如果是你的话要给多少价钱？</p>
     <p>「啊，哪个……嗯，嗯嗯……这个很有趣。一眼就能看出画上是什么样的魔物。</p>
     <p>那个修塔克迷宫是魔物的平均战斗力高的高难度迷宫。这个是有需要的。尤其是下层的魔物情报非常难得”</p>
@@ -40,9 +113,9 @@
     <p>“但是我觉得真的不好，因为之后委托的难易度发生了变化，所以支付的委托报酬不会随后上升或下降。</p>
     <p>因为，与此次相反，委托的难易度从后边降低了支付了的委托费被说还也感到为难吧？最初的契约书上也这样写着。</p>
     <p>虽然变成让你吃亏的形式，但相应的也决定了更新secar等级，下次把你提升到C等级”</p>
-    <p>默赛德斯一边听着接待处的话，一边看着本凯和克洛。</p>
+    <p>默赛德斯一边听着接待处的话，一边看着本凯和小黑。</p>
     <p>咦？难道这些家伙很强？</p>
-    <p>至今为止，在梅赛德斯眼中，本凯和克洛始终是“弱小的迷宫中强大的部类”的魔物。</p>
+    <p>至今为止，在梅赛德斯眼中，本凯和小黑始终是“弱小的迷宫中强大的部类”的魔物。</p>
     <p>但是，事实上却判明了“普通的强大魔物”。</p>
     <p>「啊，对了。这个魔物的情报，全部合计225万青蛙让我买下”</p>
     <p>对付出的金额超过预期的价格，梅赛德斯现在才明白，这不是开玩笑之类的，真的是那个迷宫，很强的迷宫。</p>
