--- a/OEBPS/Text/c015.xhtml
+++ b/OEBPS/Text/c015.xhtml
@@ -42,7 +42,7 @@
     <p>“变成三十万青蛙”</p>
     <p>作为随身行李的小型触发器……原来，立即购买了攀岩。这样行李就保管好了。</p>
     <p>在这里，梅赛德斯没有马上潜入迷宫，当天就回去一次，花了数天时间对克莱利亚进行教育。</p>
-    <p>在训练的同时，通过多次进行让哈尔巴德熟识的训练，与本凯和克洛交织的模拟战来提高战斗力。</p>
+    <p>在训练的同时，通过多次进行让哈尔巴德熟识的训练，与本凯和小黑交织的模拟战来提高战斗力。</p>
     <p>就这样，做好了充分的准备，梅赛德斯终于朝着迷宫最下层的目标突入了修塔克迷宫。</p>
     <p class="divline"></p>
     <p>这次的目的既不是地图，也不是捕获魔物，也不是收集素材。</p>
@@ -140,7 +140,7 @@
     <p>所以迷宫至今仍有七成没有被攻占，留在了世界，或者说现在又在什么地方出现了。</p>
     <p>相反，被完全攻略，复活的事也没有了的三成……选择了黑色的门，战胜了困难？</p>
     <p>这样想的话，有一定程度的说明。</p>
-    <p>“……本凯，克洛。觉悟真好”</p>
+    <p>“……本凯，小黑。觉悟真好”</p>
     <p>“哈”</p>
     <p>“妈！”</p>
     <p>梅赛德斯跟后面的一个人一只地确认了一下，然后向前看。</p>
