--- a/OEBPS/Text/c016.xhtml
+++ b/OEBPS/Text/c016.xhtml
@@ -14,8 +14,8 @@
     <p>应梅赛德斯的呼声，黑色的门被打开了。</p>
     <p>其中广阔、广阔——无论到哪里都是广阔的空间。</p>
     <p>虽然不知道到底是怎么在迷宫中形成这样的空间的，但梅赛德斯为了不把动摇表现出来，努力地走进了大门。</p>
-    <p>本凯和克洛也跟在后面，只有随身携带行李的登山口留在门外。</p>
-    <p>于是门慢慢地关上了，关上了梅赛德斯、本凯、克洛。</p>
+    <p>本凯和小黑也跟在后面，只有随身携带行李的登山口留在门外。</p>
+    <p>于是门慢慢地关上了，关上了梅赛德斯、本凯、小黑。</p>
     <p>这样不突破考验，就无法生存下去。</p>
     <p>“挑战真实的人啊，好想来了。”</p>
     <p>从空间深处传来声音。</p>
@@ -62,14 +62,14 @@
     <p>他们好像在悲哀，或者蔑视着梅赛德斯。</p>
     <p>被全方位监视，是不利的。所有的动作都变得一目了然。</p>
     <p>死角不再是死角，奇袭作为奇袭无法成立。</p>
-    <p>克洛和本凯的攻击也容易被抛弃，用翅膀被弹开了。</p>
+    <p>小黑和本凯的攻击也容易被抛弃，用翅膀被弹开了。</p>
     <p>但是在那里重新站立了姿势的梅赛德斯跳入，任凭力量挥下哈尔巴德。</p>
     <p>“重力十倍！”</p>
     <p>配合击落的重力魔法增加重量。</p>
     <p>以浑身的一击切断了一个历史的翅膀。</p>
     <p>……相通！</p>
     <p>虽然是很厉害的敌人，但这边的攻击并不见效。</p>
-    <p>看到这一点，本凯和克洛也士气高涨，与梅赛德斯联合进行攻击。</p>
+    <p>看到这一点，本凯和小黑也士气高涨，与梅赛德斯联合进行攻击。</p>
     <p>本凯巧妙地操纵着六个武器，专心致志地打败历史舞台的姿势，小黑四处飞来飞去捣乱。</p>
     <p>而且，以小黑为立足点，梅赛德斯跳了起来，全身心地投入一击。</p>
     <p>但是他觉得那个很麻烦吧。历史学家转向了下一个攻击。</p>
@@ -84,12 +84,108 @@
     <p>冷静下来看清楚就行了。并不是真的被孤立了……只是看不见同伴的身影。</p>
     <p>然后，周围的目光告诉我们。</p>
     <p>你看，现在也是。有些眼神看着自己以外的某个地方。</p>
-    <p>也就是说，那里有本凯和克洛。</p>
+    <p>也就是说，那里有本凯和小黑。</p>
     <p>梅赛德斯扔下火焰的魔石华丽地爆炸，用闪光驱散黑暗一瞬间。</p>
     <p>更加跳跃之后挥舞哈尔巴德，用魔法放出风的刃一个接一个地毁坏周围的眼。</p>
     <p>砍伐，破坏。砍伐，破坏。</p>
     <p>刀闪闪发光，眼前（景象）崩溃的同时黑暗消失了。</p>
-    <p>[[丢失]]</p>
+    <p>「本凯、小黑！没事吗！」</p>
+    <p>「是！多少也没问题！」</p>
+    <p>「汪！」</p>
+    <p>确认同伴平安后，梅赛德斯就这样将风之刃向历史遗迹投掷。</p>
+    <p>不放过蹒跚的间隙，用重力魔法飞行，这次直接攻击哈佛。</p>
+    <p>瞬间直方图也用翅膀防御，不过，连同那个翼切断。</p>
+    <p>在历史的身体上刻上了伤痕。</p>
+
+
+    <p>「第五章：强烈的后悔 弗蒂希·灰度」</p>
+    <p>「五章――激しい後悔ヘフティヒ・グリュック」</p>
+    <p>下一个招数又是火焰。历史从脸上放出火焰，向梅赛德斯他们进行攻击。</p>
+    <p>但是那并不是之前的黑色火焰，而是像喷出的岩浆一样的红莲之炎。</p>
+    <p>就像不断溢出的感情一样，火焰填满了空间，就像是后悔过去而辗转反侧的火焰在肆虐。</p>
+    <p>梅赛德斯将水和冰的魔石全部扔到这里进行防御，但是无法防御。</p>
+
+    <p>但是这样就可以了。因为她的目的不是防御什么的。</p>
+
+    <p>「卧倒！」</p>
+    <p>在梅赛德斯指示的同时，本凯和小黑尽可能地拉开距离伏下。</p>
+    <p>梅赛德斯也同样拉开距离，用魔石展开风之防壁。</p>
+    <p>紧接着，由于高温的火焰而急剧气化的水发生了大爆炸，袭击了历史记录自身。</p>
+    <p>就是所谓的水蒸气爆炸。</p>
+    <p>根据规模的不同，山体崩溃也会引起的这种爆炸的确起到了作用。</p>
+    <p>看不见翅膀。</p>
+
+    <p>小黑没有从那里逃走，梅赛德斯乘坐在上面。</p>
+
+    <p>历史也发出迎击的火焰，不过，由于小黑机敏地避开那个的事梅赛德斯只能集中在攻击上。</p>
+
+    <p>「哈！」</p>
+    <p>哈尔巴德一閃。</p>
+    <p>斩断历史的侧腹，比接受反击更快地小黑脱离。</p>
+    <p>交替进攻的是本凯。</p>
+    <p>他放着交叉弓一边牵制一边缩短距离，用多个武器同时攻击刺进了历史的翅膀。</p>
+
+    <p>「畳み掛けるぞ！」</p>
+    <p>梅赛德斯跳过指示从小黑跳跃。</p>
+    <p>轻轻松松地挥舞着哈尔巴德，将斩击的风暴吹向了历史。</p>
+    <p>本凯和小黑也配合着进行连续攻击，直方图用翅膀和手臂正确防御，反击。</p>
+    <p>三比一尚且势均力敌。果然只有一半的考验是不够的。</p>
+
+
+    <p>「第六章——过去不会改变 ウンフェアエンダーリヒ・アインスト」</p>
+    <p>「六章――過去は変わらないウンフェアエンダーリヒ・アインスト」</p>
+    <p>在收到那个宣言的瞬间，梅赛德斯的身体突然被火焰包围了。</p>
+    <p>不，不仅仅是梅赛德斯。</p>
+    <p>突然被风吹到地上。</p>
+    <p>两个人和一只狗马上站起来，但是再次听到历史树宣言技能名的时候受到了完全相同的伤害。</p>
+    <p>（这是……过去的伤害再现了吗！？真麻烦！）</p>
+    <p>梅赛德斯一边被火焰烧焦，一边强行跳跃，用哈尔巴德的钩爪撕裂了历史里叶的脸。</p>
+    <p>过去受到的伤害当场再现，既没有回避也没有防御。发动前除了击溃以外的手都找不到。</p>
+    <p>但是，他太着急了，想让他停下来。伸出的手想要抓住梅赛德斯。</p>
+    <p>我想避开这个也来不及了。被抓住了胸口，行动被封印了。</p>
+    <p>在那里历史树打算从刚才的脸放出火焰。</p>
+    <p>如果直接攻击的话，即使是梅赛德斯也不会平安。</p>
+
+    <p>「嘁！」</p>
+    <p>但是被抓住的只有衣服是不幸中的万幸。</p>
+    <p>梅赛德斯自己撕破衣服，强行从拘束中逃脱，回避了火焰。</p>
+    <p>因为采取了无端的避开方法，上半身变成了内衣内衣下装，不过，没有在意的余地，也没有因为那样的事一个个感到羞耻说「呀」的那样少女气。</p>
+    <p>发卡也解开了，头发有点阴郁，但是这边也没有时间在意吧。</p>
+    <p>「重力……五十倍！」</p>
+    <p>强制提高魔力的输出，将历史记录倒在了地上。</p>
+    <p>但是，这就是我的极限。完全只是魔法，自己也动不了。</p>
+    <p>但是，即使梅赛德斯不能行动，也有可以行动的伙伴。</p>
+    <p>本凯将交叉弓向上发射，被重力吸引急速下降，刺入历史。</p>
+    <p>看了那个之后马上解除魔法，切换到下一个魔法。</p>
+    <p>「フェアザンメルン！」</p>
+    <p>梅赛德斯的原创土属性魔法第三弹与其说是重力，不如说是引力。</p>
+    <p>是一种在手被遮住的方向上产生引力场，将周围的物体拉入的魔法，但威力不大。</p>
+    <p>但是这样也能稍微阻碍敌人的行动。</p>
+    <p>梅赛德斯更是身体力行，不违抗引力而加速。用力把来势的踢进去了。</p>
+    <p>还没有结束。抓住历史的巨大躯体，配合重力的操作举起，向空中投掷。</p>
+    <p>随后跳跃……就这样追了过去，把哈佛摆在上面一口气甩了下去。</p>
+    <p>历史树的脸裂开一半左右，轰鸣声向地面撞击。</p>
+    <p>「終章――アインスト……」</p>
+    <p>「させるか！」</p>
+    <p>虽然想要进行最后的抵抗，但是比那个更快的梅赛德斯把哈尔巴德刺向了历史的脸。</p>
+    <p>即使这样也还没有贯彻到底，但最后的一击就在这之后。</p>
+    <p>梅赛德斯迅速地从历史舞台上跳下来，将全部魔力集中到双臂上。</p>
+    <p>（坚持住啊······我的身体）</p>
+    <p>魔法绝对不是可以无风险使用的东西。</p>
+    <p>使用方也存在相应的消耗。</p>
+    <p>如果说太过枯竭，那就叫做死亡。</p>
+    <p>但是梅赛德斯决定即使犯了危险也要在这里取得胜利。</p>
+    <p>如果不那样做的话，就不能把这家伙打倒现在的自己。我是这么想的。</p>
+    <p>「重力百倍！」</p>
+    <p>以界限以上的输出发射重力波，再集中一点。集中到了哈佛。</p>
+    <p>于是哈尔巴德裂开了，自己崩溃的同时也刺向了历史。</p>
+    <p>然后——贯通。</p>
+    <p>在历史树的脸上打了个洞，就像完成了任务一样粉碎散落。</p>
+    <p>「……干得······漂亮。汝等才是、能获取真实之人……」</p>
+    <p>而且历史也因为现在的一击而崩塌了。</p>
+
+    <p>说了对梅赛德斯他们的赞赏（虽然没有口……）他变成光的粒子消失了。</p>
+    <p>看到这一幕后，梅赛德斯脱力，差点倒下。</p>
     <p>但是本凯突然接住了这个身体。</p>
     <p>“主人，你没事吧？”</p>
     <p>“……啊！但是果然还是有点累了”</p>
