--- a/OEBPS/Text/c018.xhtml
+++ b/OEBPS/Text/c018.xhtml
@@ -38,16 +38,16 @@
     <p>而梅赛德斯也同样如此。不做随波逐流的事情。</p>
     <p>她将重力魔法注入永续魔石，把它作为手镯，平时随身携带。</p>
     <p>这样做可以经常给自己施加负担，锻炼身体。</p>
-    <p>虽然梅赛德斯，但她现在访问了马吉特的家。理由当然是为了教你读写。</p>
-    <p>马吉特住的房子，比梅赛德斯的家还要贫穷，根本不像是贵族。</p>
+    <p>虽然梅赛德斯，但她现在访问了玛吉特的家。理由当然是为了教你读写。</p>
+    <p>玛吉特住的房子，比梅赛德斯的家还要贫穷，根本不像是贵族。</p>
     <p>每次走路的时候地板都嘎吱嘎吱的说，一看墙壁，海豹军曹精神满满地跑来跑去驱除蟑螂。</p>
-    <p>而马吉特的母亲病弱，几乎无法从床上移动。</p>
-    <p>“我从马吉特那里听说了。你是梅赛德斯吧？</p>
-    <p>上次听说女儿受您照顾了。今后也要和马吉特好好相处哦”</p>
-    <p>没想到马吉特的母亲对梅赛德斯没有表现出警戒。</p>
+    <p>而玛吉特的母亲病弱，几乎无法从床上移动。</p>
+    <p>“我从玛吉特那里听说了。你是梅赛德斯吧？</p>
+    <p>上次听说女儿受您照顾了。今后也要和玛吉特好好相处哦”</p>
+    <p>没想到玛吉特的母亲对梅赛德斯没有表现出警戒。</p>
     <p>不，仔细想想也许不是意外。</p>
     <p>梅赛德斯其实是个十岁的童女，光看就觉得是朋友来玩的。</p>
-    <p>虽然这么想，但梅赛德斯并没有说多余的话，只是简单的寒暄了一下，马上开始着手学习马吉特。</p>
+    <p>虽然这么想，但梅赛德斯并没有说多余的话，只是简单的寒暄了一下，马上开始着手学习玛吉特。</p>
     <p>教字，其实很难。</p>
     <p>对于梅赛德斯来说，比起自己记住的东西，告诉别人要困难得多。</p>
     <p>简单易懂地进行说明，易懂地教……虽然只是用语言来说的话，但对于梅赛德斯来说，这是比从现在开始自己学习未知的语言还要困难的事情。</p>
@@ -84,7 +84,7 @@
     <p>不要勉强。梅赛德斯认为这是最重要的。</p>
     <p>“那么，开始之前首先，到哪里为止记了文字？”</p>
     <p>“嗯……总算可以写到这一段了”</p>
-    <p>对于马吉特的回答，梅赛德斯虽然没有露出表情，但还是很感叹。</p>
+    <p>对于玛吉特的回答，梅赛德斯虽然没有露出表情，但还是很感叹。</p>
     <p>看来她好好地自主学习了。</p>
     <p>这个世界的语言极其接近于日语，如果用它来比喻的话，那么她的文字的学习程度，甚至连“ta”一行都记住了。</p>
     <p>虽然梅赛德斯觉得这会意外地加快前进，但在这里马上意识到自己错了。</p>
@@ -99,7 +99,7 @@
     <p>对于花了这么多钱买了巧克力的有钱人来说，这个奖励太贵了吧。</p>
     <p>但是，在梅赛德斯本人看来，这只是递给100日元的板状巧克力板以下的东西的感觉。</p>
     <p>但是由于这个奖励，马尔吉特的干劲一下子提高了，结果学习顺利的进行了。</p>
-    <p>结束了马吉特的学习，梅赛德斯回家后，家门前停着一辆带有陌生徽章的马车。</p>
+    <p>结束了玛吉特的学习，梅赛德斯回家后，家门前停着一辆带有陌生徽章的马车。</p>
     <p>为了堵住那辆马车的去路，本凯和小黑挡住了去路，衣冠楚楚的男人拼命地说服他。</p>
     <p>周围几个人倒下，能看见争斗的痕迹。</p>
     <p>到底发生了什么……。</p>
