--- a/OEBPS/Text/c021.xhtml
+++ b/OEBPS/Text/c021.xhtml
@@ -23,8 +23,8 @@
     <p>现在，场上残留着贝赛德兽和菲利克斯，警备的士兵5人。已经败在床上的士兵有七人。</p>
     <p>叫出了贝赛德兽的玻利斯和，还有倒下的戈特弗里特。</p>
     <p>然后抱着胳膊观察战斗的梅赛德斯，和女儿不知为什么没有逃跑，一起留下来的母亲，琉迪亚。</p>
-    <p>还有两个妹妹，马吉特，莫尼卡，还有他们的母亲。</p>
-    <p>马吉特的母亲因为病弱逃跑迟了，马吉特无法抛弃这样的母亲逃跑。</p>
+    <p>还有两个妹妹，玛吉特，莫尼卡，还有他们的母亲。</p>
+    <p>玛吉特的母亲因为病弱逃跑迟了，玛吉特无法抛弃这样的母亲逃跑。</p>
     <p>莫尼卡是……到底是什么呢？不知为何她正期待着看着梅赛德斯，不肯逃跑。</p>
     <p>虽然在梅赛德斯附近，特拉伊努族也来了，但因为他知道梅赛德斯的实力，所以才判断这里是最安全的。他是个精明的人。</p>
     <p>而且和以前相比，身体非常健康，而且胖得圆滚滚的。</p>
@@ -95,7 +95,7 @@
     <p>菲利克斯为了巩固自己的地位……也就是说，自己被抛弃的可能性很高。</p>
     <p>但是，正是因为这样年幼无垢的少女的控诉才让梅赛德斯产生了回响。</p>
     <p>没有算计也没有，只是纯粹地想帮助这样的想法在梅赛德斯没有。</p>
-    <p>所以梅赛德斯轻轻地抚摸着马吉特的头，微笑着。</p>
+    <p>所以梅赛德斯轻轻地抚摸着玛吉特的头，微笑着。</p>
     <p>“你真是个好孩子啊”</p>
     <p>以算计而行动的人，因为算计而失败而毁灭，对梅赛德斯而言是绝对不能打动的。失败和成功都是那个人的自责。</p>
     <p>只要这里没有火星，那就无所谓了。</p>
@@ -108,7 +108,7 @@
     <p>但是，当得知声音的主人是少女后，气氛变得有些愚蠢了。</p>
     <p>“小姑娘啊。退下，战斗就是生命的交换……不杀就不会结束。</p>
     <p>女孩子不知道的世界……不要入内。</p>
-    <p>带着那边的女人们，赶紧离开吧。特别是那里的女人马吉特母亲的脸色也不好。</p>
+    <p>带着那边的女人们，赶紧离开吧。特别是那里的女人玛吉特母亲的脸色也不好。</p>
     <p>让他吃有营养的食物，让他们休养就好了”</p>
     <p>咦？这家伙意外地是个好家伙吧？梅赛德斯想。</p>
     <p>看来他有他的战斗美学，即他不想对女人出手。</p>
@@ -126,9 +126,9 @@
     <p>梅赛德斯就那样左手注入力量，很强地握住贝赛德兽的手臂。</p>
     <p>于是贝赛德兽的手臂输给了压力而摩擦着，从被抓住的部分喷出了血。</p>
     <p>梅赛德斯的手指突破了肉，深深地扎了进去。</p>
-    <p>就这样梅赛德斯只用一只手的力量举起贝赛德兽，向与马吉特们相反的方向扔飞。</p>
+    <p>就这样梅赛德斯只用一只手的力量举起贝赛德兽，向与玛吉特们相反的方向扔飞。</p>
     <p>贝赛德蒙把日常用品、椅子、桌子卷进来，吹跑，撞到墙壁的地方终于停了下来。</p>
-    <p>菲利克斯对那难以想象的景象哑然，他的母亲莫尼卡、马吉特的母亲也同样惊呆了。</p>
+    <p>菲利克斯对那难以想象的景象哑然，他的母亲莫尼卡、玛吉特的母亲也同样惊呆了。</p>
     <p>「す、す、すごい……果然姐姐很强……”</p>
     <p>玛吉特只是惊讶于姐姐的超出常识的强大。</p>
     <p>虽说是自己向她求助，但这种程度的压倒性再次让人吃惊。</p>
