--- a/OEBPS/Text/c022.xhtml
+++ b/OEBPS/Text/c022.xhtml
@@ -93,7 +93,7 @@
     <p>但是梅赛德斯从来没有感受到过对母亲的爱。</p>
     <p>也感谢照顾自己的老婆婆。我想报恩。</p>
     <p>但是她也没有感受到爱。</p>
-    <p>我觉得马吉特是个可爱的妹妹。</p>
+    <p>我觉得玛吉特是个可爱的妹妹。</p>
     <p>我不希望你遭遇不幸，也希望你能得到幸福。</p>
     <p>所以帮助了他，也帮助他独立生活。</p>
     <p>但是，如果抛弃的话，因为自己会留下不好的印象所以才这么做的。</p>
@@ -136,7 +136,7 @@
     <p>而且能够吸收到只有贵族才能得到的众多书籍和知识。</p>
     <p>我觉得让父亲疯狂人生的母亲很可怜。啊，真可怜啊。</p>
     <p>希望得到回报，希望他们摆脱这种可怜的境遇，这种心情是谎言。</p>
-    <p>马吉特和其他兄弟都是受害者，父亲是加害者。我知道。</p>
+    <p>玛吉特和其他兄弟都是受害者，父亲是加害者。我知道。</p>
     <p>但是那里没有愤怒。</p>
     <p>在这儿发怒有什么好处呢？</p>
     <p>任凭一时的感情自己变得不利，什么都得不到，失去应该得到的利益不是愚蠢的事吗？</p>
