--- a/OEBPS/Text/c023.xhtml
+++ b/OEBPS/Text/c023.xhtml
@@ -20,8 +20,8 @@
     <p>以那个状态出去，也有地牢想办法变成。</p>
     <p>也有成为zuveru这个可靠的顾问。</p>
     <p>但是，即便如此，还是不知道和不知道是不同的。</p>
-    <p>更何况，如果只是自己出去的话很容易，但问题是马吉特和老婆子。</p>
-    <p>我不认为能忍受长途旅行，至于马吉特的母亲，我中途就退休了。</p>
+    <p>更何况，如果只是自己出去的话很容易，但问题是玛吉特和老婆子。</p>
+    <p>我不认为能忍受长途旅行，至于玛吉特的母亲，我中途就退休了。</p>
     <p>话虽如此，如果放开不管的话，不知道伯恩哈特会干什么。</p>
     <p>既然如此，与其在这里反抗，还不如硬着头皮进入柏林哈特怀里去收他的后盾，挖出让步，榨取。</p>
     <p>那个虽然不是伙伴，但找到自己价值的期间绝对不会成为敌人。就是这种类型。</p>
@@ -52,7 +52,7 @@
     <p>……说起来恢复健康的理由，是因为后来加入梅赛德斯手下的贝赛德兽。</p>
     <p>那个贝赛德兽只是被利用了，并不是他自己不好。</p>
     <p>所以梅赛德斯作为打倒者的特权，将贝赛德兽加到部下，置于自己的管理之下。</p>
-    <p>然后代替马吉特父子的护卫放在马尔吉特的家里，不知为什么好像是料理高手，根据贝赛德兽做的料理，马尔吉特母亲的身体状况正在得到改善。</p>
+    <p>然后代替玛吉特父子的护卫放在马尔吉特的家里，不知为什么好像是料理高手，根据贝赛德兽做的料理，马尔吉特母亲的身体状况正在得到改善。</p>
     <p>连梅赛德斯也不知道为什么恶魔有这样的技能。</p>
     <p>琉迪亚和老婆婆一起跑过来说“如果女儿来这里的话”，所以被送到梅赛德斯隔壁的房间，时不时地说些奢侈的话，让伯恩哈特为难。还是一个性格很好的母亲。</p>
     <p>然后Bolis失踪了。连梅赛德斯也不知道他消失在哪里了。</p>
