--- a/OEBPS/Text/c024.xhtml
+++ b/OEBPS/Text/c024.xhtml
@@ -18,7 +18,7 @@
     <p>“那么各位。今天来练血术吧”</p>
     <p>以梅赛德斯为首的格鲁内瓦特的孩子等担任教师的高个吸血鬼环视着房间说道。</p>
     <p>在室内的是梅赛德斯和菲利克斯。</p>
-    <p>甚至还有戈特弗里特、莫尼卡、马吉特等。</p>
+    <p>甚至还有戈特弗里特、莫尼卡、玛吉特等。</p>
     <p>伯恩哈特从那以后，不知道在想些什么（除去向不明的伯利斯以外）把所有侧室的孩子都召到离家出走的房子里，与梅赛德斯、菲利克斯进行着相同的教育。</p>
     <p>因为从意想不到的地方出现了一个名叫梅赛德斯的优秀的女儿，也许在其他侧室的孩子中也混杂着宝石吧。</p>
     <p>“我们吸血鬼和其他法鲁什不同，会产生血液流动较大的身体能力。”</p>
@@ -58,7 +58,7 @@
     <p>这恐怕是迷宫主人下达的命令。主人可以命令自己所有的迷宫的魔物。</p>
     <p>并且贝赛德兽的所有权现在转移到梅赛德斯，不用担心已经接受命令……贝赛德兽一边炒蔬菜一边说道。</p>
     <p>因此，在那个事件背后的迷宫攻略者仍然在黑暗中。</p>
-    <p>虽然无所谓，但随着马吉特的搬家，贝赛德兽也来到了本邸，现在在宅邸的厨房工作。</p>
+    <p>虽然无所谓，但随着玛吉特的搬家，贝赛德兽也来到了本邸，现在在宅邸的厨房工作。</p>
     <p>那个恶魔到底在往哪里去呢？</p>
     <p>而且生气的事，他做的饭菜非常好吃。</p>
     <p>·</p>
