--- a/OEBPS/Text/c030.xhtml
+++ b/OEBPS/Text/c030.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>30.  王子的真面目</h1>
+    <h1>30. 王子的真面目</h1>
     <p>梅赛德斯到达现场后，吉克哈特与巨鹫展开一进一退的攻防战。</p>
     <p>吉克哈特的技能用精彩的一句话来形容。</p>
     <p>动作简练，几乎没有浪费。这不是像梅赛德斯那样混杂着自我的邪道，而是只有追究正道剑术的人才能完成的动作。</p>
@@ -19,7 +19,7 @@
     <p>具备不输给有尺寸差的鹫的膂力和不让对方感到飞的不利的速度。</p>
     <p>如果梅赛德斯不知道这个世界的生物连概念都不知道的重力的话……如果适当的重力训练与血操术这个吸血鬼的强度没有直接关联的方法……一定，他在梅赛德斯的遥远的高处吧。</p>
     <p>但是，令人惊讶的是，和吉克哈特相互战斗的魔物吗？</p>
-    <p>不管怎么想，学生们都不是能战斗的对手。恐怕在战斗力方面也能与克洛匹敌吧。</p>
+    <p>不管怎么想，学生们都不是能战斗的对手。恐怕在战斗力方面也能与小黑匹敌吧。</p>
     <p>吉克哈特好像在苦战，胸口裂得很大。</p>
     <p>幸好只是擦了一件衣服，看不到受伤…………不，等一下。总觉得有点奇怪。</p>
     <p>但是深入到那里之后呢。每个人都有不想被碰触的秘密。</p>
@@ -46,8 +46,8 @@
     <p>虽然不知道语源，但听起来却很强烈。</p>
     <p>梅赛德斯一边仰望着阿修塔尔，一边小声地呼唤着图威尔夫。</p>
     <p>（图瓦尔夫，信息）</p>
-    <p>《耶稣，主人。查找当地识别名“阿修塔尔”的信息。</p>
-    <p>……安全打。搜索已完成。接下来公开信息。</p>
+    <p>《YES，主人。查找当地识别名“阿修塔尔”的信息。</p>
+    <p>……hit。搜索已完成。接下来公开信息。</p>
     <p>阿修塔尔是鹫型怪物。威胁度是与施瓦尔茨·沃尔夫范同样的等级B。</p>
     <p>属性是第一属性是地，铁。第二属性为风、雷。</p>
     <p>主要的攻击手段是硬化指甲和嘴的铁属性攻击，和同样使之硬化翅膀的冲撞。</p>
@@ -128,5 +128,22 @@
     <p>大体上确实，应该被敌人方面记号了。</p>
     <p>（真是麻烦的事啊……）</p>
     <p>一边抚摸着阿修塔尔，梅赛德斯轻轻地叹了一口气。</p>
-    
+
+    <p class="divline"></p>
+    アシュタール（この子、いつまでパン出してるんだろ。黒パン好きじゃないんだけど……。
+
+    魔物的本能でもう主人って認めてるのに。全然伝わってないっぽいし。
+
+    パンじゃなくて肉出して、肉。そしたら食べるから。
+
+    触られて抵抗しないって時点で主人認定終わってるって伝わらないもんかね、普通。
+
+    逃げないから、はよ鎖ほどいて。
+
+    とりあえず伝わる事を願ってガン見し続けよう。
+
+
+
+    ところで腹減ったんで、肉くれませんかね？）
+
 </body>
