--- a/OEBPS/Text/c031.xhtml
+++ b/OEBPS/Text/c031.xhtml
@@ -40,7 +40,7 @@
     <p>怎么都无所谓，只是叼着雪茄没吹。在室内只是叼着。</p>
     <p>兔子很懂礼貌。</p>
     <p>写完的信，让看准了早上大家睡静了的时候从迷宫发出了的魔物拿到。</p>
-    <p>这次Mersedes选择配送角色的是名为“Tegatze”的魔物，是拥有和老虎一样大小的虎猫一样的生物。</p>
+    <p>这次梅赛德斯选择配送角色的是名为“Tegatze”的魔物，是拥有和老虎一样大小的虎猫一样的生物。</p>
     <p>猫的运动能力就那样只尺寸象大了一样的这个魔物敏捷和蔼可亲，容易处理。</p>
     <p>虽然多少有些心血来潮，但也许会完成任务吧。</p>
     <p>过了两天左右，tegatze衔着新信回来了。</p>
@@ -86,7 +86,7 @@
     <p>像我这样的地位，反而是攻略所产生的缺点更大”</p>
     <p>这和暗中说如果自己可以攻略迷宫是一样的。</p>
     <p>非常自信。</p>
-    <p>“那么shutalk迷宫是……”</p>
+    <p>“那么斯塔克迷宫是……”</p>
     <p>“嗯，是重伤啊。但是那是近年来出现的迷宫。</p>
     <p>支撑这个城市的是以前就有的plactisu迷宫。</p>
     <p>虽然很可惜，但是考虑到原来没有的东西已经没有了，就没有问题了”</p>
