--- a/OEBPS/Text/c032.xhtml
+++ b/OEBPS/Text/c032.xhtml
@@ -51,7 +51,7 @@
     <p>这个时候，主人钥匙作为防盗的自我防卫机能把洞内的岩石等拿出来，由于那个内侧填埋自己从外边变得看不见。</p>
     <p>简单来说，就是以变成状态来隐瞒自己。</p>
     <p>梅赛德斯在迷宫内增设的一间房子里聚集了主要成员，向图威尔夫寻求说明。</p>
-    <p>现在在这里的除了梅赛德斯、茨瓦尔夫以外还有本凯、克洛。</p>
+    <p>现在在这里的除了梅赛德斯、茨瓦尔夫以外还有本凯、小黑。</p>
     <p>迷失方向，继续迷失方向的舒夫，与前几天捕获的阿修塔尔的4人和1只一只。</p>
     <p>也许阿修塔尔也应该给它取个名字。</p>
     <p>顺便一提，克利亚在格鲁内瓦尔特家看家。</p>
@@ -84,7 +84,7 @@
     <p>实际上除了攻略者本人以外可以说是严格的系统。</p>
     <p>《最后是守护者的使役。攻略者可以召唤守护者来使役”</p>
     <p>“说起守护者……黑之门的对面。我能用那个吗？”</p>
-    <p>《耶稣。但，如果守护者万一被破坏了，地牢的功能24小时左右停止了。呼叫时请注意”</p>
+    <p>《YES。但，如果守护者万一被破坏了，地牢的功能24小时左右停止了。呼叫时请注意”</p>
     <p>曾经使梅赛德斯们痛苦的舒瓦兹·希特里埃现在仍然是一对一无法战胜的强敌。</p>
     <p>虽然说那个带有风险，但是能站在我方上是相当大的。</p>
     <p>“话说回来，老板。玛娜剩了很多，怎么样？”</p>
