--- a/OEBPS/Text/c034.xhtml
+++ b/OEBPS/Text/c034.xhtml
@@ -95,7 +95,7 @@
     <p>“茨瓦尔夫。我想从这些人那里听到一些信息，有什么好的方法吗？”</p>
     <p>“哥布林赫克斯可以使用催眠魔法。这样能听到吗？”</p>
     <p>「好。那么现在马上生产一体哥布林赫克斯，给我拿出来”</p>
-    <p>《耶稣，主人》</p>
+    <p>《YES，主人》</p>
     <p>说完话过了一会儿，哈尔巴德中出现了戴着黑色食物的蟑螂。</p>
     <p>手里拿着拐杖，就像魔法师一样出场。</p>
     <p>他伸出手杖，在白色装束上施加魔法。</p>
@@ -131,6 +131,6 @@
     <p>那肯定是……是汉娜。</p>
     <p>看来，今后还得注意她的动向。</p>
     
-    <p>[[丢失]]122l</p>
+    <p><span class="textmissing">[[丢失]]122l</span></p>
     
 </body>
