--- a/OEBPS/Text/c036.xhtml
+++ b/OEBPS/Text/c036.xhtml
@@ -15,7 +15,7 @@
     <p>虽然没有被称作星期，但是相应的称呼有“火之日”、“水之日”等与各属性相关的称呼。</p>
     <p>从星期六开始，经过水、风、火、铁、冰、雷最后绕太阳一周。</p>
     <p>对于前世习惯于周七的梅赛德斯来说，这实在是有些不协调感，但因为是这个国家的文化，所以只能接受了。</p>
-    <p>太阳在埃尔菲和佛格拉的国家被认为是一周的开始,不过，阳光出来的早上对吸血鬼来说是睡觉的时间。</p>
+    <p>太阳在精灵和佛格拉的国家被认为是一周的开始,不过，阳光出来的早上对吸血鬼来说是睡觉的时间。</p>
     <p>因此，这个oruxusu一周的开始是土，阳是休息日。</p>
     <p>在学园里，阳天也是休息日，梅赛德斯利用这个假期回到了格鲁内瓦尔特府邸。</p>
     <p>如果以平时的空中短跑能返回轻松,不过，此次因为吉克哈特也在，阿修塔尔请努力了。</p>
