--- a/OEBPS/Text/c037.xhtml
+++ b/OEBPS/Text/c037.xhtml
@@ -20,7 +20,7 @@
     <p>这样的话就足够了。没有真正的王剑，也会出现在这里。</p>
     <p>而且还方便。本来应该显示王剑力量的这个场合带来了假货的事自己已经，说着自己们不能使用也同样。</p>
     <p>（ツヴェルフ。你们能分辨出万能钥匙和不是万能钥匙吗？）</p>
-    <p>《耶稣，主人。但如果注视，附有所说的条件。</p>
+    <p>《YES，主人。但如果注视，附有所说的条件。</p>
     <p>一瞬间横穿了眼前的程度恐怕不会注意到”</p>
     <p>杜威尔夫能分辨主人钥匙是很大的优点。</p>
     <p>同时，如果这个事件背面的地牢主人附有象tsuveru一样的向导，这边有被看破的可能性。</p>
