--- a/OEBPS/Text/c038.xhtml
+++ b/OEBPS/Text/c038.xhtml
@@ -31,7 +31,7 @@
     <p>有只敲大口的事。梅赛德斯向上修正了对伯恩哈特的评价，重新认识到是个麻烦的男人。</p>
     <p>现在暂定是我方，总有一天会成为敌人战斗的对手。</p>
     <p>果然在初次见面时没有敌对是正确的。</p>
-    <p>如果使用迷宫，那时的自己也不会输，但如果战斗的话，就会失去本凯和克洛吧。</p>
+    <p>如果使用迷宫，那时的自己也不会输，但如果战斗的话，就会失去本凯和小黑吧。</p>
     <p>不，想起伯恩哈特至今未能显示出其全力，甚至有失败的可能性。</p>
     <p>只能承认。伯恩哈特有能攻略迷宫的实力。</p>
     <p>看着轻轻挥舞哈尔巴德将敌人踢散的梅赛德斯，伯恩哈特心想。</p>
