--- a/OEBPS/Text/c041.xhtml
+++ b/OEBPS/Text/c041.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>41.  无慈悲的人</h1>
+    <h1>41. 无慈悲的人</h1>
     <p>从震撼国家的生日祭开始一天天黑了。</p>
     <p>应该说是一般这种时候一夜就过去了，但这里是吸血鬼的国家。</p>
     <p>夜晚是一天的开始，早晨是一天的结束。</p>
@@ -61,7 +61,7 @@
     <p>“刚开始因为太弱吃起来很辛苦，但是听说在蓝调上有名气的厨师，为了寻求帮助大幅度改善了。”</p>
     <p>嗯？梅赛德斯想。</p>
     <p>这个时刻有什么讨厌的预感。</p>
-    <p>布鲁特是伯恩哈特治理的城市的名字，是琉迪亚和马吉特生活的地方。</p>
+    <p>布鲁特是伯恩哈特治理的城市的名字，是琉迪亚和玛吉特生活的地方。</p>
     <p>并且，要说在那里一号的厨师，想起的只有一人。</p>
     <p>“……难道那个厨师的名字不是舒夫吗？”</p>
     <p>“恩，是啊。这么说来，舒夫君是格鲁内瓦尔特家的厨师长吧”</p>
