--- a/OEBPS/Text/c043.xhtml
+++ b/OEBPS/Text/c043.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>43. 丢失</h1>
-    <p>[[丢失]]147l</p>
+    <p><span class="textmissing">[[丢失]]147l</span></p>
     
     <p class="divline"></p>
     <p>狩猎节前还有一个活动。</p>
@@ -19,7 +19,7 @@
     <p>可是有关这个从开始之前开始梅赛德斯的压倒性胜利显现出来。</p>
     <p>不管怎么说，梅赛德斯上课时捕获的阿修塔尔本来就是不生活在平原上的，为了袭击吉克林德而被送入的凶恶怪物。</p>
     <p>不是能够用学生能够捕获的魔物来对抗的怪物，而是连A级别的求婚者都可能不知不觉的对手。</p>
-    <p>问题是能否熟练使用这样的魔物，那里是遵从本凯和克洛的梅赛德斯。</p>
+    <p>问题是能否熟练使用这样的魔物，那里是遵从本凯和小黑的梅赛德斯。</p>
     <p>没有任何问题，阿修塔尔通过停在梅赛德斯的手臂上显示出自己的忠诚。</p>
     <p>顺便一提，阿修塔尔的重量超过300公斤。</p>
     <p>“那么首先，梅赛德斯和汤姆。向前出去！”</p>
@@ -36,12 +36,12 @@
     <p>阿修塔尔的视线是完全观察全人类·艾希的猎人的眼。不是看敌人的眼睛。</p>
     <p>是的，这对阿修塔尔来说已经不是战斗了。</p>
     <p>在美食面前……只是如此而已！</p>
-    <p>“不要吃复印件。那不是食物”</p>
+    <p>“不要吃皮可。那不是食物”</p>
     <p>“比……”</p>
     <p>（复制！？）</p>
     <p>梅赛德斯说出来的名字太不合适，所有人都会在内心深处吐槽。</p>
     <p>不合适。不适合死去。</p>
-    <p>确实，那个图体没有复印件吧。</p>
+    <p>确实，那个图体没有皮可吧。</p>
     <p>被命名为复印的Asutaru，因为被托付了而悲伤地叫了起来。</p>
     <p>“那么就开始……”</p>
     <p>“我要弃权！”</p>
