--- a/OEBPS/Text/c046.xhtml
+++ b/OEBPS/Text/c046.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>46. 丢失</h1>
-    <p>[[丢失]]156l</p>
+    <p><span class="textmissing">[[丢失]]156l</span></p>
     
     <p>“看来你们有必要进行再教育呢。”</p>
     <p>“好棒！？饶了我吧！”</p>
