--- a/OEBPS/Text/c049.xhtml
+++ b/OEBPS/Text/c049.xhtml
@@ -96,7 +96,7 @@
     <p>总之，对贵族来说没有趣,不过，从普通市民来看利大多少。</p>
     <p>虽然统治者更替了，但市民们一点都不在意。只要能保护我们的生活，谁做王都行。</p>
     <p>“兽共在先前的大战中学习，试图实现种族统一。</p>
-    <p>鸟公们也踏踏实实地朝向统一开始行动，到埃尔菲已经统一国家化也不错。</p>
+    <p>鸟公们也踏踏实实地朝向统一开始行动，到精灵已经统一国家化也不错。</p>
     <p>现状是只有吸血鬼我们出晚了。</p>
     <p>如果是你的话应该明白吧。接下来如果种族间发生世界大战的话……输的是我们”</p>
     <p>汉娜对古斯塔夫的话不能马上回答。</p>
