--- a/OEBPS/Text/c054.xhtml
+++ b/OEBPS/Text/c054.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>54.  那个迷宫的主人</h1>
+    <h1>54. 那个迷宫的主人</h1>
     <p>“咕噜咕噜！告诉你一个好事吧！</p>
     <p>在迷宫中出现的魔物所装备的武器是可以夺走的！没有钱买装备的时候很方便！</p>
     <p>说了废话！去死吧！”</p>
@@ -31,8 +31,8 @@
     <p>“好的。有的话就那么办”</p>
     <p>“也就是说，在这个迷宫里设置了陷阱的老板……或者，在吗？”</p>
     <p>“变成那样”</p>
-    <p>在Plactis迷宫里有在Shutalk迷宫里没有的东西。那才是陷阱。</p>
-    <p>施塔克迷宫是任何人都无法触及到的迷宫吧。所以没有准备陷阱什么的。也就是说，在得到梅赛德斯的状态下保持了初始设定。</p>
+    <p>在Plactis迷宫里有在斯塔克迷宫里没有的东西。那才是陷阱。</p>
+    <p>斯塔克迷宫是任何人都无法触及到的迷宫吧。所以没有准备陷阱什么的。也就是说，在得到梅赛德斯的状态下保持了初始设定。</p>
     <p>另一方面，这个实用地牢不是初始设定。</p>
     <p>很明显，是被其他主人加工过的迷宫。</p>
     <p>问题是，那个主人已经是过去的人物，死后迷宫就被解放了吗……还是说还有老板呢？</p>
