--- a/OEBPS/Text/c055.xhtml
+++ b/OEBPS/Text/c055.xhtml
@@ -33,7 +33,7 @@
     <p>史莱姆系不耐火焰。幻想的常识。</p>
     <p>「喵—！我是燃烧的果冻哦！”</p>
     <p>“算了，回去吧。”</p>
-    <p>如果就这样放任不管的话，果冻会死，所以回到了蓝天蓼蓝老板的钥匙，克洛替换着飞了出去。</p>
+    <p>如果就这样放任不管的话，果冻会死，所以回到了蓝天蓼蓝老板的钥匙，小黑替换着飞了出去。</p>
     <p>用眼睛也止不住的敏捷咬小龙的脚，使之下降。</p>
     <p>接着，本凯挥下大剑，斩断了尾巴。</p>
     <p>小龙也马上站起来,不过，此次在那里梅赛德斯自己跳入了。</p>
