--- a/OEBPS/Text/c057.xhtml
+++ b/OEBPS/Text/c057.xhtml
@@ -60,7 +60,7 @@
     <p>理由自己知道。因为魔力不能像重力训练那样进行“ZURU”。</p>
     <p>如果对自己施加重力，肌肉力量上升，血操作术也强化加速性地变得强。</p>
     <p>但是，因此而成长的只是身体能力上的东西。不会影响魔力。</p>
-    <p>也就是说，只有等级3这个数字才是不依赖ZULL的MERSEDES本来的素质。</p>
+    <p>也就是说，只有等级3这个数字才是不依赖ZULL的梅赛德斯本来的素质。</p>
     <p>但是，如果因为自己的资质而放弃了伸长的话，那么就会停下脚步。</p>
     <p>如果太晚的话，晚点也没关系。即使如此，只要继续走下去，就能向前进。</p>
     <p>不停止的事。继续前进。只有那个是现在能做到的事。</p>
