--- a/OEBPS/Text/c058.xhtml
+++ b/OEBPS/Text/c058.xhtml
@@ -10,24 +10,24 @@
 </head>
 
 <body>
-    <h1>58.  二年级开始</h1>
+    <h1>58. 二年级开始</h1>
     <p>在哥布林黑克斯的指导下，开始了积蓄魔法力的训练的梅赛德斯,不过，成果还是没马上出来。</p>
     <p>作为梅赛德斯，因为想保留轻便，不采取像哥布林黑克斯那样增加自己体积的方法，和汉娜一样只存玛娜的方法。</p>
     <p>虽然依然没有对派生属性觉醒的迹象，但还是只能一边提高以前的重力魔法和风魔法的练度一边等待吧。</p>
     <p>就这样度过的假期一转眼就结束了，新的一年开始了。</p>
-    <p>梅赛德斯进入二年级，菲利克斯升入六年级，又作为新生从今年开始马吉特和莫尼卡将上学。</p>
+    <p>梅赛德斯进入二年级，菲利克斯升入六年级，又作为新生从今年开始玛吉特和莫尼卡将上学。</p>
     <p>戈特弗里特是……很遗憾，年龄太差了。</p>
     <p>原本比梅赛德斯年长的他，现在即使进入高年级的班级也不会跟着上课。</p>
     <p>很伤心，只有他在家里学习。</p>
     <p>其实这一家中最不走运的也许就是他。</p>
-    <p>入学考试的结果，莫尼卡去了A班。马吉特已经决定进入C班。</p>
-    <p>马吉特在座学上名列第一，但其结果并没有发挥出实际技能。</p>
+    <p>入学考试的结果，莫尼卡去了A班。玛吉特已经决定进入C班。</p>
+    <p>玛吉特在座学上名列第一，但其结果并没有发挥出实际技能。</p>
     <p>也许还是不适合做荒唐事。</p>
     <p>虽说如此，入学是入学。晚点从现在开始挽回就行了吧。</p>
     <p class="divline"></p>
     <p>“下个月的实技将去远征邻镇。</p>
     <p>将来，要有远行的机会是不会再来的。</p>
-    <p>如果成为saker的话，我会去探索秘境的。在迷宫里也要注意食物和体力的分配。</p>
+    <p>如果成为saker的话，会去探索秘境的。在迷宫里也要注意食物和体力的分配。</p>
     <p>如果成为领主，作为义务有时会去讨伐野盗和魔物。</p>
     <p>商人等都是命根子。好几次从街上走到街上。</p>
     <p>因此，这次，请通过我们决定的路线到邻镇去。</p>
