--- a/OEBPS/Text/c065.xhtml
+++ b/OEBPS/Text/c065.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>65. 丢失</h1>
-    <p>[[丢失]]201</p>
+    <p><span class="textmissing">[[丢失]]201</span></p>
     
     
     <p>但是梅赛德斯知道这是什么。用法也知道。</p>
