--- a/OEBPS/Text/c071.xhtml
+++ b/OEBPS/Text/c071.xhtml
@@ -12,10 +12,10 @@
 <body>
     <h1>71.  歪曲的国家</h1>
     <p>谁最先将有气势的前进表现为“破风”呢？</p>
-    <p>一边想着那样的事，梅赛德斯一边从复印件上俯视着地面。</p>
-    <p>复印件现在的速度大约是100公里的时速。</p>
+    <p>一边想着那样的事，梅赛德斯一边从皮可上俯视着地面。</p>
+    <p>皮可现在的速度大约是100公里的时速。</p>
     <p>虽然还不及梅赛德斯全力移动，但绝不是慢。</p>
-    <p>因为是梅赛德斯，所以不能一直全力以赴的运动，也会疲劳，所以在空中的移动还是用复印件的好。</p>
+    <p>因为是梅赛德斯，所以不能一直全力以赴的运动，也会疲劳，所以在空中的移动还是用皮可的好。</p>
     <p>一边享受吹拂脸颊的风的感觉，一边用手轻轻整理蓬乱的头发。</p>
     <p>虽说是刮风，但却觉得很奇怪，在快速移动的时候，感觉就像在自己身上刮风一样。</p>
     <p>（这样从天上看，可以清楚地知道文明还是没有发达。）</p>
@@ -38,13 +38,13 @@
     <p>在这个世界上能飞的魔物并不稀奇。</p>
     <p>那么，与防壁相比看起来没有防备的天空，也应该看成是采取了某种对策吧。</p>
     <p>是魔法，还是别的技术……不管怎样，都不是太无意义的顶撞。</p>
-    <p>首先作为旅行的标志进入比较好吧。这样想着，梅赛德斯把复印件放到了离城市稍远的地方。</p>
+    <p>首先作为旅行的标志进入比较好吧。这样想着，梅赛德斯把皮可放到了离城市稍远的地方。</p>
     <p>然后徒步走近门口，站在那里的两个门卫交叉着枪挡住门前。</p>
     <p>两个都是男吸血鬼。</p>
     <p>“出示身份证”</p>
     <p>就这样，从口袋里拿出saker给你看。</p>
     <p>真不愧是格鲁内瓦特的**。</p>
 
-    <p>[[丢失]]216</p>
+    <p><span class="textmissing">[[丢失]]216</span></p>
 
 </body>
