--- a/OEBPS/Text/c072.xhtml
+++ b/OEBPS/Text/c072.xhtml
@@ -12,7 +12,7 @@
 <body>
     <h1>72. 丢失</h1>
     
-    <p>[[丢失]]217</p>
+    <p><span class="textmissing">[[丢失]]217</span></p>
     
     <p>从平时开始，就绅士地约束自己不要对女性投以卑鄙的目光，但没想到自己竟然会被女性投以卑鄙的目光。</p>
     <p>菲利克斯男人的自尊心已经破烂不堪了。</p>
