--- a/OEBPS/Text/c075.xhtml
+++ b/OEBPS/Text/c075.xhtml
@@ -76,8 +76,8 @@
     <p>那样的话，破坏那个联合。</p>
     <p>随着梅赛德斯的号令，被封印在哈尔巴德的魔物们出现了。</p>
     <p>全身铠甲的，总觉得是隔了好久的出场感觉的本凯。</p>
-    <p>被黑色体毛覆盖的大狼，克洛。</p>
-    <p>在天花板滑雪板上飞的是复印件。</p>
+    <p>被黑色体毛覆盖的大狼，小黑。</p>
+    <p>在天花板滑雪板上飞的是皮可。</p>
     <p>舒夫右手拿着菜刀，左手拿着平底锅。再也不干这家伙了。</p>
     <p>对非常生气恶心的warui·果冻，作为那个强化型的totemowarui·果冻。</p>
     <p>其他对蟑螂Oku，后方支援的蟑螂hekusa。</p>
@@ -113,10 +113,10 @@
     <p>“按住他！”</p>
     <p>另一方面，京濑智美·奥克他们取得联合确实打倒了魔物。</p>
     <p>还是这边优秀，怎么办。</p>
-    <p>“克洛！”</p>
+    <p>“小黑！”</p>
     <p>“韩元！”</p>
-    <p>响应梅赛德斯的号令，克洛跑了过去。</p>
-    <p>在满是奇怪的魔物中只有克洛被治愈了。</p>
+    <p>响应梅赛德斯的号令，小黑跑了过去。</p>
+    <p>在满是奇怪的魔物中只有小黑被治愈了。</p>
     <p>跳上他的背，一跳梅赛德斯向贝克里克斯接近。</p>
     <p>把贝阿朵列克斯为了自保从旁边飞出来的植物甪哈尔巴德砍掉。</p>
     <p>贝阿朵列克斯也用铁扇应战，膂力方面胜。</p>
