--- a/OEBPS/Text/c078.xhtml
+++ b/OEBPS/Text/c078.xhtml
@@ -103,7 +103,7 @@
     <p>不仅仅是外表。性格、记忆、人格和思考都与贝克列克斯一致。</p>
     <p>即使有通过指纹、声纹、视网膜等进行确认的技术，也只能得出结论是真货。</p>
     <p>但是，她却……至少，到昨天为止不是被罗杰们称为陛下的人物。</p>
-    <p>真正的贝阿朵莉克斯被收藏在那个时候，乘着复印机的背飞的梅赛德斯的蓝色艾森中。</p>
+    <p>真正的贝阿朵莉克斯被收藏在那个时候，乘着皮可的背飞的梅赛德斯的蓝色艾森中。</p>
     <p>旁边有汉娜，菲利克斯的脚像猎物一样被抓住。</p>
     <p>结论是，城中的贝阿朵里克斯是影武者。</p>
     <p>但他并不只是影武者。那位也是真正的贝阿朵列克斯本人。</p>
