--- a/OEBPS/Text/c080.xhtml
+++ b/OEBPS/Text/c080.xhtml
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <h1>80. 丢失</h1>
+    <h1>80. 新的魔法</h1>
+    <p class="textmissing">[[丢失]]</p>
+
     <p>“……我问你一个问题，需要自报姓名吗？</p>
     <p>“不，不做也可以。心情很好”</p>
     <p>“这样啊”</p>
@@ -19,18 +21,18 @@
     <p>梅赛德斯准备好了武器，以便甩开它。</p>
     <p>“我走了！”</p>
     <p>梅赛德斯踢地跳跃，与此相应的本凯他们也散开了。</p>
-    <p>梅赛德斯的实力比上次的历史战有所提高，加上这次史蒂夫和拷贝。</p>
+    <p>梅赛德斯的实力比上次的历史战有所提高，加上这次史蒂夫和皮可。</p>
     <p>而且这次是突如其来的地牢攻击，与老板对战。</p>
     <p>也就是说，比起上次的挑战，以压倒性的有利条件开始了战斗。</p>
     <p>活用这个优势，一口气干完……帕拉迪斯若无其事地用胳膊防住了由于那个气势被放出了的梅赛德斯的斩击。</p>
     <p>“……！”</p>
     <p>“好温暖啊”</p>
     <p>用胳膊的一挥弹出了梅赛德斯，更加手臂与枝分离成为几个触手袭击了全体人员。</p>
-    <p>复印件和克洛要敏捷地避开，本凯要坚固防御。</p>
+    <p>皮可和小黑要敏捷地避开，本凯要坚固防御。</p>
     <p>舒夫深深地吸了一口气，从口中吐出火焰，烧掉了触手。</p>
     <p>什么，如果想做像恶魔一样的攻击不是也能吗。</p>
     <p>“比！”</p>
-    <p>复印机将翅膀变成钢，从急速下降开始进行撞击。</p>
+    <p>皮可将翅膀变成钢，从急速下降开始进行撞击。</p>
     <p>这一击使帕拉迪斯的肩膀大幅度裂开，接着本凯放出了弩进行牵制。</p>
     <p>梅赛德斯跳入那里，大幅度地挥舞着哈尔巴德。</p>
     <p>“重力10倍！”</p>
@@ -46,7 +48,7 @@
     <p>这，看起来不容易……。</p>
     <p>这样想着，梅赛德斯重新振作起来了。</p>
     
-    <p>[[丢失]]234</p>
+    <p><span class="textmissing">[[丢失]]234</span></p>
     
     <p>这样下去的话，还不能完全拉出合奏曲。</p>
     <p>那么接下来就到夺走抵抗力为止。</p>
