--- a/OEBPS/Text/c081.xhtml
+++ b/OEBPS/Text/c081.xhtml
@@ -67,7 +67,7 @@
     <p>话说ziven为什么选择了那样的姿态呢？</p>
     <p>“这样我就成了两个迷宫的老板。</p>
     <p>也就是说，以前所说的‘权限’也增加了，你应该也能说很多了吧？”</p>
-    <p>《耶稣，主人。但是在这里不能说话”</p>
+    <p>《YES，主人。但是在这里不能说话”</p>
     <p>以前，梅赛德斯从茨维尔夫那里听说过构成这个世界的东西。</p>
     <p>在这个世界上，纳米机器存在于大气中，甚至连自己和魔物都能用纳米机器做出来。</p>
     <p>但是，在想问纳米机器是什么的时候，泽维尔的话被中断了。</p>
