--- a/OEBPS/Text/c082.xhtml
+++ b/OEBPS/Text/c082.xhtml
@@ -97,7 +97,7 @@
     <p>只是，只有冲刺。</p>
     <p>“好吧。我称霸迷宫。</p>
     <p>到最后来吧，图威尔夫”</p>
-    <p>“耶稣，我的主人”</p>
+    <p>“YES，我的主人”</p>
     <p>听到对图威尔夫的回答，梅赛德斯将danjon变成了钥匙后收起来。</p>
     <p>这个迷宫有两个。</p>
     <p>如果要确保这个以上的迷宫的话，要到别的国家去吗……或者，只有打倒实践地牢的持有者的二选择。</p>
