--- a/OEBPS/Text/c083.xhtml
+++ b/OEBPS/Text/c083.xhtml
@@ -15,7 +15,7 @@
     <p>她的随年纪增长比较大的胸部现在每次走路都会摇晃，胸前像挂着两个哈密瓜。 每当她走路的时候，周围的男生都会目不转睛地盯着她。 虽然觉得那样摇晃也无所谓，但是作为中世纪文明的吸血鬼的国家里却没有胸罩。 虽然有支撑着胸部的内衣，但是没有现代日本那么坚固。</p>
     <p>因为基本上没有吸血鬼的胸部下垂的事。 库珀韧带结实地能着，即使切断也再生了。 所以今天吉克林德的胸部也摇摆不定。 菲利克斯二十岁进入不老期，几乎在肉体全盛期被固定下来。作为男人，这是理想的不老期吧。</p>
     <p>因为有稍微与弗雷德里克相似的部分不老期访问的可能性也担心,不过，好象平安地年轻人的那样时间停下了。 现在学园毕业，在格鲁内瓦尔特宅邸努力学习，但仍无法看清伯恩哈特。 但是，女帝贝阿朵里克斯（影武者）把她当作朋友看待，或许是因为她认为伯恩哈特也有利用价值，至今仍未被抛弃。</p>
-    <p>到了十六岁的莫尼卡和马尔吉特在学园入学后顺利地提高了成绩，从外表上看，她已经成长为期待将来的美女。 以前战战兢兢的马吉特成长为文静的大小姐，在男生中躲藏的粉丝很多。 虽然没有吉克林德那么大，但是胸很大也是受欢迎的理由之一吧。</p>
+    <p>到了十六岁的莫尼卡和马尔吉特在学园入学后顺利地提高了成绩，从外表上看，她已经成长为期待将来的美女。 以前战战兢兢的玛吉特成长为文静的大小姐，在男生中躲藏的粉丝很多。 虽然没有吉克林德那么大，但是胸很大也是受欢迎的理由之一吧。</p>
     <p>莫尼卡是苗条系的美人，从以前开始就不变的纵横卷是魅力点。 现在比梅赛德斯还大的两人，至今仍将梅赛德斯当作姐姐来仰慕。 然后梅赛德斯——没有变化。 没有变化。一切都没变。 一直以来就是不变的身材了。 虽然有讨厌的预感，但是完全中了。</p>
     <p>梅赛德斯十二岁进入了不老期，从那以后可以说完全没有改变外表。 现在在班里和汉娜并排着，形成只有两个孩子交织在一起的悲哀的画面。 汉娜是《伙伴吧，梅露！》虽然这么说，但是比以前更亲密了，好感度上升了。 好歹被看作是同族。</p>
     <p>基本上所谓生物，大而重的一方强。 但是无论多么期望身体还是不能成长，梅赛德斯只能诅咒自己。 与此同时，没有了弗雷德里克的学校，并没有关校，什么事也没有发生一样今天也继续着。 只是其他老师继承了校长的宝座，什么也没有改变。</p>
