--- a/OEBPS/Text/c087.xhtml
+++ b/OEBPS/Text/c087.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>87. 丢失</h1>
-    <p>[[丢失]]252</p>
+    <p><span class="textmissing">[[丢失]]252</span></p>
     
     <p>她的确是个好人，很温柔的人物。</p>
     <p>但是好人不能等于下正确的判断。</p>
