--- a/OEBPS/Text/c089.xhtml
+++ b/OEBPS/Text/c089.xhtml
@@ -11,8 +11,8 @@
 
 <body>
     <h1>89. 丢失</h1>
-    <p>[[丢失]]257</p>
+    <p><span class="textmissing">[[丢失]]257</span></p>
     
-    <p>[[丢失]]258</p>
+    <p><span class="textmissing">[[丢失]]258</span></p>
     
 </body>
