--- a/OEBPS/Text/c091.xhtml
+++ b/OEBPS/Text/c091.xhtml
@@ -12,8 +12,8 @@
 <body>
     <h1>91. 丢失</h1>
 
-    <p>[[丢失]]262</p>
-    <p>[[丢失]]263</p>
+    <p><span class="textmissing">[[丢失]]262</span></p>
+    <p><span class="textmissing">[[丢失]]263</span></p>
     
     
     <p>真是个忙得不可开交的对手。</p>
