--- a/OEBPS/Text/c100.xhtml
+++ b/OEBPS/Text/c100.xhtml
@@ -66,7 +66,7 @@
     <p>袭击王都也好，人质作战也罢，都是你自己想出来的，你装作不知道的样子，把我当成恶徒，只做自己好人，还想得救吗！”</p>
     <p>“什……你在说什么，罗勒……？”</p>
     <p>看来罗勒已经改变了作战计划，将罪责推给了马克斯。</p>
-    <p>虽然不是被这种萝卜演技所欺骗的梅赛德斯和汉娜……但是，讽刺的是，由于Mersedes对麦克斯的Heito集中活动，周围的人比较相信。</p>
+    <p>虽然不是被这种萝卜演技所欺骗的梅赛德斯和汉娜……但是，讽刺的是，由于梅赛德斯对麦克斯的Heito集中活动，周围的人比较相信。</p>
     <p>即便如此，对于欺骗《奥尔克斯》之名的马克斯的心理证据也是最糟糕的一句话。</p>
     <p>这并不是无知的孩子就能解决的问题，吸血鬼的外表原本就不可靠。</p>
     <p>伪装成无知的孩子的大人的可能性也很大。</p>
