--- a/OEBPS/Text/c101.xhtml
+++ b/OEBPS/Text/c101.xhtml
@@ -19,7 +19,7 @@
     <p>梅赛德斯姑且是来自日本的转生者,不过，那个附近的砍伐已经弄完了。</p>
     <p>所以就算麦克斯被处刑，也不会因此而动心吧。</p>
     <p>既可怜又同情。但是仅此而已。</p>
-    <p>……突然想到。这不是马克斯，是认识的对象……譬如是妹妹的马吉特，自己怎样想？</p>
+    <p>……突然想到。这不是马克斯，是认识的对象……譬如是妹妹的玛吉特，自己怎样想？</p>
     <p>即使是妹妹，也只是“可怜啊”就解决了吧。</p>
     <p>不管怎么说，最近人情味比前世更加浓厚……相反，感觉心越来越冷了。</p>
     <p>麦克斯所持有的地牢，与过去愚蠢的国王的罪一起出处变得清楚，那个继承权在菲利克斯·格鲁内瓦尔特的事也被明确了。</p>
@@ -51,14 +51,14 @@
     <p>于是，藏在头发里的耳朵露了出来，梅赛德斯也皱起了眉头。</p>
     <p>……尖耳朵。</p>
     <p>那是吸血鬼没有的身体特征。</p>
-    <p>“埃尔菲卡”</p>
+    <p>“精灵吗”</p>
     <p>“嗯。但是精灵是世界上人数最多的人种，完全不知道是哪里的精灵。</p>
-    <p>照现在这样下去，到底是他一个人的暴走呢，还是埃尔菲方面的策略呢？</p>
+    <p>照现在这样下去，到底是他一个人的暴走呢，还是精灵方面的策略呢？</p>
     <p>“杀了的话不好吃吗？”</p>
     <p>“虽说是结果论，但也许是应该活捉来泄露情报的吧。</p>
     <p>不过嘛，比起活着逃跑要好得多，那个场面连我也杀了”</p>
     <p>梅赛德斯轻而易举地收拾了罗勒，因为他认为即使从尸体中也能得到情报。</p>
-    <p>但是如果是埃尔菲的话，故事就完全不同了。</p>
+    <p>但是如果是精灵的话，故事就完全不同了。</p>
     <p>尸体无口……那里的最好办法不是杀死罗勒，而是活捉之后拷问什么都做榨取信息的事。</p>
     <p>虽说如此，做了也没办法。汉娜也说了，最糟糕的是在那个场合被罗勒逃跑了。</p>
     <p>虽然不是最佳，但却是最好的。现在只能接受那个。</p>
