--- a/OEBPS/Text/c102.xhtml
+++ b/OEBPS/Text/c102.xhtml
@@ -73,8 +73,8 @@
     <p>“但是位置上卢米埃尔就在附近，而且没有接触任何一个国境。</p>
     <p>因此，在处理上不是哪个国家的东西，完全是自由的迷宫”</p>
     <p>一边听古斯塔夫的说明，梅赛德斯从记忆中拉出了鲁米埃尔这个名字。</p>
-    <p>确实是上课时听到的，离埃尔菲最近的国家。</p>
-    <p>当然说很近也有距离。只是在埃尔菲的国家中离得最近而已。</p>
+    <p>确实是上课时听到的，离精灵最近的国家。</p>
+    <p>当然说很近也有距离。只是在精灵的国家中离得最近而已。</p>
     <p>这次出现的地牢正好是在那个国家和奥尔克斯之间出现的。</p>
     <p>如果走出国境内，那将被当作斯塔克迷宫一样被当作该国的迷宫来对待。</p>
     <p>但是，这次的情况是无法归哪个国家的所有。</p>
@@ -82,9 +82,9 @@
     <p>“于是立刻两国共同在附近建立村落，开始攻略迷宫。</p>
     <p>海卡行会支部也计划近期建成”</p>
     <p>虽然觉得这样没关系吗，但是现在吸血鬼和精灵的关系并不是那么坏。</p>
-    <p>西米勒等从过去的战争的经验到现在敌视吸血鬼的人也多，据说实际背面推进着战争的准备,不过，埃尔菲不听那样的传言。</p>
+    <p>西米勒等从过去的战争的经验到现在敌视吸血鬼的人也多，据说实际背面推进着战争的准备,不过，精灵不听那样的传言。</p>
     <p>就在最近，一个叫罗勒的人刚刚在这边引起骚动，那个可能是个人的暴走，所以不能说什么吧。</p>
-    <p>至少埃尔菲方面回答着关于罗勒什么都不知道。</p>
+    <p>至少精灵方面回答着关于罗勒什么都不知道。</p>
     <p>“在那里……从这里开始是本题，从这个学校也决定召集几名志愿者进行远征”</p>
     <p>古斯塔夫的这句话使教室沸腾了。</p>
     <p>那是理所当然的事，拥有迷宫这个巨大的力量的事如果出生在贵族里(上)谁都一次做梦的事。</p>
@@ -95,7 +95,7 @@
     <p>“但是理所当然的，没有学习Elfe语的人从选拔中去除。</p>
     <p>如果不能对话的话那就不像话了”</p>
     <p>听了这话，一半以上的男子露出了人世末日般的表情，意气消沉。</p>
-    <p>看来他们没有学会埃尔菲语。</p>
+    <p>看来他们没有学会精灵语。</p>
     <p>不是必修科目，没办法。</p>
     <p>“给所有人分发纸张。希望者请在这纸上写下希望的内容，上课结束后提交上来。</p>
     <p>那么，今天开始上课吧”</p>
