--- a/OEBPS/Text/c104.xhtml
+++ b/OEBPS/Text/c104.xhtml
@@ -19,7 +19,7 @@
     <p>梅赛德斯来到行会的理由是为了采取单独行动。 这次，学校承认了作为特别学生有几个人来到这个村落，那里还是学生。有义务组队进行团体行动。 但是，如果像梅赛德斯那样，在已经积累了实际业绩的基础上接受行会的委托的话，就不是学生了，也可以作为救援车来行动。</p>
     <p>（只有吸血鬼啊……当然了。） 这个建筑物是精灵和吸血鬼共用的，但现在是深夜。 作为吸血鬼生活着的话快要忘记了,不过，所谓夜晚本来不是应该活动的时间带。 所以行会中只有吸血鬼，看不到精灵的身影。 反过来如果这个成为正午，这次吸血鬼的身姿消失成为只elfe吧。</p>
     <p>如果明早和傍晚的话，说不定哪一个种族也在。 仔细一看，接待处边站着一个精灵的男人，看起来很丢脸。 这个时间段从迷宫回来的精灵也不是没有来行会的可能性，为了那个时候被留下。 “那么……你适当地接受几个委托？” 首先，梅赛德斯前往论坛，浏览了张贴在那里的委托书。</p>
-    <p>委托既有行会出示的东西，也有同样的标签出示的情况。 想要收集到手很麻烦的魔物素材的时候，saker-但是向其他的纸箱提出请求也不是什么稀奇的事情。 那倒不错……梅赛德斯看到委托书中的一本后，发现了一件奇怪的事情。 文字和自己平时使用的不一样，是用埃尔菲语写的。</p>
+    <p>委托既有行会出示的东西，也有同样的标签出示的情况。 想要收集到手很麻烦的魔物素材的时候，saker-但是向其他的纸箱提出请求也不是什么稀奇的事情。 那倒不错……梅赛德斯看到委托书中的一本后，发现了一件奇怪的事情。 文字和自己平时使用的不一样，是用精灵语写的。</p>
     <p>【皮琼斯捕获请求】</p>
     <p>委托人：卡尔</p>
     <p>报酬金额：5000条规则</p>
@@ -33,7 +33,7 @@
     <p>“是的。他们把格伦萨迷宫叫做天空迷宫。我不懂你的意思。</p>
     <p>所谓皮琼，是大型的鸽子的魔物。首先发现的是精灵，所以就取了这个名字”</p>
     <p>原来如此，我想。</p>
-    <p>应该需要学习埃尔菲语。</p>
+    <p>应该需要学习精灵语。</p>
     <p>如果语言不同，除了人名等固有名词以外，几乎是不同的。</p>
     <p>在日语中，“日本”在英语中也被称为“日本”。</p>
     <p>有关魔物的名字，倒不如说有能理解的部分。</p>
