--- a/OEBPS/Text/c105.xhtml
+++ b/OEBPS/Text/c105.xhtml
@@ -31,7 +31,7 @@
     <p>“啊啊啊啊啊啊啊啊啊啊～～～！”</p>
     <p>一想到这些，同业者铁甲的吸血鬼就从上面发出了无情的悲鸣，摔了下来。</p>
     <p>就这样，他通过梅赛德斯的面前，目光交汇的瞬间，梅赛德斯仿佛在寻求帮助，但梅赛德斯却无视了它。</p>
-    <p>如果拿出复印件也许来得及，但是这个时机根本没有时间去帮忙。</p>
+    <p>如果拿出皮可也许来得及，但是这个时机根本没有时间去帮忙。</p>
     <p>我对落榜后会变成什么样也很感兴趣。</p>
     <p>就这样，纸箱的悲鸣渐渐远去，听不见了。</p>
     <p>看来下面相当深。</p>
