--- a/OEBPS/Text/c106.xhtml
+++ b/OEBPS/Text/c106.xhtml
@@ -10,29 +10,29 @@
 </head>
 
 <body>
-    <h1>106.  扯后腿 “出来，拷贝”</h1>
-    <p>如果决定了以上作为目标，此次使用的魔物当然是能飞翔天空的拷贝。 乘上隔了好久的出场紧张的拷贝，一口气上升了。 这个迷宫的构造是跳过浮游的脚手架，如果能在空中飞的话就能直线向上飞。</p>
+    <h1>106. 扯后腿 “出来，皮可”</h1>
+    <p>如果决定了以上作为目标，此次使用的魔物当然是能飞翔天空的皮可。 乘上隔了好久的出场紧张的皮可，一口气上升了。 这个迷宫的构造是跳过浮游的脚手架，如果能在空中飞的话就能直线向上飞。</p>
     <p>在这一层里除了梅赛德斯以外，没有看到乘坐着可以飞行的魔物的卡片，恐怕这些人早就已经向前迈进了吧。 在那里苦苦挣扎的人们可以说是起跑失败而落后的伙伴。 梅赛德斯不想进入被留下来的一侧，所以悠然地让高度上升。 于是，在高度达到一定程度的时候，注意到了什么正在接近。</p>
     <p>飞来的企鹅发出了鸡一样的叫声，飞到了空中。 那是什么？ 这样想的话从Zuverfu说明进入。 “当地识别名毕琼。鸟形的魔物威胁度为D级。 属性是水属性,不过，从口吐火。 虽然外表是那样的，但是遗传基因是鸭子的伙伴。可是我相信皮琼本身就是乌鸦“</p>
     <p>真是厉害的魔物” 复制件轻易地避开只有突入的地方的魔物的突击，以踢一发无力化做了。 就那样抓住指甲，象确认怎样一样地看梅赛德斯。 “这家伙也接受了捕获的委托，要抓到他吗？” 总之，到底能达成委托就足够了。 把没有意识的皮琼斯收纳在迷宫里，梅赛德斯向更高处走去。</p>
     <p>于是脚下没有了脚手架，那个被认为是终点的地方有门。 打开那个的话又，新的区域等候着。 虽然在天空上是一样的，但这次的脚手架像平均台一样狭窄的道路一直延续着，标语牌们一边取得平衡一边一点点前进着。</p>
     <p>但是，一条道路如果被其他寻呼车追赶的话可能会被推落，现在也有一个人的寻呼机掉落到地狱里。 “好棒~……啊！” 梅赛德斯默默地观察着落下的标语。 于是，贴纸车在落下10米左右的地方消失了。 恐怕已经回到了一层了吧。 这次好像不是一层楼下的空间大。</p>
     <p>尽管如此，还是向下进行了调查，知道了什么都没有之后提高了高度。 这里也没有搭乘魔物的标语牌。 反正还是二层。这大概就是如果飞行的话能够无条件突破的难易度吧。 马上到达下一扇门，向三层移动。 到了三层果然还是和以前不一样。</p>
-    <p>没有乘上魔物的海贼们，即使在狭窄的足场上也毫不犹豫地奔跑，跳跃，并且踢落对手，做为踏板投掷互相拉着对方的后腿。 到了三层之后，终于能看到搭乘着可飞行魔物的标语牌。 乘坐的飞机大体上都是皮琼，但即便如此，停留在这里的还是这层楼层的难易度那么高吧。</p>
+    <p>没有乘上魔物的saker们，即使在狭窄的足场上也毫不犹豫地奔跑，跳跃，并且踢落对手，做为踏板投掷互相拉着对方的后腿。 到了三层之后，终于能看到搭乘着可飞行魔物的标语牌。 乘坐的飞机大体上都是皮琼，但即便如此，停留在这里的还是这层楼层的难易度那么高吧。</p>
     <p>脚下的各个地方都安装着炮台，到处发射炮弹，堵住了纸箱的道路。 如果仔细观察的话，应该有图形之类的，但是从初次见面就很难看穿。 这时，有一辆汽车开着皮琼冲了进去，但是因为无法避开炮弹而遭到了炮弹的袭击，坠落了。 “哇哇~~”</p>
-    <p>目送着尖锐的声音落下的海贼王，梅赛德斯再次看到了炮弹的暴风雨。 虽说是炮弹，但总感觉不像块铁一样爆炸。 话虽如此，高速飞来的铁块仅仅是凶器，就和普通的生命息息相关。 但是对于梅赛德斯来说并不是那么可怕。 手持哈尔巴德突击，一边切开飞来的炮弹一边强行突进。</p>
+    <p>目送着尖锐的声音落下的saker，梅赛德斯再次看到了炮弹的暴风雨。 虽说是炮弹，但总感觉不像块铁一样爆炸。 话虽如此，高速飞来的铁块仅仅是凶器，就和普通的生命息息相关。 但是对于梅赛德斯来说并不是那么可怕。 手持哈尔巴德突击，一边切开飞来的炮弹一边强行突进。</p>
     <p>于是，在梅赛德斯通过后打开的空间里，我先和其他的saker们也跳了进去，赶紧想办法突破下一个炮弹到来。 但是由于互相阻碍无法顺利进行，最后全体人员关系很好地成为炮弹的饵食掉下了。 只要炮弹脱落，后面就和平了，很快就能看到门了，所以移动到了四层楼。</p>
     <p>到了四阶层，几乎没有徒步走来的标语牌。</p>
     <p>好像大部分都搭乘着可以飞行的魔物努力着。</p>
     <p>其中有几个人发现了耳朵尖的奢华的saker。</p>
     <p>不论男女都很秀丽，身体纤细。</p>
-    <p>恐怕那是埃尔菲吧。时间上现在是吸血鬼的时间，恐怕从早上或白天开始就一直在迷宫里粘着。</p>
-    <p>埃尔菲没有像吸血鬼那样杂技的动作，踏实地一点点提高着高度。</p>
+    <p>恐怕那是精灵吧。时间上现在是吸血鬼的时间，恐怕从早上或白天开始就一直在迷宫里粘着。</p>
+    <p>精灵没有像吸血鬼那样杂技的动作，踏实地一点点提高着高度。</p>
     <p>另一方面，吸血鬼们不断地向我方提高高度，像有趣一样地挂在那个前方等候着的圈套。</p>
     <p>看来四阶层达到某种程度以上的高度的话，就会产生龙卷风那样的风，从而使入侵者落下。</p>
     <p>精灵不明白那个攻略法停滞不前,不过，吸血鬼不管突入被丢落。</p>
     <p>梅赛德斯首先向下探索，明白了什么都没有之后向上方目标。</p>
-    <p>龙卷风向上当然会发生，但是复印机使翅膀硬质化，像子弹一样突击。</p>
+    <p>龙卷风向上当然会发生，但是皮可使翅膀硬质化，像子弹一样突击。</p>
     <p>然后不顾风的干扰勇往直前，再向上飞去。</p>
     <p>很遗憾，这是等级D怪物皮琼和等级B怪物复制的差别。</p>
     <p>这是其他标签无法模仿的突破方法吧。</p>
@@ -74,6 +74,6 @@
     <p>把碍事的家伙全都打掉先走吧」</p>
     <p>在这里小争执也得不到进展。</p>
     <p>那么，只有排除所有阻碍者突破。</p>
-    <p>梅赛德斯下定决心，开始在哈尔巴德击落其他海贼们。</p>
+    <p>梅赛德斯下定决心，开始在哈尔巴德击落其他saker们。</p>
     
 </body>
