--- a/OEBPS/Text/c107.xhtml
+++ b/OEBPS/Text/c107.xhtml
@@ -52,13 +52,13 @@
     <p>假设水魔法的使用者没有道具想要飞的话，双手就会堵塞，必须尽可能的输出，魔力也会渐渐减少。</p>
     <p>在这一点上，她使用的那双手是自由的。</p>
     <p>而且如果改变炮门的方向就那样转为攻击的事也是可能的吧。</p>
-    <p>一想到埃尔菲就是制造那种道具的种族吗，警戒度就增加了一点。</p>
+    <p>一想到精灵就是制造那种道具的种族吗，警戒度就增加了一点。</p>
     <p>“哼，你明明是吸血鬼，你不明白嘛。</p>
     <p>哎呀，我的时代要来了吗？这个大天才Resly的时代要来了吗？”</p>
-    <p>“摔跤手？”</p>
-    <p>“摔跤！虽然不太明白，但是讨厌那个声音！”</p>
-    <p>梅赛德斯一瞬间想起了贝尔克罗的超人摔跤手的身影，但很快就从她的思考中消失了。</p>
-    <p>看来她的名字叫雷斯利。</p>
+    <p>“莱斯利？”</p>
+    <p>“莱斯利！虽然不太明白，但是讨厌那个声音！”</p>
+    <p>梅赛德斯一瞬间想起了贝尔克罗的超人莱斯利的身影，但很快就从她的思考中消失了。</p>
+    <p>看来她的名字叫莱斯利。</p>
     <p>“那是自己做的吗？”</p>
     <p>「是啊。把一个一个什么也没有的东西组合起来加工，成为一个优秀的工具。那才是神的御业，作为神的道具的『kiki』！</p>
     <p>模仿那个就是接近神的道路哟。</p>
@@ -73,12 +73,12 @@
     <p>“嗯……话说回来，这个转用到攻击上也挺方便的”</p>
     <p>「啊，明白了吗？正如你所说，用这么多输出的水来攻击的话，比普通的射击水魔法要强得多。</p>
     <p>这样稍微改变一下出水的方向的话……”</p>
-    <p>受到梅赛德斯的称赞，看上去很精神的雷斯利把炮门迎向了前方。</p>
+    <p>受到梅赛德斯的称赞，看上去很精神的莱斯利把炮门迎向了前方。</p>
     <p>然后朝后面吹跑了。</p>
     <p>理所当然。因为向下持续发射水的事飞着，如果朝向前那个吹跑是必然的。</p>
     <p>“啊啊啊啊啊啊啊啊～～～！”</p>
-    <p>雷斯利一边叫喊一边飞去，不久是不是破坏了姿势一边锥揉一边掉下了。</p>
-    <p>梅赛德斯暂时望着摔跤掉落的方向，但为了看到摔跤没有回来，她好像平安无事地向一层阶层发出了问候。</p>
+    <p>莱斯利一边叫喊一边飞去，不久是不是破坏了姿势一边锥揉一边掉下了。</p>
+    <p>梅赛德斯暂时望着莱斯利掉落的方向，但为了看到莱斯利没有回来，她好像平安无事地向一层阶层发出了问候。</p>
     <p>这样又不得不攻下那扇麻烦的门了。</p>
     <p>……也许做了一点坏事。</p>
     <p>“……那么，去吗？”</p>
@@ -86,7 +86,7 @@
     <p>又不是死了，如果是她的话，努力的话又能回到这里来吧。</p>
     <p>重新振作精神梅赛德斯打算前进的话，注意到有象闪耀的台座一样的东西的事。</p>
     <p>“皮？”</p>
-    <p>他仔细端详着主张，要摸摸这个，好像是着急了的复印件擅自摸了。</p>
+    <p>他仔细端详着主张，要摸摸这个，好像是着急了的皮可擅自摸了。</p>
     <p>于是台座轰鸣，广播响起。</p>
     <p>“在转播点记录了你的数据。从下面开始能从这个地点重新开始。</p>
     <p>另外，掉下来的时候也能从这里重新开始。</p>
@@ -95,8 +95,8 @@
     <p>听到的广播，piko歪着头，看着梅赛德斯。</p>
     <p>这好像是游戏中保存的地方。</p>
     <p>如果预先触摸从下次开始能从这里开始不仅仅risupon地点好象也被覆盖。</p>
-    <p>也就是说，摔跤选手们眼前就掉下来了。</p>
-    <p>梅赛德斯也触及了台座，然后轻轻地敲打着复印机的头。</p>
+    <p>也就是说，莱斯利们眼前就掉下来了。</p>
+    <p>梅赛德斯也触及了台座，然后轻轻地敲打着皮可的头。</p>
     <p>“这是我的功劳，下次可不要随便碰。”</p>
     <p>“匹比……”</p>
     <p>总之就这样，告一段落了。</p>
@@ -107,5 +107,5 @@
     <p>“知道了”</p>
     <p>台座回答的同时，浮游感包围了梅赛德斯，下一个瞬间就站在了起跑点。</p>
     <p>落魄时的生命的保证，这次的迷宫是相当良心的设计。</p>
-    <p>把复印件放回手中的迷宫，梅赛德斯出去了。</p>
+    <p>把皮可放回手中的迷宫，梅赛德斯出去了。</p>
 </body>
