--- a/OEBPS/Text/c108.xhtml
+++ b/OEBPS/Text/c108.xhtml
@@ -23,7 +23,7 @@
     <p>不直接交换这样的规则，只是行会方面讨厌麻烦的纠纷，如果不通过行会无论谁做着什么行会也不介意。</p>
     <p>那也是理所当然的，行会并不闲，甚至涉及到个人之间的所有细微交易和约定。</p>
     <p>因此，上述规则只不过是“如果对行会提出委托就不要直接交换”这样的程度而已。</p>
-    <p>虽说如此，对于海贼们来说，能防止多余纠纷的行会的规则是很难得的，所以基本上大家都会通过行会。</p>
+    <p>虽说如此，对于saker们来说，能防止多余纠纷的行会的规则是很难得的，所以基本上大家都会通过行会。</p>
     <p>不通过行会而在个人之间进行委托交换的傻瓜之类的，恐怕在这个村落里是没有的吧。</p>
     <p>“话说回来一个行吗？”</p>
     <p>“是的，什么事？”</p>
@@ -61,9 +61,9 @@
     <p>从会话中推测，委托人单方面地好象违反了约定,不过，有关这个最好不夹行会。</p>
     <p>或者说，不通过工会的委托人并不是什么好东西，所以不理会才是正确的。</p>
     <p>呼吁的一方作为学习费应该从下面开始好好地被行会贴上的委托找吧。</p>
-    <p>总觉得在意的试着看，好歹吵闹和偷懒都好象埃尔菲。</p>
+    <p>总觉得在意的试着看，好歹吵闹和偷懒都好象精灵。</p>
     <p>话说回来，吵闹的一方仔细看的话就是在迷宫遇到的那个少女……莱斯利。</p>
-    <p>委托人背靠着脚踏地板鞋的她，一边晃动着手一边走开，只留下了摔跤手。</p>
+    <p>委托人背靠着脚踏地板鞋的她，一边晃动着手一边走开，只留下了莱斯利。</p>
     <p>梅赛德思量了一下，决定先试着打个招呼。</p>
     <p>虽然不太喜欢麻烦事，但也要看时间和场合。</p>
     <p>至少这个少女，找到了即使稍微麻烦也最好预先认识的程度的价值。</p>
@@ -74,9 +74,9 @@
     <p>不老期因人而异，抱怨也是没办法的事，但至少希望他能再长大一点再停下来。</p>
     <p>“大体上说来，可不是外表上的年龄哦。”</p>
     <p>「啊，不老期是指？你们这些吸血鬼成长的很奇怪啊”</p>
-    <p>梅赛德斯就年龄而言，雷斯利轻易相信梅赛德斯的年龄比外表还要大。</p>
+    <p>梅赛德斯就年龄而言，莱斯利轻易相信梅赛德斯的年龄比外表还要大。</p>
     <p>与其这样说，倒不如说是认为外表上年龄的孩子是不会允许来到这个村落的。</p>
-    <p>说点题外话，埃尔菲和吸血鬼不同，全员都是老化慢的种族。</p>
+    <p>说点题外话，精灵和吸血鬼不同，全员都是老化慢的种族。</p>
     <p>根据个人的不同，有时是童颜，有时是老脸，但并没有像吸血鬼那样激烈的差别。</p>
     <p>最初的时候普通地增长,不过，经过岁增长速度变得慢，从0岁到10岁普通增长,不过，从10到15的外表年龄达到人的二倍需要10年。</p>
     <p>然后在某种程度上能够自立的年龄……实际年龄20，外表年龄15左右的话一口气增长变得慢，好象没有变化。</p>
@@ -100,13 +100,13 @@
     <p>“不，还有别的呢。什么？有兴趣吗？</p>
     <p>“啊，相当不错啊。我觉得这是其他地方看不到的优秀技术”</p>
     <p>「嘿，嘿……哼？嘛，不是很有眼光嘛？你明明是吸血鬼，是不是有点明白啊？”</p>
-    <p>摔跤手挽着胳膊用傲慢的语调讲话，恐怕到现在为止几乎没有被表扬过机器吧。</p>
+    <p>莱斯利挽着胳膊用傲慢的语调讲话，恐怕到现在为止几乎没有被表扬过机器吧。</p>
     <p>她掩盖不住嘴角发红，看起来很高兴。</p>
     <p>普通地考虑的话，她的才能不被评价的那样奇怪,不过，反正是魔法存在的世界。</p>
     <p>她所做的事，也许从其他方面来看都是没有效率的。</p>
     <p>「啊，好！那么就特别的，让我看看我伟大的发明吧！”</p>
     <p>如果Oku也煽动想办法。</p>
-    <p>在梅赛德斯的脑内印象中，乘坐在橡树上的摔跤运动员气势汹汹地攀登在树上，但并不敢说出来。</p>
+    <p>在梅赛德斯的脑内印象中，乘坐在橡树上的莱斯利气势汹汹地攀登在树上，但并不敢说出来。</p>
     <p>姑且不论，把跟她的关系好好地搞好是不会有损失的吧。</p>
     <p>梅赛德斯拜托大家一定要看看她所说的伟大的发明。</p>
 </body>
