--- a/OEBPS/Text/c109.xhtml
+++ b/OEBPS/Text/c109.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>109. 怀念的语言</h1>
-    <p>为了能让大家看到摔跤的发明，梅赛德斯被带到了精灵他们聚集的村落。</p>
+    <p>为了能让大家看到莱斯利的发明，梅赛德斯被带到了精灵他们聚集的村落。</p>
     <p>没有太阳升起的天空还是阴暗的，一般来说不是精灵活动的时间段。</p>
     <p>但是还是有几个人早起外出，惊讶地看着进入自己领域的吸血鬼。</p>
     <p>现在村落以吸血鬼和erufe二分,不过，没有另外吸血鬼不可进入erufe们的领域这样的规定，那个反过来也是当然。</p>
@@ -20,23 +20,23 @@
     <p>梅赛德斯也知道这一点，所以平时绝对不会在这边。</p>
     <p>但是这次是例外。他认为即使稍微勉强一点也值得一看。</p>
     <p>“来，这里。”</p>
-    <p>在雷斯利的带领下，到达的是村子尽头的大帐篷中。</p>
-    <p>埃尔菲在迷宫前建造村落的时候，把能简单组装的帐篷作为住所,不过，当然钥匙等没有。</p>
+    <p>在莱斯利的带领下，到达的是村子尽头的大帐篷中。</p>
+    <p>精灵在迷宫前建造村落的时候，把能简单组装的帐篷作为住所,不过，当然钥匙等没有。</p>
     <p>说效率好就行了，但这样的话防范犯罪没问题吗？</p>
-    <p>话虽如此，因为这样成立了，所以埃尔菲的秩序也是很稳固的吧。</p>
+    <p>话虽如此，因为这样成立了，所以精灵的秩序也是很稳固的吧。</p>
     <p>在吸血鬼的国度是不可能的事。这就等于说没有锁门的房子等要空巢。</p>
     <p>反正莱斯利的发明没被发现价值，说不定谁都不想偷。</p>
     <p>帐篷里乱七八糟地放着各种各样的东西，如果没有知识的话，看起来就像垃圾到处乱扔一样。</p>
     <p>就像没有人专门从垃圾堆满的垃圾屋里偷垃圾一样，没有人发现垃圾的价值，从某种意义上来说，这也许是最好的防范犯罪……等等，稍微考虑了失礼的事。</p>
     <p>“相当多啊”</p>
     <p>“虽然已经选好了差不多会带来的东西。大部分都留在家里”</p>
-    <p>虽然摔倒得连下脚的地方都没有，但摔跤选手还是绞尽脑汁。</p>
+    <p>虽然摔倒得连下脚的地方都没有，但莱斯利还是绞尽脑汁。</p>
     <p>这样看来家里也变成了垃圾屋了。在精灵他们之间，她一定是奇怪的人吧。</p>
     <p>突然，梅赛德斯有点在意脚边的筒状物，拿在手上。</p>
     <p>“哦，要是注意到这一点就很不容易了。这是我制造的道具中相当有自信的作品”</p>
     <p>“能做到什么事情呢？”</p>
     <p>“听着吓一跳！那是……即使在黑暗的地方也能照亮你！”</p>
-    <p>雷斯利用陶醉的脸说明了筒子的效果,不过，总之是手电筒。</p>
+    <p>莱斯利用陶醉的脸说明了筒子的效果,不过，总之是手电筒。</p>
     <p>当然这是一个惊人的发明。不用说，他已经领先了多年的技术，是个不折不扣的天才。</p>
     <p>但是同时也觉得这不会得到好评。</p>
     <p>因为这个世界有迷宫，所以必须使用照亮黑暗的手段。</p>
@@ -62,16 +62,16 @@
     <p>即使没有打火机也想点火的话用火的魔法或者魔石就可以了，即使没有自行车也可以骑魔物。至于照相机，从根本就没有留下画的文化这点可以理解，令人毛骨悚然的程度谁都不会去关注。</p>
     <p>以前与弗雷德里克作战的时候，知道了与这个世界文明水平不相符的东西被称呼为『发达过多的遗物』,不过，她的发明不那样被称呼的……大概是因为他们总是制造一些谁也感觉不到价值的东西吧。</p>
     <p>从结论上来说，毫无疑问是个天才，但都偏离了靶子。</p>
-    <p>那样的遗憾的少女是对摔跤的梅赛德斯的评价。</p>
+    <p>那样的遗憾的少女是对莱斯利的梅赛德斯的评价。</p>
     <p>“原来如此，每个都很有趣啊。”</p>
     <p>“是吧！你有看头！</p>
     <p>因为话虽这么说，但是其他同伴却一点都不了解我的厉害！”</p>
     <p>“但是，单独想到这些是不可能的吧。</p>
     <p>我觉得有什么参考来源……你参考了什么？</p>
-    <p>不管摔跤是天才，也不会一个人想到这么多东西。</p>
+    <p>不管莱斯利是天才，也不会一个人想到这么多东西。</p>
     <p>更何况在这个几乎没有科学基础的世界，这是更为罕见的事情。</p>
     <p>所以梅赛德斯，认为绝对有什么知识的来源。</p>
-    <p>或者，摔跤选手也有可能是和自己一样的转生者。</p>
+    <p>或者，莱斯利也有可能是和自己一样的转生者。</p>
     <p>“那么，参考……什么事啊？</p>
     <p>大天才蕾丝酱全部都是自己想出来的，是原创的”</p>
     <p>莱斯利虽然这么说，但并没有把视线与梅赛德斯对准。</p>
@@ -85,7 +85,7 @@
     <p>话虽如此，现在还不应该说，让我们看看作为参考的什么东西。</p>
     <p>虽然交往不深，但即使拜托对方做这种事，对方也会拒绝。</p>
     <p>总之这次，让我们看看这个发明的种种。</p>
-    <p>……但是，雷斯利在垃圾堆中捕获了一本书。</p>
+    <p>……但是，莱斯利在垃圾堆中捕获了一本书。</p>
     <p>“这本是作为参考元的书。”</p>
     <p>好像很普通的样子。</p>
     <p>怎么说呢，反而让人担心的毫无防备。</p>
@@ -98,7 +98,7 @@
     <p>“完全不知道你在干什么吧？</p>
     <p>我也是边翻译边读的，其实只读了三成左右。</p>
     <p>虽然跟FOGERA边境的小国使用的语言很像，但这个很难理解”</p>
-    <p>雷斯利说话很奇怪，但梅赛德斯却不止如此。</p>
+    <p>莱斯利说话很奇怪，但梅赛德斯却不止如此。</p>
     <p>我明白了她为什么这么简单地给我看书。</p>
     <p>因为踩到无论如何看也不会明白，所以就这么简单地给我们看。</p>
     <p>而梅赛德斯默不作声的理由大概是“因为他不会读书”吧。</p>
