--- a/OEBPS/Text/c111.xhtml
+++ b/OEBPS/Text/c111.xhtml
@@ -28,7 +28,7 @@
     <p>“原来如此，原来是这样啊。</p>
     <p>如果试着明白是简单的事。画面本身，就如字面那样变成墙壁逼近”</p>
     <p>“现在不是冷静地解说的时候吧！？”</p>
-    <p>在模仿天空的墙壁慢慢逼近的强制横向滚动的迷宫内，梅赛德斯和摔跤向前飞去。</p>
+    <p>在模仿天空的墙壁慢慢逼近的强制横向滚动的迷宫内，梅赛德斯和莱斯利向前飞去。</p>
     <p>踢散飞向天空的蟑螂，更加梅赛德斯考虑。</p>
     <p>令人在意的是，这个空间到底是如何确保的。</p>
     <p>知道迷宫是常识无法测量的乱七八糟的地方，也知道从外边看的大小和内部的宽度不一致的事。</p>
@@ -41,7 +41,7 @@
     <p>根据梅赛德斯的想法是这样的。</p>
     <p>这个强制横滚动空间实际上由几个通道构成，只要到达一定的位置，就会飞到下一个通道。</p>
     <p>因为从前面的通道也能看到飞去的影像，所以本人们没有注意到是什么时候被放飞的。</p>
-    <p>譬如现在，摔跤在梅赛德斯前飞着,不过，其实摔跤已经在另外的通道里，梅赛德斯说不定只是看着墙被映出的她的背。</p>
+    <p>譬如现在，莱斯利在梅赛德斯前飞着,不过，其实莱斯利已经在另外的通道里，梅赛德斯说不定只是看着墙被映出的她的背。</p>
     <p>稍微难懂,不过，用图的话是这样的感觉吗？</p>
     <p>温哥华</p>
     <p>染色到这里之后再移动←←墙壁移动</p>
@@ -97,14 +97,14 @@
     <p>并且确实现在，那个预料正确的事被证明了。</p>
     <p>「诶！？天上有洞！？”</p>
     <p>“这是在天空中看到的墙壁。从这边走”</p>
-    <p>梅赛德斯跳入了皮琼斯打出的洞穴，此后雷斯利慌忙追上。</p>
+    <p>梅赛德斯跳入了皮琼斯打出的洞穴，此后莱斯利慌忙追上。</p>
     <p>皮琼好像打破了好几道墙壁，穿过洞穴的地方又破了个洞。</p>
     <p>通过那里的事大幅度快捷切割了的二人中继点前也发现了同样的门。</p>
     <p>看来这样横向滚动区域就清除了。这是一场长期艰苦的战斗。</p>
     <p>被扔出去的皮琼在门附近徘徊。是比较顽强的魔物。</p>
     <p>“诶……？这样的爱丽丝？”</p>
     <p>“cococola……”</p>
-    <p>困惑的摔跤和皮琼放置不管，梅赛德斯把手贴在了门上。</p>
+    <p>困惑的莱斯利和皮琼放置不管，梅赛德斯把手贴在了门上。</p>
     <p>看来这次开门不需要什么噱头。</p>
     <p>简单地打开门，然后再往前闪耀的台座……传送点主张着存在感。</p>
     <p>梅赛德斯一边触及传送点，一边思考着这个迷宫。</p>
