--- a/OEBPS/Text/c114.xhtml
+++ b/OEBPS/Text/c114.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>114. 摔跤手的家况</h1>
+    <h1>114. 莱斯利的家况</h1>
     <p>梅赛德斯踢下了名为“格拉西恩”的，能解决水的问题的精灵贵族，和莱斯利一起从地宫逃出。</p>
     <p>外面时间很早，很少有人行走。</p>
     <p>如果傍晚是精灵和吸血鬼活动重叠的时间段的话，相反，早上是两种生物都不怎么活动的时间。</p>
@@ -36,17 +36,17 @@
     <p>然后，不能使用魔法的家伙的血能留在家里……结果，成为继承人的是妹妹和她的丈夫……”</p>
     <p>“原来如此。所以那个失去了成为子爵继承权的男人，是在怨恨他吗？”</p>
     <p>关于Recry的说明，由于本人不太想说的内容，所以没办法掌握要领，但大体上梅赛德斯能理解。</p>
-    <p>首先，摔跤手家没有男孩，只有摔跤手和妹妹（恐怕还是孩子）。</p>
+    <p>首先，莱斯利家没有男孩，只有莱斯利和妹妹（恐怕还是孩子）。</p>
     <p>当初是作为女婿从同格的贵族那里迎接没有继承权的男子来继承家业的。</p>
     <p>既然女婿是格拉西兰人，格拉西兰人也是次子，那上面就有哥哥吧。那么格拉西兰的家的继承人就是他的哥哥，不是格拉西兰。</p>
     <p>但是，如果作为她丈夫被迎接的话，格拉西兰就可以正式继承莱斯利家。</p>
     <p>但是，莱斯利无法使用魔法，莱斯利父亲为了让不能使用魔法的人的血留在正式继承人的血脉里，将继承权转移到妹妹那里，并宣言要继承那个女婿……也就是说。</p>
     <p>这样就没意思了，当然是格拉西兰。</p>
     <p>好不容易才想继承莱斯利家，但却变成了白丁，所以不会有好心情吧。</p>
-    <p>而这种仇恨，也正朝向了无法使用魔法的摔跤手。</p>
+    <p>而这种仇恨，也正朝向了无法使用魔法的莱斯利。</p>
     <p>“但是，如果那样的话，妹妹的未婚妻不就只是成为那个格拉斯吗？”</p>
     <p>梅赛德斯之所以会产生疑问，是因为格拉西恩为什么离开了未婚夫的宝座。</p>
-    <p>摔跤手因为不能使用魔法，所以不能留在继承人的血脉里。我知道了。</p>
+    <p>莱斯利因为不能使用魔法，所以不能留在继承人的血脉里。我知道了。</p>
     <p>也可以知道继承权转移到妹妹那边，把那个女婿作为继承人。</p>
     <p>但是，如果是这样的话，格拉斯不就只是把妹妹的未婚夫调走了吗？</p>
     <p>虽然年龄上可能会有差别，但是在贵族社会那样的事情并不是什么奇怪的事情，更何况是长寿的精灵。</p>
@@ -60,7 +60,7 @@
     <p>梅赛德斯认为，不管怎么说，这都不会成为继承人吧。</p>
     <p>确实，格兰西恩没能成为米斯特家族继承人的一个原因可能是莱斯利。</p>
     <p>但是最终挖掘墓穴的是他自己。</p>
-    <p>这样的话，即使摔跤选手使用了魔法，也会把所有的东西都毁了吧。</p>
+    <p>这样的话，即使莱斯利使用了魔法，也会把所有的东西都毁了吧。</p>
     <p>“真是的，”梅赛德斯叹息说，“贵族这东西到处都是麻烦。”</p>
     <p class="divline"></p>
     <p>她们走了一会儿，就听到了什么吵闹的声音。</p>
@@ -95,20 +95,20 @@
     <p>当然，这样的做法是不可能通过的，别开玩笑了，会变成战争的吧。</p>
     <p>格拉西兰所做的就是这样，所以大家都瞧不起他。</p>
     <p>那么，就算放任不管也不会有什么特别的事情发生吧，虽然只是格拉西兰被当成傻瓜就结束了，但梅赛德斯还是会稍微考虑一下再出现。</p>
-    <p>听了摔跤选手的话，好像是比较能向别人转换责任的类型，这样下去的话有向摔跤选手纵火的危险。</p>
-    <p>“摔跤手，稍微隐藏一下。”</p>
+    <p>听了莱斯利的话，好像是比较能向别人转换责任的类型，这样下去的话有向莱斯利纵火的危险。</p>
+    <p>“莱斯利，稍微隐藏一下。”</p>
     <p>“喂，你在说什么？”难道要出去？不行，那家伙不考虑后果，说要做的话，真的是会做的类型！”</p>
     <p>虽然莱斯利慌慌张张想要挽留，但梅赛德斯却毫不在意地走了过去。</p>
     <p>正如莱斯利所说，我知道是那种类型。</p>
-    <p>正因为如此，我觉得还是先一个人出去宣传一下‘自己和摔跤手不是伙伴’比较好。</p>
+    <p>正因为如此，我觉得还是先一个人出去宣传一下‘自己和莱斯利不是伙伴’比较好。</p>
     <p>一开始觉得不到那种程度也可以……总觉得他是个超乎想象的笨蛋，所以应该把自己的缺点简单易懂地集中在自己身上。</p>
-    <p>否则，最坏的报复将飞向摔跤手。</p>
+    <p>否则，最坏的报复将飞向莱斯利。</p>
     <p>“你在找我吗？”</p>
     <p>“喂，你！？”</p>
-    <p>所以在这里，我只是偶然地在那里得到了一个救生员，和摔跤手无关，偶尔精灵会接触到中继点，所以我想这只是一种阻碍。</p>
+    <p>所以在这里，我只是偶然地在那里得到了一个救生员，和莱斯利无关，偶尔精灵会接触到中继点，所以我想这只是一种阻碍。</p>
     <p>这类人看起来像是一个看了就觉得有条有理，想不出事情的类型，欺骗也不是那么难的。</p>
     <p>对于梅赛德斯来说，莱斯的存在是非常有趣的，所以我不希望多余的虫子来打扰她。</p>
     <p>我想知道她今后能造出多少东西，能去到哪里。</p>
-    <p>所以，还是把目光从摔跤选手身上移开比较好吧。</p>
-    <p>……嘛，如果是那种即使那样也毫不相干地向摔跤手乱发脾气的家伙的话，那时候就是那个时候了。</p>
+    <p>所以，还是把目光从莱斯利身上移开比较好吧。</p>
+    <p>……嘛，如果是那种即使那样也毫不相干地向莱斯利乱发脾气的家伙的话，那时候就是那个时候了。</p>
 </body>
