--- a/OEBPS/Text/c115.xhtml
+++ b/OEBPS/Text/c115.xhtml
@@ -10,20 +10,20 @@
 </head>
 
 <body>
-    <h1>115.  挑衅</h1>
+    <h1>115. 挑衅</h1>
     <p>梅赛德斯一出现，格拉西兰虽然瞬间感到很吃惊，但他立刻露出了得意的笑容。</p>
     <p>也许是因为觉得猎物特意从对面飞出来，很方便的吧。</p>
     <p>接着他的目光像是在找谁似的彷徨着，但好像没有找到目标人物的样子，所以有点不高兴。</p>
     <p>“哼，你特地跑来，真让人佩服。</p>
-    <p>但是没有爱摔跤的家伙吗？”</p>
+    <p>但是没有爱莱斯利的家伙吗？”</p>
     <p>“那是谁？”</p>
     <p>对于格拉西兰的提问，梅赛德斯装傻了。</p>
-    <p>如果在这里暴露了自己是熟人的话，这个笨蛋的报复矛头很有可能会指向摔跤手。</p>
+    <p>如果在这里暴露了自己是熟人的话，这个笨蛋的报复矛头很有可能会指向莱斯利。</p>
     <p>因此，梅赛德斯的想法就是在那个场合装成偶然路过的无关吸血鬼。</p>
     <p>“什么啊……那时我们应该在一起吧”</p>
     <p>「啊，是指和你争论的女人吗？那样的话，我是在你后面把踢下去了」</p>
     <p>在吸血鬼和精灵的哪一方先通过地下城的场合，吸血鬼的seeker踢下精灵并不是什么奇怪的事情。</p>
-    <p>如果让人觉得“在那个场合被偶然的无关系的被单踢掉了”，那么就不适合对摔跤手发火了吧。</p>
+    <p>如果让人觉得“在那个场合被偶然的无关系的被单踢掉了”，那么就不适合对莱斯利发火了吧。</p>
     <p>实际上，梅赛德斯在攻占这个地牢的过程中，打掉了好几个同行的探索者，所以也不能说是谎言。</p>
     <p>就算格拉西兰没有和莱斯利打架，梅赛德斯也会真的把他踢下去吧。</p>
     <p>没有必要叼着手指注视着打算攻占同一个地牢的对手去碰中继点。</p>
@@ -58,8 +58,8 @@
     <p>个人间的感情、亲人的怨恨、失去信赖等暂且不论，至少不会被法律处罚。</p>
     <p>但是，如果在地宫外面做些伤害比自己高的贵族的事情的话，那就是个大问题。当然，不知道这点是不行的。</p>
     <p>那么梅赛德斯就故意接受格拉斯的攻击，反过来把他逼入死路不就好了吗？</p>
-    <p>这样的话至少这个男人不会对摔跤手耿耿于怀吧。</p>
-    <p>即使多少负点伤，如果是邮件处理的话也能再生，完全没有问题。</p>
+    <p>这样的话至少这个男人不会对莱斯利耿耿于怀吧。</p>
+    <p>即使多少负点伤，如果是梅尔处理的话也能再生，完全没有问题。</p>
     <p>……但是，如果那样做的话，吸血鬼和精灵之间产生很深的隔阂的可能性很高，那样的话，不知这个村落本身会变成什么样。</p>
     <p>如果以这件事为切入点展开吸血鬼与精灵之争的话，就根本谈不上攻略迷宫了吧。</p>
     <p>因此，梅赛德斯决定在这里平静地结束。</p>
@@ -80,14 +80,14 @@
     <p>迟顿的格拉西兰也察觉到了她的意图，脸越来越红。</p>
     <p>“……”啊！”</p>
     <p>格拉西兰什么也没能反驳就快步离开了，但他的眼睛充满了愤怒。</p>
-    <p>这样的话，他的怨恨就会集中在梅赛德斯身上，而对于摔跤手之类的事情也会从头上掉下来吧。</p>
+    <p>这样的话，他的怨恨就会集中在梅赛德斯身上，而对于莱斯利之类的事情也会从头上掉下来吧。</p>
     <p>之后如果在地宫里设置好的话，就可以不用目击者就消失了，所以请一定要做好准备。</p>
     <p>格拉西兰离开后，梅赛德斯和在背地里注视事态发展的莱斯利汇合。</p>
     <p>但是她好像有点惶恐。</p>
     <p>“怎么了...结束了？”</p>
     <p>“不，那个……刚才的话，真的吗？”</p>
     <p>“你是说我是公爵家的的话吗？”</p>
-    <p>从摔跤乎的态度来看，她想听的是梅赛德斯发言中的“公爵家”这一部分吧。</p>
+    <p>从莱斯利的态度来看，她想听的是梅赛德斯发言中的“公爵家”这一部分吧。</p>
     <p>为了慎重起见，反问了一下，莱斯利用力地摇了摇头。</p>
     <p>“大体上是事实。话虽这么说，可是是我是四子啊。</p>
     <p>而且公爵是父亲，我自己并没有什么了不起的”</p>
@@ -101,17 +101,17 @@
     <p>不……从以前的巴尔吉那件事来看，也许水面下早就开始了。</p>
     <p>（之后是……还是先考虑一下吧）</p>
     <p>格拉西兰的愤怒转向了我，但那帮家伙有时是无法用道理来衡量的。</p>
-    <p>和对梅塞德斯的愤怒无关，为了消除不快而四处攻击摔跤手或者摔跤手的私有物的可能性也不是零。</p>
+    <p>和对梅塞德斯的愤怒无关，为了消除不快而四处攻击莱斯利或者莱斯利的私有物的可能性也不是零。</p>
     <p>我不想认为他是个笨蛋，但也有很大的可能他的确是个笨蛋。</p>
     <p>因此，我认为对于不能替代的商品需要投保。</p>
-    <p>“我是摔跤选手。那本书，可以再给我看一次吗？”</p>
+    <p>“我是莱斯利。那本书，可以再给我看一次吗？”</p>
     <p>“啊？嗯，可以，但是……看不懂吧？”</p>
     <p>“不，好像有见过的记号。”</p>
-    <p>这样说着，被带到摔跤队帐篷里的梅赛德斯装作看了那本书的样子，为了不被发现，把它收进了地宫，登记后返还给了摔跤选手。</p>
-    <p>她制造的破烂东西……本来，即使发明坏了，只要有这本书和摔跤手的话，也可以换。</p>
-    <p>但是，失去摔跤手和这本书是一个沉重的打击。</p>
+    <p>这样说着，被带到莱斯利帐篷里的梅赛德斯装作看了那本书的样子，为了不被发现，把它收进了地宫，登记后返还给了莱斯利。</p>
+    <p>她制造的破烂东西……本来，即使发明坏了，只要有这本书和莱斯利的话，也可以换。</p>
+    <p>但是，失去莱斯利和这本书是一个沉重的打击。</p>
     <p>所以为了以防万一，把书做成了可以复制的状态。</p>
-    <p>还有……总之，应该先把在摔跤场附近秘密长进的魔物作为护卫藏起来吧。</p>
+    <p>还有……总之，应该先把在莱斯利场附近秘密长进的魔物作为护卫藏起来吧。</p>
     <p>或者，把教育交给本凯莉的犹莉亚也许也差不多成了她使用的东西了，在测试她的意义上也可以交给犹莉亚。</p>
     <p>也许是考虑太多了，如果浪费的话那是最好的。</p>
     <p>但是如果不小心失败了，事后后悔就晚了。</p>
