--- a/OEBPS/Text/c116.xhtml
+++ b/OEBPS/Text/c116.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>116. 丢失</h1>
-    <p>[[丢失]]348||351</p>
+    <p><span class="textmissing">[[丢失]]348||351</span></p>
     
     
     <p>“……说什么好呢？总之，应该先向你道谢吧。如果你不把我捡起来的话，大概我会死的……”</p>
@@ -52,7 +52,7 @@
     <p>反正无法判断真伪的话，那就把所有的东西都截断，只执行最初的指令。</p>
     <p>如果能守护它的话，尤里亚就会成为优秀的“影子”吧。</p>
     <p>“那我就命令你了。从影子中守护我指定的名为“莱斯利”的精灵少女，监视她。</p>
-    <p>当危险降临到她的身上时，她说“快带着摔跤手脱离，回来吧”。</p>
+    <p>当危险降临到她的身上时，她说“快带着莱斯利脱离，回来吧”。</p>
     <p>除此之外的时候要等着，“不管发生什么，都不要出现在任何人的面前”。</p>
     <p>除此之外“什么都不要做”</p>
     <p>“啊！我已经接到命令了！”</p>
