--- a/OEBPS/Text/c117.xhtml
+++ b/OEBPS/Text/c117.xhtml
@@ -53,7 +53,7 @@
     <p>因为精灵绝不是坚固的种子，所以为了健康料理发展了。医疗也很先进。</p>
     <p>学会了制作各种各样的道具，并学会了使用，现在已经成为了世界上数量最多并发展起来的沥青。</p>
     <p>和那个一样的事……并不是生来就有不能使用魔法的“缺陷”，而是因为不能使用魔法才能寻找其他方法的“优点”。</p>
-    <p>所以，应该把自己的缺陷变成优点……为了回望其他精灵，拼命学习摔跤。</p>
+    <p>所以，应该把自己的缺陷变成优点……为了回望其他精灵，拼命学习莱斯利。</p>
     <p>翻着文献，一边翻译着用未知语言写的书籍一边继续阅读。</p>
     <p>幸运的是，这个语言并不是完全未知的语言体系，而是和福格拉边境的小国使用的语言相当相似，有很多共同点和相似性。</p>
     <p>多亏了这个，我能通过对照那个语言多少解读一些。</p>
@@ -62,14 +62,14 @@
     <p>用自己的发明之力清理迷宫，把宝物带回家的话，应该谁都不能小看自己了。</p>
     <p>一定会得到认可……这样相信着，挑战了迷宫。</p>
     <p>地牢攻略进行得比想象的还要顺利。</p>
-    <p>虽然摔跤本身也有实力，但对她来说更幸运的是在地下城认识的吸血鬼奇比子saker，梅赛德斯的存在。</p>
+    <p>虽然莱斯利本身也有实力，但对她来说更幸运的是在地下城认识的吸血鬼奇比子saker，梅赛德斯的存在。</p>
     <p>看上去只有十岁到十二岁左右，但那也只有十六岁。</p>
     <p>我觉得吸血鬼真的是有着奇怪的成长。</p>
     <p>说点题外话，她认识的人中有超过百岁外表还是童女的叔母，还有和叔母同辈却有着相当于九十岁外表的爷爷。</p>
     <p>先不说童女，爷爷太可怜了笑不出来。</p>
     <p>总之，梅赛德斯是一个从外表上无法想象的强大的希克，和她合作后，莱斯利不断地向地下城进发。</p>
     <p>不能说是寄生。是很好的战略。</p>
-    <p>……不，这可能还是寄生。这么一想，摔跤手有点失落。</p>
+    <p>……不，这可能还是寄生。这么一想，莱斯利有点失落。</p>
     <p class="divline"></p>
     <p>开始攻占这个迷宫已经过了两周了。</p>
     <p>虽然和叫格拉西恩的贵族有过纠纷，但从那以后就没有和他遭遇过，也没有说过话。</p>
@@ -83,21 +83,21 @@
     <p>……即便如此，这个小丑真的想跟到什么时候呢？</p>
     <p>自从以前在第三舞台上一起行动以来，这只奇怪的鸟总是带着伙伴们一直跟着。</p>
     <p>那是梅赛德斯他们出了迷宫之后也没有变化，回到了出发点后一定会在附近等着。</p>
-    <p>嗯，好像没有什么危害，实际上作为摔跤手的交通工具很有用，所以现在就放着不管了。</p>
+    <p>嗯，好像没有什么危害，实际上作为莱斯利的交通工具很有用，所以现在就放着不管了。</p>
     <p>在迷宫顺利进行的同时，梅赛德斯也预感到终点就要到了。</p>
     <p>问题是实际到了终点怎么办。</p>
     <p>当然金和黑的门两个选择是迫在眉睫的，梅赛德斯的回答是黑色的门。</p>
     <p>和地牢的守护者战斗，胜利，然后得到地牢。那里没有变更。</p>
-    <p>但是那个时候如果带着摔跤手的话，最糟糕的是她会丧命的吧。</p>
-    <p>其他暂且不说，只有守护者是通过邮件处理，以万全的状态和万全的成员不挑战的话，很有可能输的对手。没有一边庇护摔跤手一边战斗的余地。</p>
+    <p>但是那个时候如果带着莱斯利的话，最糟糕的是她会丧命的吧。</p>
+    <p>其他暂且不说，只有守护者是通过梅尔处理，以万全的状态和万全的成员不挑战的话，很有可能输的对手。没有一边庇护莱斯利一边战斗的余地。</p>
     <p>因此，如果要和守护者战斗的话，我认为只有自己、本凯、小黑、舒夫、桃子、尤利娅、Beactorix这样强大的成员来加强是最好的。</p>
-    <p>很遗憾，我不想把摔跤手加入自己队伍。</p>
-    <p>这也有她是没到和守护者战斗的等级的原因，也有认为让摔跤选手死是损失的原因。</p>
-    <p>也有制作了摔跤手的克隆这样的粗暴的职业……即使克隆人100%继承本人的人格和记忆，也不知道她是否继承了自己的想象力。</p>
-    <p>而且，如果让摔跤选手幸存下来，打倒守护者，那就会成为谁能得到迷宫的争论的火种。</p>
+    <p>很遗憾，我不想把莱斯利加入自己队伍。</p>
+    <p>这也有她是没到和守护者战斗的等级的原因，也有认为让莱斯利死是损失的原因。</p>
+    <p>也有制作了莱斯利的克隆这样的粗暴的职业……即使克隆人100%继承本人的人格和记忆，也不知道她是否继承了自己的想象力。</p>
+    <p>而且，如果让莱斯利幸存下来，打倒守护者，那就会成为谁能得到迷宫的争论的火种。</p>
     <p>遗憾的是迷宫本身根本上不适合多人攻略。</p>
     <p>所以梅赛德斯决定在进入地牢最深处之前解散与莱斯利的队伍。</p>
-    <p>“摔跤手”</p>
+    <p>“莱斯利”</p>
     <p>“嗯？什么？”</p>
     <p>“可能是吧，我觉得差不多快到终点了。</p>
     <p>所以，我想和你在这里解散队伍”</p>
@@ -109,7 +109,7 @@
     <p>如果是这样的话，莱斯利不知道这件事，只知道“迷宫里有宝藏”也不奇怪。</p>
     <p>“啊？等、为什么！？你妨碍我了吗！？”</p>
     <p>“……你知道攻占了迷宫的话能得到什么吗？”</p>
-    <p>虽然不太想提供信息，但是如果不那样做的话，摔跤是无法接受的吧。</p>
+    <p>虽然不太想提供信息，但是如果不那样做的话，莱斯利是无法接受的吧。</p>
     <p>因此，梅赛德斯决定只告诉你清除地下城的真正意义。</p>
     <p>这种程度的话，只要是高级贵族谁都知道的程度的内容。</p>
     <p>虽然是被隐匿的信息，但说到底只是普通人不知道的秘密。</p>
@@ -120,7 +120,7 @@
     <p>“对了。可以使用所有无限涌出的地下城内的魔物。根据使用方法的不同，也是能毁灭国家的巨大力量。因此，这是只有王族和一部分贵族才能教出来的真相，也是支撑王权的基础。</p>
     <p>恐怕在精灵那边也作为只有国王才能熟练使用的力量的象征而流传着”</p>
     <p>“啊，嗯。这么说来，我听说国王能做那样的事……诶，真的吗？”</p>
-    <p>看来对于摔跤选手来说是相当具有冲击性的事实。</p>
+    <p>看来对于莱斯利来说是相当具有冲击性的事实。</p>
     <p>我明白了眼睛一边黑白着，一边想办法去理解。</p>
     <p>“那就是在这里和你分手的理由。</p>
     <p>实际攻略的时候，不想为谁能拿到地牢而争执。</p>
@@ -132,7 +132,7 @@
     <p>更何况，为了得到它，必须拼命打倒守护者，所以我想自己才有权利。</p>
     <p>最后等待的是攻略者之间的互相残杀。</p>
     <p>所以要清除迷宫的话，理想是捕获的魔物和只属于其主人的个人派对。或者明确上下级关系决定了的王和士兵们的关系最好。（后者即使如此也有背叛的可能性）</p>
-    <p>我不认为摔跤是愚蠢到那种程度的考虑。</p>
+    <p>我不认为莱斯利是愚蠢到那种程度的考虑。</p>
     <p>在惊讶地眯着眼睛的梅赛德斯面前，莱斯利若无其事地说。</p>
     <p>“我也不需要那种东西。以一开始就通关的实绩为目标，所以你可以带着迷宫之类的东西去。啊，但是如果能把宝物分成若干部分的话，我会很开心的”</p>
     <p>——原来如此。</p>
