--- a/OEBPS/Text/c118.xhtml
+++ b/OEBPS/Text/c118.xhtml
@@ -15,7 +15,7 @@
     <p>看人之类的东西以后要多少改变意见。</p>
     <p>虽然在看到实物之前什么都可以说，但是一旦看到了就会产生欲望，说还是要把份额寄过去也不奇怪。</p>
     <p>而且和守护者的战斗伴随着生命的危险这一点是不会改变的。</p>
-    <p>如果让摔跤手参战而死去的话，那才有可能成为世界的损失吧。</p>
+    <p>如果让莱斯利参战而死去的话，那才有可能成为世界的损失吧。</p>
     <p>考虑到这些理由，我还是决定解散队伍……。</p>
     <p>「呀！躲开！”</p>
     <p>在视线的边缘看到前方有什么东西在发光的同时，发出了声音。</p>
@@ -35,7 +35,7 @@
     <p>但是擅长支援魔法和回复魔法，不管怎么说比起自己战斗更擅长向后退指挥军团”</p>
     <p>从茨瓦尔夫那里很快得到了情报，梅赛德斯对那副铠甲产生了兴趣。</p>
     <p>细细想来，在梅赛德斯作为主力使用的战斗力中，还没有支援型。</p>
-    <p>梅赛德斯和强敌战斗时最重要的战斗力是本凯、克洛、皮科、舒夫……然后从弗雷德里克那里夺取的恶魔福斯特也可以成为王牌。</p>
+    <p>梅赛德斯和强敌战斗时最重要的战斗力是本凯、小黑、皮科、舒夫……然后从弗雷德里克那里夺取的恶魔福斯特也可以成为王牌。</p>
     <p>其他的信任度稍低，所以不能过于相信，但是尤里亚和贝尔特里克斯的战斗力也是无可挑剔的。</p>
     <p>最后是斯塔克迷宫的守护者施瓦茨・史塔利和帝国迷宫的守护者帕拉蒂斯。这两个机构甚至可能毁灭一个国家的军队，真是绝招。</p>
     <p>但是，迷宫的守护者可以使用的战斗力不能算守护者。</p>
@@ -74,18 +74,18 @@
     <p>大幅度拉扯阿森布鲁特，用力剃光。</p>
     <p>无论是多么坚硬的魔物，在这个世界上没有比神之金属所造的阿森布鲁特更坚硬的东西了。</p>
     <p>铠甲凹陷，多米尼翁的身体被吹飞。</p>
-    <p>在那里，摔跤手准确地发射了万能手枪……但是，子弹全部被铠甲弹了，变成了跳弹掠过了梅赛德斯。</p>
+    <p>在那里，莱斯利准确地发射了万能手枪……但是，子弹全部被铠甲弹了，变成了跳弹掠过了梅赛德斯。</p>
     <p>差一点就要成为友好的火焰了。</p>
-    <p>“摔跤！枪不好使！进行其他攻击！”</p>
+    <p>“莱斯利！枪不好使！进行其他攻击！”</p>
     <p>“呃，别的！？嗯……嗯……那么！”</p>
     <p>枪不好用，而且有变成跳弹击中我方的危险。</p>
-    <p>因此，摔跤手收起了鳟鱼枪，代替它从皮乔恩上跳下来，用喷气式喷射在多米尼翁上占据了优势。</p>
+    <p>因此，莱斯利收起了鳟鱼枪，代替它从皮乔恩上跳下来，用喷气式喷射在多米尼翁上占据了优势。</p>
     <p>于是她为了飞行而不断放出的水袭击了多米尼翁。</p>
     <p>“呃……这种程度！”</p>
     <p>多米尼翁的头盔，碰到眼睛的部分发光了。</p>
     <p>与此同时，为了覆盖多米尼翁，展开了光之幕。</p>
-    <p>于是，摔跤手的水压攻击就被那个幕挡住了，无法到达多米尼翁。</p>
-    <p>而且多米尼翁还让翅膀展翅，接近摔跤手。</p>
+    <p>于是，莱斯利的水压攻击就被那个幕挡住了，无法到达多米尼翁。</p>
+    <p>而且多米尼翁还让翅膀展翅，接近莱斯利。</p>
     <p>但是，梅赛德斯为了阻止这一现象，从侧面将哈佛打倒，连同防护罩一起将多米尼翁吹飞。</p>
     <p>“梅赛德斯啊……我以前就在想，你看起来很小，其实是个很强的力量战士呢……”</p>
     <p>“不要说个子矮的话。我自己也很在意”</p>
