--- a/OEBPS/Text/c119.xhtml
+++ b/OEBPS/Text/c119.xhtml
@@ -14,22 +14,22 @@
     <p>捕获了多米尼安的梅赛德斯决定再去地下城一次。</p>
     <p>外面天空就像是日落时一样，开始变暗。</p>
     <p>在试炼前，梅赛德斯确保了多米尼翁这一优秀的战力，但梅赛德斯并不乐观，认为他会直接在正式行动中出场。</p>
-    <p>对打倒自己的对手无条件服从的琪琪，虽说是魔物，但因为是狼，所以和原本就容易习惯人的小黑情况不同。</p>
+    <p>对打倒自己的对手无条件服从的本凯，虽说是魔物，但因为是狼，所以和原本就容易习惯人的小黑情况不同。</p>
     <p>首先必须要让自己放弃，必须要让自己放弃。</p>
     <p>原本梅赛德斯只组织自己和魔物的组合，因为如果是同样的吸血鬼的话有背叛的可能性……也就是说，不能相信。</p>
     <p>因此，如果哪怕只有一点点背叛的可能性的话，那就不算是队伍成员了。</p>
-    <p>还有一个…我还是不想带着你摔跤手去参加行动。</p>
-    <p>上述的理由是“不想增加攻击者”，但更危险的是摔跤手有可能在试炼中死去。</p>
-    <p>说白了，摔跤手没有那么强。加上是精灵，没有吸血鬼那么顽强。不会再生，即使对如果是吸血鬼的话能生存下去的伤也会对她成为致命伤吧。</p>
-    <p>如果那样的话，事先复制摔跤手的话，这个问题就能解决了……但是，复制的摔跤手恐怕没有原版那样的好学吧。</p>
+    <p>还有一个…我还是不想带着你莱斯利去参加行动。</p>
+    <p>上述的理由是“不想增加攻击者”，但更危险的是莱斯利有可能在试炼中死去。</p>
+    <p>说白了，莱斯利没有那么强。加上是精灵，没有吸血鬼那么顽强。不会再生，即使对如果是吸血鬼的话能生存下去的伤也会对她成为致命伤吧。</p>
+    <p>如果那样的话，事先复制莱斯利的话，这个问题就能解决了……但是，复制的莱斯利恐怕没有原版那样的好学吧。</p>
     <p>莱斯利贪婪地追求技术和知识，来源于虽然出生于使用魔法理所当然的精灵，却不能使用魔法的自卑感，以及想重新审视周围的逆境精神。</p>
     <p>但是复制的莱斯利是《在迷宫里出生的，主人忠实的我》。想回头看其他精灵的求知感恐怕会消失。</p>
     <p>即使是100%相同的存在，环境和前提条件不同的话，也会有完全不同的想法吧。</p>
     <p>莱斯利这个奇迹的存在，是作为精灵接近最底层的境遇和周围的视线……有了那样的东西才成立。</p>
-    <p>复制摔跤手的话，就可以复制“她至今为止学到的知识和技术”。</p>
+    <p>复制莱斯利的话，就可以复制“她至今为止学到的知识和技术”。</p>
     <p>但是，想到了未来。</p>
     <p>因为没有达到那里的动力了。</p>
-    <p>所以梅赛德斯没有考虑复制摔跤手。</p>
+    <p>所以梅赛德斯没有考虑复制莱斯利。</p>
     <p>她现在是唯一的存在。用迷宫的力量也无法代替。</p>
     <p>想到这一点，可以说在不知道什么样的守护者在等待着他们的考验中带着他们去是不可取的。</p>
     <p>之后梅赛德斯和莱斯利分手，约定一周后在迷宫前会合，回到各自的村落。为什么是一周呢？因为梅赛德斯认为，要让多米尼翁承认自己是主至少需要这么多。因为必须要进行合作的练习，所以最低一周是不够的。</p>
@@ -45,7 +45,7 @@
     <p>不过，这里是梅赛德斯所有的迷宫中。万一闹大了，多米尼安也没办法打吧。</p>
     <p>“没想到是迷宫的所有者……”</p>
     <p>当梅赛德斯进入视野时，多米尼安发出了赞叹的声音。</p>
-    <p>然后怎样都无所谓，仔细一想，我觉得在全身铠甲的巨汉这一点上，我和琪琪发生了角色扮演。</p>
+    <p>然后怎样都无所谓，仔细一想，我觉得在全身铠甲的巨汉这一点上，我和本凯发生了角色扮演。</p>
     <p>我觉得只有银和银的区别。</p>
     <p>梅赛德斯站在多米尼安面前，和他对视</p>
     <p>多米尼翁有3米之多，即使坐着也必须要看一下梅赛德斯。</p>
