--- a/OEBPS/Text/c120.xhtml
+++ b/OEBPS/Text/c120.xhtml
@@ -11,21 +11,21 @@
 
 <body>
     <h1>120.  扭曲的执着</h1>
-    <p>我摔跤手很高兴。</p>
+    <p>我莱斯利很高兴。</p>
     <p>在为了让周围的人看一看而报上攻略地下城时的名字的时候，说实话只是感到不安，但是这几天进展的很顺利，连自己都吃惊。</p>
     <p>我知道理由。那个小小的吸血鬼……多亏了梅赛德斯。</p>
     <p>如果没有和她相遇的话，一定不能走到这个迷宫的深处吧。</p>
     <p>如果能就这样顺利攻略的话，之前看不起自己的人也一定会重新审视的。</p>
-    <p>但是，更让我摔跤手高兴的是，遇到了一个不把自己当傻瓜，认可自己的梅赛德斯。</p>
+    <p>但是，更让我莱斯利高兴的是，遇到了一个不把自己当傻瓜，认可自己的梅赛德斯。</p>
     <p>即使告诉她不能使用魔法，她的态度也不会改变，她的存在方式比什么都让她开心。</p>
     <p>事实上，对于莱斯利来说，攻略迷宫什么的已经无所谓了。</p>
     <p>只是，想要帮助认可自己的梅赛德斯……那个想法变强了。</p>
     <p>“喂”</p>
     <p>莱斯利用轻快的步伐朝着帐篷哼着歌，但是突然被叫住了，没办法只好看了看那里。</p>
     <p>在那里的是最不想见的对象……是格拉西兰。</p>
-    <p>从小就认识的他，以前是一个即使嘴笨也会在意摔跤手的温柔男子。</p>
-    <p>但是不知从什么时候开始变得越来越刺眼，自从废除婚约以后，只会说些瞧不起摔跤选手的言行和谩骂。</p>
-    <p>也有那样的事，摔跤选手非常讨厌他。</p>
+    <p>从小就认识的他，以前是一个即使嘴笨也会在意莱斯利的温柔男子。</p>
+    <p>但是不知从什么时候开始变得越来越刺眼，自从废除婚约以后，只会说些瞧不起莱斯利的言行和谩骂。</p>
+    <p>也有那样的事，莱斯利非常讨厌他。</p>
     <p>「……什么呀，格拉西兰？什么啊」</p>
     <p>“没什么。只是，我觉得很开心”</p>
     <p>虽然想说不能高兴，但还是放弃了。</p>
@@ -35,19 +35,19 @@
     <p>“如果想这么想的话，随便想不就好了。如果只是想说的话，我就去”</p>
     <p>莱斯利完全没有在意格拉斯的谩骂的样子，就这样走了过去。</p>
     <p>格拉西兰的话会出人意料地僵直。</p>
-    <p>他所知道的摔跤选手到现在为止没有这么多的空闲。</p>
+    <p>他所知道的莱斯利到现在为止没有这么多的空闲。</p>
     <p>如果我们愚弄的话，应该会认真反驳的，但是这次却没有。</p>
     <p>看着逐渐变小的莱斯利的背影，在格兰西目瞪口呆的背后，周围的人们嘀嘀咕咕地说话。</p>
     <p>（啊……是不是超越了讨厌，终于漠不关心了呢？）</p>
     <p>（格兰西恩大人要是稍微坦率一点的话就不一样了吧……被喜欢的孩子使坏之类的事情只有在孩子的时候才能被原谅，但是却变得很别扭，变得不容易被吸引……哎呀，已经结束了啊。完全没有芽啊）</p>
-    <p>为什么格拉西恩总是对摔跤选手出言不逊呢？围绕那个理由的精灵们知道了。</p>
+    <p>为什么格拉西恩总是对莱斯利出言不逊呢？围绕那个理由的精灵们知道了。</p>
     <p>如果先从结论开始说的话，就不能坦率的说出来，这是孩子们最讨厌的扭曲扭曲的好意的反义词。</p>
     <p>其实作为异性有很强的意识。但是，因为他是贵族的自尊心和对方无法使用魔法的吊车尾，所以他认为坦率地将自己的心情说出口和态度是最可耻的事情。</p>
     <p>周围的人都知道你对被认为是妖精做不到的人抱有好感，这样会给面子带来伤害。所以无法坦率地说出这句话，为了隐藏而变得比必要更辛辣。</p>
-    <p>但是根本上是好意，所以自己去和摔跤有关，并且会很辛苦。因为这样的反复不断地变得无法阻止，之后也无法后退的傻瓜就是格拉西恩这个男人的真面目。</p>
-    <p>和摔跤的婚约实际上比谁都高兴的是格拉斯。</p>
-    <p>正因为如此，当婚约成了泡影的时候，愤怒爆发了，对摔跤选手大发雷霆……结果那只会使他的立场越来越坏。</p>
-    <p>但是，对于他的内心，摔跤手是不知道的，就算知道了也不允许谩骂。</p>
+    <p>但是根本上是好意，所以自己去和莱斯利有关，并且会很辛苦。因为这样的反复不断地变得无法阻止，之后也无法后退的傻瓜就是格拉西恩这个男人的真面目。</p>
+    <p>和莱斯利的婚约实际上比谁都高兴的是格拉斯。</p>
+    <p>正因为如此，当婚约成了泡影的时候，愤怒爆发了，对莱斯利大发雷霆……结果那只会使他的立场越来越坏。</p>
+    <p>但是，对于他的内心，莱斯利是不知道的，就算知道了也不允许谩骂。</p>
     <p>她的态度完全是格拉西兰的自作自受，只是理所当然的事情。</p>
     <p>「……那是什么啊……为什么那么从容呢……。</p>
     <p>你……你如果没有我的话，什么都做不了，可能会做错什么……。</p>
@@ -65,12 +65,12 @@
     <p>听完多米尼安的话后，梅赛德斯走到了外面，周围一片嘈杂。</p>
     <p>从精灵村那边冒着烟，有一股烧焦的味道飘到了这里。</p>
     <p>好像失火了。是谁搞错了将炎魔法打入帐篷里了吗？</p>
-    <p>因为是精灵方面的问题，所以可以放任不管，但是如果摔跤手被卷入的话会很困扰，所以决定先去现场看看。</p>
+    <p>因为是精灵方面的问题，所以可以放任不管，但是如果莱斯利被卷入的话会很困扰，所以决定先去现场看看。</p>
     <p>万一的时候，我想护卫的尤里亚会想办法的……不，还是不安。去看看吧。</p>
     <p>“殿”</p>
     <p>这样想着的话，因为后面有人叫我，所以回头看。</p>
-    <p>在那里，有抱着摔跤手的尤里亚。</p>
-    <p>摔跤选手不知道是什么事情，慌慌张张的。</p>
+    <p>在那里，有抱着莱斯利的尤里亚。</p>
+    <p>莱斯利不知道是什么事情，慌慌张张的。</p>
     <p>尤里亚带来的事是指瑞丽身上有什么危险逼近了吗？</p>
     <p>看来尤里亚顺利完成了命令。</p>
     <p>“什么，什么！？什么！？离我远一点！</p>
@@ -82,22 +82,22 @@
     <p>点燃帐篷的恐怕是格拉西兰吧。也许还有其他名字中以格拉开头的精灵，总之先让格拉西兰暂时放火。</p>
     <p>然后看到了莱斯利慌张的样子，燃烧起来的是莱斯利的帐篷，为了救出发明品打算冲进燃烧的帐篷，尤里亚按照梅赛德斯的命令将其带走。</p>
     <p>“梅赛德斯！？等、谁啊这个人！这是什么！？”</p>
-    <p>“冷静点，这摔跤手是我方的。”</p>
+    <p>“冷静点，这莱斯利是我方的。”</p>
     <p>一边原谅慌张的莱斯利，一边看尤里亚。</p>
     <p>虽然装出一副很得意的样子，但实际上这次真的是功不可没。而且，只要命令的发出方法没有错误，就可以确认能很好地发挥作用。</p>
     <p>嘛，作为梅赛德斯来说，如果说欲望的话，本来就希望他停止放火……确实没有命令“如果有人想在帐篷里放火的话就停下来”。</p>
     <p>所以尤里亚很老实，一直盯着格拉西兰放火吧。</p>
     <p>话虽如此，梅赛德斯并没有谴责这一点的意思。</p>
-    <p>现在姑且回收摔跤就已经充分发挥了作用。</p>
+    <p>现在姑且回收莱斯利就已经充分发挥了作用。</p>
     <p>“做得好的尤里亚”</p>
-    <p>说些安慰的话，然后让摔跤手下台。</p>
-    <p>摔跤选手似乎还没有从混乱中恢复过来，但稍微平静了些，停止了喧哗。</p>
+    <p>说些安慰的话，然后让莱斯利下台。</p>
+    <p>莱斯利似乎还没有从混乱中恢复过来，但稍微平静了些，停止了喧哗。</p>
     <p>梅赛德斯为了尽量不刺激她而选择了语言。</p>
     <p>“对不起。我是为了以防万一才给你保驾的。</p>
     <p>从那个叫格拉西恩的家伙那里，感觉到了很容易就越过了一线的危险”</p>
-    <p>一边说话一边用地牢的力量复制那本书，装作从怀中取出的样子给摔跤选手看。</p>
-    <p>以那股火势，其他的发明几乎全灭了，但只要有这本书和摔跤的话，就可以重做。</p>
-    <p>摔跤手想要插入火焰，也是为了救出这本书吧。</p>
+    <p>一边说话一边用地牢的力量复制那本书，装作从怀中取出的样子给莱斯利看。</p>
+    <p>以那股火势，其他的发明几乎全灭了，但只要有这本书和莱斯利的话，就可以重做。</p>
+    <p>莱斯利想要插入火焰，也是为了救出这本书吧。</p>
     <p>果然，看到书的莱斯利像抢一样从梅赛德斯那里拿了书。</p>
     <p>“啊？这个……啊？为什么梅赛德斯有？话说点火的是格拉西兰？”</p>
     <p>“如果问为什么要带，是因为在帐篷燃烧前为了慎重起见回收了。</p>
@@ -109,7 +109,7 @@
     <p>和以前相比，智能好像提高了很多。如果是这种情况的话，今后也会成为有用的东西吧。</p>
     <p>“但是，格拉西兰就是这样……确实是个讨厌的家伙，但没想到能做到那种程度……”</p>
     <p>“那帮家伙会干的。”</p>
-    <p>作为一名摔跤选手，也许是因为认生，所以有点想相信格拉西兰吧。</p>
+    <p>作为一名莱斯利，也许是因为认生，所以有点想相信格拉西兰吧。</p>
     <p>但是梅赛德斯几乎断定这是格拉斯干的。</p>
     <p>人是可以轻易越过界限的生物。</p>
     <p>人比人自己想象的要遥远，没有自制心。</p>
