--- a/OEBPS/Text/c122.xhtml
+++ b/OEBPS/Text/c122.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>122.  决斗</h1>
-    <p>当天晚上，摔跤手凭自己的力量与格拉西恩决斗。</p>
+    <p>当天晚上，莱斯利凭自己的力量与格拉西恩决斗。</p>
     <p>她和梅赛德斯在同一家旅馆呼呼地睡着了。</p>
     <p>要说为什么她会在吸血鬼村落的旅馆，那是因为梅赛德斯把帐篷被烧得走投无路的莱斯利带到了这里。</p>
     <p>梅赛德斯一边看着让鼻子灯笼鼓起来的莱斯利，一边思考着这件事真是麻烦啊。</p>
@@ -39,7 +39,7 @@
     <p>而且她的鳟鱼枪是特制的，是可以连射的东西。</p>
     <p>虽然不知道格拉西兰的魔法能力，但是在使用魔法之前无论如何都会产生“间隔”。</p>
     <p>但是，莱斯利的鳟鱼枪可以马上发射，在决斗开始的同时，也可以击穿格拉西兰的头使之绝命。</p>
-    <p>虽然从摔跤的性格上来说不会那样做，但是偏离目标撞到头部的可能性并不是零。</p>
+    <p>虽然从莱斯利的性格上来说不会那样做，但是偏离目标撞到头部的可能性并不是零。</p>
     <p>所以格拉西恩为了将自己的死亡和失败的可能性变为零而瞄准了鳟鱼枪……这是一件很容易预料到的事情。</p>
     <p>不久，尤里亚带着一个精灵回来，跪在了梅赛德斯。</p>
     <p>旁边有一个手脚被绑住的精灵，看起来是一个很不情愿地跟随格拉西恩的家伙。</p>
@@ -88,10 +88,10 @@
     <p>那家伙是不会使用魔法的，会使用魔法。那样的话应该不会有失败的因素。</p>
     <p>倒不如说这是一个在大众面前让莱斯利丢脸，教他们上下关系的最好机会。</p>
     <p>唯一的不安……不，应该有像莱斯利那样的对手不安，也不应该有……总之，有一个不能说是担心事项的要素。</p>
-    <p>那是摔跤手拿的枪。</p>
+    <p>那是莱斯利拿的枪。</p>
     <p>她玩弄着工具制造了各种各样的破烂，恐怕那枪也是那样的破烂货之一吧。和普通的鳟鱼枪不同，不知道它有什么性能。</p>
     <p>当然，垃圾什么的完全不需要害怕，魔法也不会输给那样的东西……但是，如果是十万中一个，百万中一个的可能性的话，也许会发生“万一”。</p>
-    <p>如果不偶然遇到一个摔跤生涯中最幸运的人，那我一生中最倒霉的奇迹般的偶然，那是不可能有的事……也许，摔跤选手所发射的子弹击中了自己，最坏的可能会被杀……也许有。</p>
+    <p>如果不偶然遇到一个莱斯利生涯中最幸运的人，那我一生中最倒霉的奇迹般的偶然，那是不可能有的事……也许，莱斯利所发射的子弹击中了自己，最坏的可能会被杀……也许有。</p>
     <p>不，当然反复了，格拉西恩完全感觉不到莱斯利的枪之类的威胁。至少他自己是这么认为的。</p>
     <p>但是，世上重要的是要做好任何事情都无法预料的“万一”的准备……所以格拉西恩为了不让那一点点的“万一”发生，在半夜里让部下偷偷潜入了莱斯利的地方，让子弹换成了空炮。</p>
     <p>当然完全没有威胁的想法。就算是实弹也不会输的。</p>
@@ -108,7 +108,7 @@
     <p>今后不会碰火的人有烧伤的觉悟吗？</p>
     <p>想吃饭的人，今后有饿死的觉悟吗？</p>
     <p>对于知道不会发生的事情，不需要觉悟。</p>
-    <p>所以格拉西恩以从容的态度嘲笑了摔跤。</p>
+    <p>所以格拉西恩以从容的态度嘲笑了莱斯利。</p>
     <p>“好像还不知道实力差距。</p>
     <p>……好，一发。我先给你打一枪”</p>
     <p>既然这样，就让我们看看莱斯利慌乱绝望的表情吧。</p>
