--- a/OEBPS/Text/c005.xhtml
+++ b/OEBPS/Text/c005.xhtml
@@ -23,14 +23,14 @@
     <p>在纸箱中，似乎有很多人将这些宠物当作探索的伙伴。</p>
     <p>梅赛德斯也一边想着如果金钱充裕的话可以考虑一下一边离开了店铺。</p>
     <p>今后前往的shutakudanjon在离开了36km的位置。</p>
-    <p>因为徒步的时速与吸血鬼和人也不那么变化是时速7km的地方。</p>
+    <p>因为徒步的时速与吸血鬼和人也没什么差的时速7km。</p>
     <p>前台说大概五个小时左右，算起来也对。</p>
     <p>马车的话时速10km左右，大概3个半小时就到了。</p>
     <p>虽然觉得有些慢，但如果不是急行马车的话就是这样的。</p>
-    <p>但是做那样的事往返花费了6小时以上，到白天。</p>
+    <p>但是做那样的事往返花费了6小时以上，就到白天了。</p>
     <p>因此梅赛德斯决定用自己的双脚来缩短距离。</p>
     <p>去了东京都外的梅赛德斯轻微地做伸展运动放松身体，用地图确认方位。</p>
-    <p>然后整理了地图，狠狠地踢着地面跑。</p>
+    <p>然后整理了地图，狠狠地踢着地面跑动。</p>
     <p>在后方卷起一阵暴风从那个地方消失似的加速。</p>
     <p>景色以高速向后流动，时不时地跳跃着出现在道路上的岩石和树木，越过。</p>
     <p>障碍物多的时候发动bafurien浮起，从那里空中冲刺。</p>
@@ -41,7 +41,7 @@
     <p>尽管如此，即使这样，一小时之内推进1000km以上的速度也太快了。</p>
     <p>开始跑仅仅120秒，两分钟后梅赛德斯到达了作为目的地的舒塔克迷宫前。</p>
     <p>如果能再稍微缩短障碍物等的时间损失说不定更快地来,不过，姑且是及格点吧。</p>
-    <p>“那么……”</p>
+    <p><span class="character">“那么……”</span></p>
     <p>到迷宫前的地方看一下周围。</p>
     <p>这里好像草原一样。午睡看起来很舒服。</p>
     <p>在稍微远一点的位置能看见村落一样的东西,不过，那是为了标语者的转播地点吧。</p>
@@ -53,34 +53,34 @@
     <p>迷宫里面，怎么说呢，这就是迷宫。</p>
     <p>每次走路都会咚咚的脚步声回响，让人毛骨悚然。</p>
     <p>没有光源，只是被从入**进来的光一点点照亮就漆黑了。稍微拐个弯儿就黑了。</p>
-    <p>梅赛德斯想，这可糟糕了。我下个决心带灯笼。</p>
+    <p>梅赛德斯想，这可糟糕了。下次得带灯笼。</p>
     <p>就算是吸血鬼，在完全没有光的黑暗中，也看不到任何东西。</p>
     <p>没办法，只好折回一次，从地牢外面的树上折断几根看上去很坚固的树枝，然后再进入地牢。</p>
     <p>然后两根树枝交叉，左手高速拉伸引起摩擦热。</p>
     <p>最初没能顺利进行，但经过几次尝试，树木开始发热，不久便开始起火。</p>
-    <p>“好，去吗？”</p>
+    <p><span class="character">“好，去吗？”</span></p>
     <p>这样暂且有了光源。</p>
     <p>虽然不会持续太久，但是在树枝残留的期间应该可以探索到。</p>
     <p>即便如此，一只手拿着火种一边地图一边探索，真是出乎意料的麻烦。</p>
     <p>书写时将火种置于无重力状态后浮出水面，但效率并不高。</p>
     <p>如果买灯笼的话，最好是挂在手腕上的。</p>
     <p>就这样，虽然只写了一点点，但是树枝却燃烧殆尽了。</p>
-    <p>「我服了。怎么回事？”</p>
+    <p><span class="character">「我服了。怎么回事？”</span></p>
     <p>有必要改变探索的方法。梅赛德斯很早就感受到了它的必要性。</p>
     <p>在黑暗中闭上眼睛思考，却想不出好的方法。</p>
     <p>如果至少自己能使用的魔法是火，光源也不感到为难,不过，遗憾地是地。索取没有的东西是没有意义的。</p>
-    <p>“……属性，或者”</p>
+    <p><span class="character">“……属性，或者”</span></p>
     <p>想起了在行会成为探索者时得到的卡片上写着自己的属性。</p>
     <p>一个是地，另一个是风。</p>
     <p>没有意图就知道属性是侥幸。用这种风的属性能做点什么吗？</p>
     <p>这样想着，不知从哪里传来了石头落下的声音。</p>
     <p>吸血鬼的听觉比作为人的时候要好得多。集中精力就可以捡到一些细小的声音。</p>
     <p>这时，梅赛德斯脑海中浮现出了一个妙计。</p>
-    <p>“要试试吗？”</p>
+    <p><span class="character">“要试试吗？”</span></p>
     <p>在认识到自己的属性是风的今天，感觉能比以前更强地感受到风的力量。</p>
     <p>梅赛德斯吸入了呼吸，将魔力积蓄在喉咙里。</p>
     <p>并且印象是，声音。从嘴里发出的声音在空气中传播，像风一样穿过这个迷宫，在脑内描绘出反射回来的样子。</p>
-    <p>“———！”</p>
+    <p><span class="character">“———！”</span></p>
     <p>发出人耳朵听不到的音波，把全部的感觉集中到耳朵上。</p>
     <p>返回的声波的方向，到声音回来为止的时间，由于接受那些的事梅赛德斯的头中浮起了这个地牢的结构。</p>
     <p>然后在脑内制作地图后迅速起火，在羊皮纸上画地图。</p>
@@ -96,17 +96,17 @@
     <p>对于身高只有130左右的梅赛德斯来说，这个魔物大到可以仰视的程度。</p>
     <p>更不用说前世是生活在和平的日本人，只在比自己还大的动物园等安全被保障了的地方看过。</p>
     <p>一般情况下气压是很正常的。但是，梅赛德斯连自己都觉得不可思议，并没有感觉到威胁。</p>
-    <p>“原来如此，这真是幻想啊。</p>
-    <p>嘛，既然玩了saker，就知道总有一天战斗的时候会到来。</p>
-    <p>……来吧。我会让你试试我的坚强的」</p>
-    <p>“戈尔阿！”</p>
+    <p><span class="character">“原来如此，这真是幻想啊。</span></p>
+    <p><span class="character">嘛，既然玩了saker，就知道总有一天战斗的时候会到来。</span></p>
+    <p><span class="character">……来吧。我会让你试试我的坚强的」</span></p>
+    <p><span class="character">“噶啊啊啊啊啊！”</span></p>
     <p>巨大的鼹鼠应梅赛德斯的邀请咆哮着。</p>
     <p>一边用奇妙的心情看着被甩下的指甲，一边轻轻地抓住一根指甲阻止攻击。</p>
     <p>就那样成为力量比较,不过，鼹鼠完全不能动手臂。</p>
     <p>无论怎么用力也无法从梅赛德斯纤细的手臂中逃脱，不停地颤抖着。</p>
     <p>相反，梅赛德斯用从容的表情加强了握力，使抓着的鼹鼠的指甲裂开了。</p>
     <p>然后用力轻轻地将指甲放下，鼹鼠的手臂也随之下降，被迫做出向梅赛德斯跪下的姿势。</p>
-    <p>“啊啊！”</p>
+    <p><span class="character">“啊啊！”</span></p>
     <p>空着的人的手臂袭击了梅赛德斯,不过，这边也不难地接住。</p>
     <p>于是，鼹鼠张开嘴巴，咬住了梅赛德斯的肩膀。</p>
     <p>与此相对，梅赛德斯在肩膀上用力，敢于被咬。</p>
@@ -124,14 +124,13 @@
     <p>然后鼹鼠打碎了墙壁，飞到了另一边的通道，再一次穿过墙壁，再向对面的通道走去。</p>
     <p>然后在与第三面墙壁相撞的地方终于停了下来，剥开白眼倒下了。</p>
     <p>鼹鼠已经一动也不动。</p>
-    <p>“……死了吗？</p>
-    <p>不，是我杀的……”</p>
+    <p><span class="character">“……死了吗？不，是我杀的……”</span></p>
     <p>杀死了生物。</p>
     <p>认识到这个事实的梅赛德斯静静地闭上眼睛默哀。</p>
     <p>然后，看到自己微微颤抖的手不禁笑了出来。</p>
     <p>我觉得太好了。我虽然对杀死生物感到些许的动摇。</p>
     <p>这个冰冷的心，也稍微残留着人性。</p>
-    <p>“过几天，习惯之后就什么都感觉不到了吧……”</p>
+    <p><span class="character">“过几天，习惯之后就什么都感觉不到了吧……”</span></p>
     <p>嘲笑自己般地笑，擦拭汗水。</p>
     <p>这就是在这个世界生存的意义。这就是所谓的杀。</p>
     <p>不知不觉心**，从前世开始稀薄的人类们越发远离吧。</p>
