--- a/OEBPS/Text/c014.xhtml
+++ b/OEBPS/Text/c014.xhtml
@@ -11,26 +11,26 @@
 
 <body>
     <h1>14. 战力强化</h1>
-    <p>离开行会的梅赛德斯从报酬中减去一半，交给了马吉特。</p>
-    <p>112万5千蛙。这是梅赛德斯和马吉特的金额。</p>
+    <p>离开行会的梅赛德斯从报酬中减去一半，交给了玛吉特。</p>
+    <p>112万5千蛙。这是梅赛德斯和玛吉特的金额。</p>
     <p>这个金额大致是，在大人没有性命的情况下从事有实惠的工作，半年左右就能赚到的金额。</p>
     <p>但是这个世界上当然没有工薪阶层，所以不知道真正意义上的平均收入。</p>
     <p>“啊，谢谢。但是这样能收到吗……？”</p>
     <p>「啊。那是你赚来的正当报酬”</p>
-    <p>如果有这笔钱得到马吉特的话，应该可以暂时无问题地生活吧。</p>
+    <p>如果有这笔钱得到玛吉特的话，应该可以暂时无问题地生活吧。</p>
     <p>她妈妈也能吃到好吃的东西。</p>
     <p>但是反过来说，这样就结束了，过了几个月又会变成原来的样子。</p>
     <p>所以，这里还没有结束。</p>
     <p>这只是为了应付眼前的钱。</p>
     <p>“首先用这笔钱买点吃的东西吧。想让妈妈吃好吃的东西吧？”</p>
     <p>“嗯！”</p>
-    <p>梅赛德斯带着马吉特去大型杂货店。</p>
+    <p>梅赛德斯带着玛吉特去大型杂货店。</p>
     <p>然后买了食材，结算了。</p>
-    <p>但是买食材的只有马吉特，梅赛德斯他们只是在看。</p>
+    <p>但是买食材的只有玛吉特，梅赛德斯他们只是在看。</p>
     <p>想买奇怪的东西的时候会从旁边插嘴，但基本上是让她做。</p>
     <p>被提问的话就回答，但只要不被提问，并不一定要说那个好。</p>
-    <p>马吉特好像也知道这一点，虽然笨手笨脚，但还是拼命挑选哪种食材比较好，最后买完了东西。</p>
-    <p>结束之后，梅赛德斯又让马吉特买了一本书。</p>
+    <p>玛吉特好像也知道这一点，虽然笨手笨脚，但还是拼命挑选哪种食材比较好，最后买完了东西。</p>
+    <p>结束之后，梅赛德斯又让玛吉特买了一本书。</p>
     <p>名字是《简单易懂的红叶的读法作者·大猩猩》。只有冲锋。</p>
     <p>虽然名字很糟糕，但是是关于字的读法被详细写了的学习用书。</p>
     <p>以前，梅赛德斯认为这个世界的书没有插图，但也许这是唯一带插图的书。</p>
@@ -38,11 +38,11 @@
     <p>梅赛德斯也在家里用同样的书记住了文字。真想和这位作者见一面。</p>
     <p>“这样就能读写文字了。那样的话就能从事代书人的工作。</p>
     <p>代书人除了做纸箱、等级雇佣兵、士兵等赌上性命的工作以外，都是能稳定赚钱的工作之一”</p>
-    <p>梅赛德斯推荐马吉特赚钱的工作被称作代书人。</p>
+    <p>梅赛德斯推荐玛吉特赚钱的工作被称作代书人。</p>
     <p>这是代写各种文件、情书、请愿书等的工作，识字率并不是很高，在这个世界上可以挣很多钱。</p>
     <p>在现代社会，不像日本那样谁都能读写文字，而写文字的工作是非常有必要的。</p>
     <p>他们主要是拉着摊子在街上工作，其中也有不动工地通过中介接受工作的人。</p>
-    <p>马吉特外表看起来太幼稚了，不善于让她自己在路边摊上走来走去的话，只能是流氓的好食物。</p>
+    <p>玛吉特外表看起来太幼稚了，不善于让她自己在路边摊上走来走去的话，只能是流氓的好食物。</p>
     <p>所以梅赛德斯一边让谁做中间人，一边想让她做代书人。</p>
     <p>如果顺利的话，她可以安定地赚钱，即使被父亲抛弃也能活下去吧。</p>
     <p>“我也偶尔会去那里教你，但并不是随时都能去。</p>
@@ -87,7 +87,7 @@
     <p>虽说如此，但也并不是只买贵的东西就行。譬如无意义安上了宝石的装饰用的剑等论外中的论外。浪费钱。</p>
     <p>看起来很朴素也没关系。不管怎样追求性能和机能美的装备拘泥。</p>
     <p>“上街了，本凯，小黑。也改变你们的装备吧」</p>
-    <p>带着本凯和克洛在城市里巡回，巡视着各种各样的武器。</p>
+    <p>带着本凯和小黑在城市里巡回，巡视着各种各样的武器。</p>
     <p>首先，到目前为止使用的武器没有一个例外全部卖掉。已经不需要这些了。</p>
     <p>然后首先梅赛德斯买了自己用的哈尔巴德。</p>
     <p>与自己的战斗风格商量，从最初开始考虑作为爱用的武器是锤子还是斧子。</p>
@@ -122,7 +122,7 @@
     <p>而且好像这种程度的重量不苦，像以前那样轻快地走着。</p>
     <p>先把武器全装上去买了很多。</p>
     <p>今后，可以根据委托的内容改变他的装备。</p>
-    <p>克洛的装备是……大大的狼用铠甲也有的事,不过，因为反过来快要阻碍运动了预先留下。</p>
+    <p>小黑的装备是……大大的狼用铠甲也有的事,不过，因为反过来快要阻碍运动了预先留下。</p>
     <p>装备结束后接下来就是消耗品。</p>
     <p>因为已经有食物，所以要扔掉，寻找恢复用的道具。</p>
     <p>如果这个世界使用方便HP用快攻象恢复一样的药和药草等没有。</p>
@@ -139,7 +139,7 @@
     <p>“嗯。的确”</p>
     <p>原来梅赛德斯一个人拿不完行李，不能和武器并存，所以作为行李员把本凯拉了进去。</p>
     <p>可是本凯总觉得是战斗力。可以正常使用。</p>
-    <p>克洛的速度很快，是能载着梅赛德斯战斗的战力。让别人拿行李不是明智的事情。</p>
+    <p>小黑的速度很快，是能载着梅赛德斯战斗的战力。让别人拿行李不是明智的事情。</p>
     <p>“确实想要不参加战斗而专心拿着行李的成员。</p>
     <p>知道了。去宠物店吧”</p>
     <p>梅赛德斯到以前增加伙伴的时候潜入到迷宫自己捕获着。</p>
