--- a/OEBPS/Text/c019.xhtml
+++ b/OEBPS/Text/c019.xhtml
@@ -23,10 +23,10 @@
     <p>好吃的东西可以保持美味。这将对今后的航海产生重大影响”</p>
     <p>在这样充满活力的夜路上走过一辆马车。</p>
     <p>在里面的是梅赛德斯和他的母亲——琉迪亚·格鲁内瓦尔特。然后是随从的老婆婆三人。</p>
-    <p>本凯和克洛考虑到万一，现在每个地牢都进入了哈尔巴德。</p>
+    <p>本凯和小黑考虑到万一，现在每个地牢都进入了哈尔巴德。</p>
     <p>说点题外话，梅赛德斯想和哈尔巴德长久地交往，所以取名为“蓝izen”。</p>
     <p>永远只是叫哈尔巴德的话会觉得无聊。</p>
-    <p>“话说回来，邮件，你居然能借这种马车了。”</p>
+    <p>“话说回来，梅尔，你居然能借这种马车了。”</p>
     <p>「啊。赛车的工作进行得很顺利”</p>
     <p>琉迪亚大声的询问，梅赛德斯也用平和的声音回答。</p>
     <p>梅赛德斯平时是拔身刀一样的尖锐，不会破坏冰冷的态度，因为他不相信对方。</p>
@@ -55,7 +55,7 @@
     <p>代替他的贵族来访，连休息的时间都没有。</p>
     <p>虽然他不是贵族，但是罐头的贩卖等现在已经一举成名。</p>
     <p>大厅的边缘聚集着以前见过的其他侧室的孩子，一看到梅赛德斯就慌忙移开了视线。</p>
-    <p>马吉特也在对面，为了不引人注目地蜷缩着。</p>
+    <p>玛吉特也在对面，为了不引人注目地蜷缩着。</p>
     <p>这个大厅平时或许是跳舞用的，中央格外敞开。</p>
     <p>恐怕今晚，在那里与菲利克斯作战吧。</p>
     <p>反正都是故意输的战斗。对我来说无所谓。</p>
@@ -106,9 +106,9 @@
     <p>虽然这么想着，梅赛德斯还是从座位上站了起来，向前走去。</p>
     <p>但是参加者们和菲利克斯仅仅是出乎意料。</p>
     <p>一定是在某种程度上感到紧张，或者是在意周围人的情况下出来的，这样想的话，紧张感之类的微尘都没有，堂堂正正地出来了。</p>
-    <p>之后，老板和弗里特、莫尼卡、马吉特继续向前迈进。</p>
+    <p>之后，老板和弗里特、莫尼卡、玛吉特继续向前迈进。</p>
     <p>他们和梅赛德斯不同，多少有些紧张，脸也绷紧了。</p>
-    <p>马吉特等快要哭出来了。</p>
+    <p>玛吉特等快要哭出来了。</p>
     <p>“这五个勇敢的兄弟姐妹和我比力量。</p>
     <p>但是，我不想成为对女孩子使用暴力的男人。</p>
     <p>于是，我和三个妹妹约定不再反击。</p>
@@ -118,17 +118,17 @@
     <p>但是作为最低限度的绅士的气概好象持(有)着。</p>
     <p>这样的话就可以安心输了。</p>
     <p>“那么，先从你开始吧。”</p>
-    <p>首先菲利克斯指名的是马吉特。</p>
-    <p>马吉特提心吊胆地看着周围，最后看到了梅赛德斯。</p>
+    <p>首先菲利克斯指名的是玛吉特。</p>
+    <p>玛吉特提心吊胆地看着周围，最后看到了梅赛德斯。</p>
     <p>梅赛德斯点了点头，犹如下定决心向菲利克斯发出了拳头。</p>
     <p>不要轻视这只是幼女的打击。作为吸血鬼的她的膂力用人来说综合格斗技世界王者一击使之闷绝的程度能。</p>
-    <p>但是菲利克斯面带笑容接受了这件事，就像什么事都没有发生过一样抱起了马吉特。</p>
+    <p>但是菲利克斯面带笑容接受了这件事，就像什么事都没有发生过一样抱起了玛吉特。</p>
     <p>“好的，谢谢。各位，为小小的勇者鼓掌！”</p>
     <p>哎呀，这是理所当然的事。</p>
     <p>虽说是吸血鬼，但幼女一拳就受到了伤害是不可能的。</p>
     <p>菲利克斯没有按照宣言进行反击，而是以温柔的哥哥的身份来表现自己的绅士。</p>
     <p>恐怕对后两个妹妹也打算同样对待吧。</p>
-    <p>接着，第二只莫尼卡比马吉特还锋利，踢出了落地球。</p>
+    <p>接着，第二只莫尼卡比玛吉特还锋利，踢出了落地球。</p>
     <p>但是菲利克斯也承受了这一点，同样地抱起她。</p>
     <p>“那么，接下来就是你了。给我”</p>
     <p>“……”</p>
@@ -139,7 +139,7 @@
     <p>而且还是接受了英才教育的精英。也许比自己更加坚强。</p>
     <p>（……先打三、不，打两成吧）</p>
     <p>如果攻击了两成，那么就是鼹鼠和骸骨剑士这些弱小的魔物一下子被击死的程度。</p>
-    <p>如果是本凯和克洛的话可以忍耐，甚至连舒瓦兹·史特里耶都没有效果。就是这样的威力攻击。</p>
+    <p>如果是本凯和小黑的话可以忍耐，甚至连舒瓦兹·史特里耶都没有效果。就是这样的威力攻击。</p>
     <p>梅赛德斯想，这样的话就没问题了。</p>
     <p>（嘛，忍耐吧……大概）</p>
     <p>梅赛德斯没有太大的气势，自然地缩短了鲣鱼和菲利克斯的距离。</p>
@@ -186,7 +186,7 @@
     <p>其他种族的医生「由于好好地摄取营养的事病也有痊愈的事」。</p>
     <p>吸血鬼医生：“好的，我把坏的地方删掉。再生自己做。不死的话不久就会痊愈的吧」</p>
     <p>这就是这个国家的粮食情况。基本上只要吸血就可以了，所以不考虑做饭。</p>
-    <p>面包是埃尔菲的国家，香肠是雪梅雷的国家，葡萄酒是从福格拉国家进口的。连自己做都不行。</p>
+    <p>面包是精灵的国家，香肠是雪梅雷的国家，葡萄酒是从福格拉国家进口的。连自己做都不行。</p>
     <p>这个种族，因为异怪进入着chito成分反过来办法啦完全不做。</p>
     <p>为了克服其他种族的困难，在新发现和新开发的期间，仅靠血就能解决的吸血鬼是不会前进的。这太过分了。</p>
     <p>Q、如果血里有寄生虫会怎么样呢？</p>
