--- a/OEBPS/Text/c028.xhtml
+++ b/OEBPS/Text/c028.xhtml
@@ -103,14 +103,14 @@
     <p>由于象雪橇和forgera也象同样一样的东西，完全没做语言的统一化。</p>
     <p>但是只有精灵不同。他们虽然是这个世界上最繁荣的法鲁什，但语言却完全统一了。</p>
     <p>譬如即使能说orukusu语，去了其他的国家同样的吸血鬼也有话不通的事。</p>
-    <p>但是精灵不是那样的。只要掌握了埃尔菲语，就一定能沟通。</p>
-    <p>因此埃尔菲语的通用性很高，在精灵以外的法尔什，行会的职员等也经常记得埃尔菲语。</p>
-    <p>即使去了语言不通的异国，只要掌握了埃尔菲语，就有可能实现。</p>
+    <p>但是精灵不是那样的。只要掌握了精灵语，就一定能沟通。</p>
+    <p>因此精灵语的通用性很高，在精灵以外的法尔什，行会的职员等也经常记得精灵语。</p>
+    <p>即使去了语言不通的异国，只要掌握了精灵语，就有可能实现。</p>
     <p>唯有这个学科，果然梅赛德斯也从不富裕。</p>
     <p>前世的知识完全不起作用的未知的语言等不能简单地学会。</p>
     <p>梅赛德斯的老家有本记录了其他吸血鬼国度的语言的书，梅赛德斯也读了之后勉强能说这些话。</p>
     <p>但是，因为同样是吸血鬼，和奥克思语有许多相似的地方。</p>
-    <p>但是埃尔菲语是在来到这个学园后才开始学习的，而且和奥尔克斯语语言体系完全不同。</p>
+    <p>但是精灵语是在来到这个学园后才开始学习的，而且和奥尔克斯语语言体系完全不同。</p>
     <p>从某种意义上说，第一次和别人站在同一条起跑线上学习。</p>
     <p>但是，梅赛德斯并不觉得棘手是件苦事。变得明白不明白的事给予了充足感。</p>
     <p>她基本上是勤奋，知识的增加是找到喜悦的类型。</p>
