--- a/OEBPS/Text/c052.xhtml
+++ b/OEBPS/Text/c052.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>52.  追踪问题</h1>
+    <h1>52. 追踪问题</h1>
     <p>埃德尔罗特学院除了前期末一次，后期末结束也有一次长假。</p>
     <p>一年两次的这个假期被定为十六日，如果那个结束再返回到在学园的生活。</p>
     <p>作为梅赛德斯，我并没有回家的意思，本想在学园里自习一下，可是家里来了一辆迎接我的马车，所以不得不回去了。</p>
@@ -18,7 +18,7 @@
     <p>菲利克斯说“这是第一次接人”。</p>
     <p>也就是说，这辆马车来接我的是梅赛德斯，尽管如此，重要的梅赛德斯却没有乘坐，只乘坐菲利克斯回去的话，那岂止是丢脸。</p>
     <p>“姐姐，你回来啦！”</p>
-    <p>回到屋子里，马吉特跑过来了。</p>
+    <p>回到屋子里，玛吉特跑过来了。</p>
     <p>温柔地接受那个，微笑着给(你)看。</p>
     <p>平时因为毫无表情而被认为是铁面具，但梅赛德斯并不是笑不出来，也不是表情筋就死了。</p>
     <p>如果有那个心情笑的事也能，制作象悲伤一样的表情的事也能。</p>
@@ -35,10 +35,10 @@
     <p>“欢迎回来，姐姐大人”</p>
     <p>“……啊，嗯。我回来了”</p>
     <p>妹妹还是一如既往的行动和思考都无法读懂。</p>
-    <p>梅赛德斯放下马吉特，前往作为母亲的鲁迪亚前。</p>
+    <p>梅赛德斯放下玛吉特，前往作为母亲的鲁迪亚前。</p>
     <p>她的血色比以前好多了，也许是心理作用吧，变得光彩夺目。</p>
     <p>原本就是很有魅力的女性。只要好好地摄取营养，就会变成这样谁都会回头的美女。</p>
-    <p>“你回来了，邮件。学园里的事，让我听听吧”</p>
+    <p>“你回来了，梅尔。学园里的事，让我听听吧”</p>
     <p>“是，母亲”</p>
     <p>虽然梅赛德斯的语言很冷淡，但是母亲也知道她是那样的女儿，所以什么也不说。</p>
     <p>只是用笑容迎接回来的女儿。</p>
@@ -54,7 +54,7 @@
     <p>即使那样，重新来看的话，菲利克斯确实与母亲相似。</p>
     <p>脸部部分相似，发色不同，确实是父子关系。</p>
     <p>并且还是丝毫没有伯恩哈特要素。外表也好，性格也好。</p>
-    <p>话虽如此，马吉特和莫尼卡也和伯恩哈特一点都不像，说不定伯恩哈特的遗传基因很弱。</p>
+    <p>话虽如此，玛吉特和莫尼卡也和伯恩哈特一点都不像，说不定伯恩哈特的遗传基因很弱。</p>
     <p>感觉玻利斯的暴力面貌和相貌有点像。</p>
     <p>然后还有一个人……还有一个人吗？哎呀，感觉好像已经有一个人了，是谁呢？</p>
     <p>总觉得好像有个男人叫什么存在感很薄的戈特……。</p>
@@ -71,7 +71,7 @@
     <p>因为对于吸血鬼来说，早晨和其他法鲁什相比就如同深夜一般。</p>
     <p>据说当天的正餐晚餐全家一起吃，在格鲁内瓦尔特家成为了新奇的情况。</p>
     <p>在伯恩哈特，他的妻子瓦尔布加。以琉迪亚为首的侧室的女性四人。　</p>
-    <p>还有菲利克斯、梅赛德斯、莫尼卡、马吉特、戈特弗里特等。</p>
+    <p>还有菲利克斯、梅赛德斯、莫尼卡、玛吉特、戈特弗里特等。</p>
     <p>首先端出来的菜是理所当然的香肠。</p>
     <p>一口咬下去肉汁就溢出来，被浓郁的肉美味所包围的香草和香料的香味直接冲击了味觉。</p>
     <p>味浓而疲惫的舌头，配上马铃薯沙拉奶油冻的清爽口感十分相配。</p>
@@ -114,9 +114,9 @@
     <p>自己是女人，在贵族社会中，女人继承家督，是违背传统的，存在着令人感激的缺点。</p>
     <p>那么，没有办法不主张这个了。</p>
     <p>必须遵守有规格的传统……这是连有名的某小说的旁若无人被知道的邪恶的帝王也遵守的事。</p>
-    <p>“嘛，我也是，邮件这么说的话就没意见了。菲利克斯不是很好吗？</p>
+    <p>“嘛，我也是，梅尔这么说的话就没意见了。菲利克斯不是很好吗？</p>
     <p>这个孩子，即使没有家督之类继承也快要能行了。</p>
-    <p>啊，但是这种情况下连邮件一起从宅邸里消失了”</p>
+    <p>啊，但是这种情况下连梅尔一起从宅邸里消失了”</p>
     <p>琉迪亚好像也赞成菲利克斯的继承人。</p>
     <p>不过，这只是姑娘赞成而已的适当赞同。</p>
     <p>但是其他……特别是戈特弗里特的母亲坚决反对，在这里出现了菲利克斯派和反对派。</p>
