--- a/OEBPS/Text/c067.xhtml
+++ b/OEBPS/Text/c067.xhtml
@@ -96,7 +96,7 @@
     <p>令人在意的是没有人去解析它……这并不是没有做，而是可能做不到。</p>
     <p>我们吸血鬼受到了不自然的思考诱导和思考限制。梅赛德斯对那件事已经没有怀疑。</p>
     <p>而且如果没有前世的知识的话，甚至连怀疑都做不到吧。</p>
-    <p>这一定不仅仅是吸血鬼的故事。埃尔菲、福格拉、希梅雷应该也都通用。</p>
+    <p>这一定不仅仅是吸血鬼的故事。精灵、福格拉、希梅雷应该也都通用。</p>
     <p>神是……不，人类到底在想什么做了这样的事……。</p>
     <p>总之，现在不是考察那种事情的时候。</p>
     <p>“……我不管这是什么。</p>
