--- a/OEBPS/Text/c076.xhtml
+++ b/OEBPS/Text/c076.xhtml
@@ -80,8 +80,8 @@
     <p>无法回避，刻下了几具魔物，小黑也受了伤。</p>
     <p>复制品振翅高飞，用风压将花瓣吹飞，修夫用平底锅里的火焰全部烧毁。</p>
     <p>并且本凯因为是全身铠甲流石平安,不过，由于这个很大地战况趋向了向。</p>
-    <p>“回来，克洛”</p>
-    <p>因为暂且就这样克洛快要被杀了前返回，重新召唤了蟑螂的群。</p>
+    <p>“回来，小黑”</p>
+    <p>因为暂且就这样小黑快要被杀了前返回，重新召唤了蟑螂的群。</p>
     <p>但终究只是凑齐了数量，既没有战略也没有阵形。</p>
     <p>这样的话战况不会被颠覆吧。</p>
     <p>所以作为迷宫主人的战斗，梅赛德斯输了。</p>
