--- a/OEBPS/Text/c103.xhtml
+++ b/OEBPS/Text/c103.xhtml
@@ -18,7 +18,7 @@
     <p>水泥块和现场附近采集的沙子混合后注入模具，晾干数日后完成。</p>
     <p>由于堆积那个块的事，吸血鬼们急速地造成着即席的住所。</p>
     <p>对面排列着陌生的帐篷，耳朵长长的白色的人们来往于此。</p>
-    <p>他们被认为是这个世界上最繁荣的存在……是埃尔菲。</p>
+    <p>他们被认为是这个世界上最繁荣的存在……是精灵。</p>
     <p>喜欢稍微宽松一点的衣服，整体上闪闪发光的东西很多。</p>
     <p>他们使用的帐篷是移动式的住所，当场组装完成的骨架，上面用羊（型魔物）的毛做成的毛毡就完成了。</p>
     <p>大规模的移动使用的车轮也附着，与至今还建造着motamota和家的吸血鬼比手法好。</p>
@@ -31,7 +31,7 @@
     <p>所以分居是很重要的。懒惰的话就会引起多余的混乱。</p>
     <p>梅赛德斯作为艾德鲁罗特学院的特别参加框架来到了格伦萨。</p>
     <p>除了她以外，还有几个学生来了，都是些在学园内知名的学生。</p>
-    <p>令人意外的是居然还有梅赛德斯的妹妹莫尼卡和马吉特。</p>
+    <p>令人意外的是居然还有梅赛德斯的妹妹莫尼卡和玛吉特。</p>
     <p>吉林德和菲利克斯还没来。现在在这里可以说是先遣队。</p>
     <p>在村落还没有完全建成的状态下，公主和她的未婚妻不可能来，而是要等到更平静下来再和护卫一起来。</p>
     <p>对于国家来说重要的是，什么时候让吉克林德和菲利克斯走向迷宫攻略。</p>
@@ -53,7 +53,7 @@
     <p>此次，二人表面上共同作为学生这个身份来着,不过，梅赛德斯如果有间隙攻略了迷宫的气满々，汉娜真的身份是公主的警卫。</p>
     <p>和吸血鬼不想被精灵攻略一样，精灵也不希望被吸血鬼攻略。</p>
     <p>所以已经在水面下的战斗开始了。</p>
-    <p>有力的拔出战力、恐吓、暗中工作、贿赂、收购、etc……无论是埃尔菲还是吸血鬼，对于彼此的阵营已经实施了这一行动，双方都装作没注意到的样子，表面上友好地行动。国家哪里都是这样的。</p>
+    <p>有力的拔出战力、恐吓、暗中工作、贿赂、收购、etc……无论是精灵还是吸血鬼，对于彼此的阵营已经实施了这一行动，双方都装作没注意到的样子，表面上友好地行动。国家哪里都是这样的。</p>
     <p>“但是对于梅尔来说，这是个攻略的机会，所以很方便吧？”</p>
     <p>「算了。然后，你知道那个，硬要让我游泳」</p>
     <p>“因为这次最糟糕的案件就是被精灵夺走地牢。那样的话还不如让梅尔过关比较安心”</p>
