--- a/OEBPS/Text/c112.xhtml
+++ b/OEBPS/Text/c112.xhtml
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <h1>112.  第3阶段</h1>
+    <h1>112. 第3阶段</h1>
     <p>穿过传送区域，迈向下一个场地的梅赛德斯看到了漂浮在空中的巨大船只。</p>
     <p>下一次会在那艘船中前进吧。它可以说是精致的构造，是到哪里都渗透了动作游戏的迷宫。</p>
-    <p>梅赛德斯用COPY，雷斯利乘着皮琼斯驶向船只。</p>
+    <p>梅赛德斯用皮可，莱斯利乘着皮琼斯驶向船只。</p>
     <p>不管怎样都无所谓，这只皮琼斯到底想跟到哪里来呢？</p>
     <p>他们平安登上船，一边警戒圈套一边谨慎地前进。</p>
     <p>与空中场景不同，这里有普通的脚手架。</p>
@@ -23,12 +23,12 @@
     <p>但是，同行的另一个人似乎并不这么认为。</p>
     <p>“啊，太好了。下一站是船吗？</p>
     <p>我一直在飞，不能平静下来，这样可以喘口气了”</p>
-    <p>摔跤手兴高采烈地和nokoko走去。</p>
+    <p>莱斯利兴高采烈地和nokoko走去。</p>
     <p>于是，她脚下的地板脱落，倒栽葱式地掉下来。</p>
     <p>“啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊～……”</p>
-    <p>摔跤的声音渐渐远去，不一会儿就听不见了。</p>
+    <p>莱斯利的声音渐渐远去，不一会儿就听不见了。</p>
     <p>看到这一幕后，梅赛德斯回顾了刚刚驶入的船的入口。</p>
-    <p>等了几秒，从传送点重新开始的摔跤选手气喘吁吁地坐了进来。</p>
+    <p>等了几秒，从传送点重新开始的莱斯利气喘吁吁地坐了进来。</p>
     <p>“疏忽大意了……是啊，这里也是迷宫啊。一定有陷阱吧」</p>
     <p>“离传送点很近真是太好了”</p>
     <p>这艘船因为位于离转播点很近的位置，即使陷入圈套也能马上重启可以说是良心。</p>
@@ -37,25 +37,25 @@
     <p>「呼。天才莱斯利小姐不会再犯同样的错误……”</p>
     <p>然后地板掉了。</p>
     <p>“啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊～……”</p>
-    <p>摔跤的声音渐渐远去，不一会儿就听不见了。</p>
+    <p>莱斯利的声音渐渐远去，不一会儿就听不见了。</p>
     <p>看到这一幕后，梅赛德斯回顾了刚刚驶入的船的入口。</p>
-    <p>等了几秒，从转播点重新开始的摔跤选手气喘吁吁地坐了进来。</p>
-    <p>“埃尔菲的格言中有这样一句话……《毛毯·希也捕不到老鼠》……无论多么高手，有时候也会失败”</p>
+    <p>等了几秒，从转播点重新开始的莱斯利气喘吁吁地坐了进来。</p>
+    <p>“精灵的格言中有这样一句话……《毛毯·希也捕不到老鼠》……无论多么高手，有时候也会失败”</p>
     <p>“这样啊”</p>
-    <p>摔跤手挽着胳膊露出得意的样子，难道是想欺骗他吗？</p>
+    <p>莱斯利挽着胳膊露出得意的样子，难道是想欺骗他吗？</p>
     <p>……大概是打算这样吧。</p>
     <p>梅赛德斯决定什么也不说。</p>
-    <p>摔跤运动员什么都没学习吗，再次忍耐和前进。</p>
+    <p>莱斯利什么都没学习吗，再次忍耐和前进。</p>
     <p>于是三次地板脱落，像刚才一样跳跃回避。</p>
     <p>落地后再穿过去，在落地之前跳跃回避，在别的地方着陆了。</p>
-    <p>但是那里也脱落……但是雷斯利也不需要同样的手段。</p>
+    <p>但是那里也脱落……但是莱斯利也不需要同样的手段。</p>
     <p>华丽地踏着步伐，把手放在墙壁上，脸上洋溢着得意的表情。</p>
     <p>「呼。这艘船的圈套已经放弃了”</p>
-    <p>这次墙壁倒塌，摔跤被扔出船外。</p>
+    <p>这次墙壁倒塌，莱斯利被扔出船外。</p>
     <p>“啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊～……”</p>
-    <p>摔跤的声音渐渐远去，不一会儿就听不见了。</p>
+    <p>莱斯利的声音渐渐远去，不一会儿就听不见了。</p>
     <p>看到这一幕后，梅赛德斯回顾了刚刚驶入的船的入口。</p>
-    <p>等了几秒，从传送点重新开始的摔跤选手气喘吁吁地坐了进来。</p>
+    <p>等了几秒，从传送点重新开始的莱斯利气喘吁吁地坐了进来。</p>
     <p>终于眼泪夺眶而出，不禁令人心痛。</p>
     <p>“……对不起。可以先去吗？”</p>
     <p>“明白了”</p>
@@ -66,26 +66,26 @@
     <p>话虽如此，如果一味地警戒着恐怖和恐怖的话，恐怕是无法前进的吧。</p>
     <p>结果只能在大胆和慎重的基础上妥协前进。</p>
     <p>首先，轻轻地踩着地板在过道上行驶。</p>
-    <p>摔跤手踩到的陷阱都是经过一段时间后才发动的，只要不站住就不会掉下去。</p>
+    <p>莱斯利踩到的陷阱都是经过一段时间后才发动的，只要不站住就不会掉下去。</p>
     <p>虽然地板一个接一个地脱落，但梅赛德斯跑得更快，一直跑到通道的尽头。</p>
     <p>然后在尽头停了一下，观察地板是否脱落。</p>
     <p>如果脱下来的话，那个时候马上把哈尔巴德扎到天花板上吊着。</p>
     <p>“……”</p>
     <p>好歹，好象不能拔。</p>
     <p>暂且算是安全的吧。</p>
-    <p>然后向在起点处的摔跤手招手。</p>
+    <p>然后向在起点处的莱斯利招手。</p>
     <p>“呐，原来如此，不要停下来去就行了。好”</p>
     <p>看着梅赛德斯的做法而学习的蕾丝也同样在过道上奔跑。</p>
     <p>从踩到陷阱发动为止的缓冲时间是一秒左右。</p>
     <p>只要有那些，孩子也能跑过去。</p>
-    <p>摔跤和皮琼穿过通道，然后站在梅赛德斯旁边，一脸得意的表情。</p>
+    <p>莱斯利和皮琼穿过通道，然后站在梅赛德斯旁边，一脸得意的表情。</p>
     <p>“什么东西啊”</p>
     <p>虽然掉了三次，什么东西都没有，但梅赛德斯并没有插手。</p>
     <p>也有什么都不说的温柔。</p>
-    <p>但是象约定一样地摔跤站着的地板脱落，抓住瞬间掉下来的手臂救助了。</p>
+    <p>但是象约定一样地莱斯利站着的地板脱落，抓住瞬间掉下来的手臂救助了。</p>
     <p>同样的材料不用做四次。</p>
     <p>“啊，谢谢……”</p>
-    <p>任凭腕力将摔跤拉上去，摔跤选手佩服地看着梅赛德斯的手臂。</p>
+    <p>任凭腕力将莱斯利拉上去，莱斯利佩服地看着梅赛德斯的手臂。</p>
     <p>然后毫不客气地触摸，摸自己的手腕进行比较。</p>
     <p>“什么？”</p>
     <p>“不……吸血鬼果然很有力气啊。</p>
@@ -94,7 +94,7 @@
     <p>一般来说，精灵的寿命很长，擅长魔法，但是身体能力和坚固程度并不是那么好。</p>
     <p>相对的，吸血鬼的身体能力和生命力出色，是更加寿命长而且到魔法操纵这样的高水准的全圆人。</p>
     <p>再加上大多身体不适、营养不足，只要喝点血就能治愈，这种体质比较奇怪，综合能力毫无疑问是法鲁什中首屈一指的。</p>
-    <p>这样的战斗力让雷斯利感到羡慕吧。</p>
+    <p>这样的战斗力让莱斯利感到羡慕吧。</p>
     <p>“这算是种族的差别吧。”</p>
     <p>吸血鬼是身体上的怪物。</p>
     <p>譬如作为梅赛德斯的母亲琉狄亚是一个完全不做战斗的训练的非常普通的女性,不过，那样的她苹果左右也能捏碎。</p>
@@ -106,9 +106,9 @@
     <p>这种差距，就如同人类无论锻炼多大的腕力都无法战胜大猩猩一样。</p>
     <p>“哼哼——！”</p>
     <p>“别那么闹别扭。精灵一定有魔法吧」</p>
-    <p>摔跤声像闹别扭似地叫着，但精灵也绝不亚于吸血鬼。</p>
-    <p>实际上，这两个种族的力量关系是势均力敌的……岂止如此，反而是埃尔菲赢了。</p>
-    <p>这是因为埃尔菲在魔法处理这一点上凌驾于吸血鬼之上。</p>
+    <p>莱斯利声像闹别扭似地叫着，但精灵也绝不亚于吸血鬼。</p>
+    <p>实际上，这两个种族的力量关系是势均力敌的……岂止如此，反而是精灵赢了。</p>
+    <p>这是因为精灵在魔法处理这一点上凌驾于吸血鬼之上。</p>
     <p>但是，当他指出这件事时，蕾丝眼看着变暗了。</p>
     <p>“没什么……就算没有魔法也有能做到的事……”</p>
     <p>梅赛德斯看着这样嘟哝着，转移视线的莱斯利，不由得察觉到了情况。</p>
@@ -121,7 +121,7 @@
     <p>之前世界的人……同类科学至少在能力上远远低于吸血鬼和精灵。</p>
     <p>据说战斗能力很低，如果认真战斗的话连家猫都不如，魔法之类的东西当然不能使用。</p>
     <p>尽管如此，他还是以头脑和手指的灵巧为武器繁荣起来，最后甚至制造出了毁灭自己的炸弹。</p>
-    <p>想起那件事就不能认为摔跤很弱。</p>
+    <p>想起那件事就不能认为莱斯利很弱。</p>
     <p>倒不如相反。她有世界上最强的资质。</p>
     <p>“……哇，你不知道嘛……明明是吸血鬼……”</p>
     <p>莱丝利抱着胳膊转过脸去。</p>
