--- a/OEBPS/Text/c123.xhtml
+++ b/OEBPS/Text/c123.xhtml
@@ -65,7 +65,7 @@
     <p>“那我走了。我交给你了”</p>
     <p>「啊。交给我吧」</p>
     <p>“哇！”</p>
-    <p>和琪琪和克洛打招呼，然后为了不惊醒莱斯利离开了旅馆。</p>
+    <p>和本凯和小黑打招呼，然后为了不惊醒莱斯利离开了旅馆。</p>
     <p>到达地牢后立刻移动到门前的转播地点，然后派出这次的对守护者成员。</p>
     <p>首先，梅赛德斯自己就不用说了，多米尼翁和皮科，还有尤里亚这次使用的脸蛋。</p>
     <p>虽然加入了新加入的多米尼翁和尤里亚是不安的材料，但是考虑到与战场的相性，得出了这两个人最好的结论。</p>
